@@ -1,19 +1,5 @@
 package ti4.commands.game;
 
-import static ti4.helpers.StringHelper.*;
-
-import java.io.File;
-import java.text.NumberFormat;
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.Date;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.concurrent.TimeUnit;
-
-import org.apache.commons.lang3.StringUtils;
-
 import net.dv8tion.jda.api.entities.Guild;
 import net.dv8tion.jda.api.entities.Member;
 import net.dv8tion.jda.api.entities.Role;
@@ -24,28 +10,43 @@ import net.dv8tion.jda.api.entities.channel.concrete.ThreadChannel;
 import net.dv8tion.jda.api.entities.channel.middleman.MessageChannel;
 import net.dv8tion.jda.api.events.interaction.GenericInteractionCreateEvent;
 import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
+import net.dv8tion.jda.api.events.interaction.component.ButtonInteractionEvent;
 import net.dv8tion.jda.api.interactions.commands.OptionMapping;
 import net.dv8tion.jda.api.interactions.commands.OptionType;
 import net.dv8tion.jda.api.interactions.commands.build.OptionData;
+import org.apache.commons.lang3.StringUtils;
 import ti4.AsyncTI4DiscordBot;
+import ti4.commands.special.Rematch;
 import ti4.commands.statistics.GameStatisticFilterer;
 import ti4.commands.statistics.GameStats;
-import ti4.generator.MapGenerator;
+import ti4.generator.MapRenderPipeline;
 import ti4.helpers.ButtonHelper;
 import ti4.helpers.Constants;
 import ti4.helpers.DisplayType;
 import ti4.helpers.Emojis;
 import ti4.helpers.Helper;
 import ti4.helpers.PlayerTitleHelper;
-import ti4.helpers.Storage;
+import ti4.helpers.RepositoryDispatchEvent;
 import ti4.helpers.TIGLHelper;
-import ti4.helpers.WebHelper;
+import ti4.helpers.async.RoundSummaryHelper;
+import ti4.listeners.annotations.ButtonHandler;
 import ti4.map.Game;
 import ti4.map.GameManager;
 import ti4.map.GameSaveLoadManager;
 import ti4.map.Player;
 import ti4.message.BotLogger;
 import ti4.message.MessageHelper;
+
+import java.text.NumberFormat;
+import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.Date;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.concurrent.TimeUnit;
+
+import static ti4.helpers.StringHelper.ordinal;
 
 public class GameEnd extends GameSubcommandData {
 
@@ -81,6 +82,12 @@ public class GameEnd extends GameSubcommandData {
         secondHalfOfGameEnd(event, game, publish, archiveChannels, rematch);
     }
 
+    @ButtonHandler("gameEnd")
+    public static void gameEnd(ButtonInteractionEvent event, Game game) {
+        GameEnd.secondHalfOfGameEnd(event, game, true, true, false);
+        ButtonHelper.deleteMessage(event);
+    }
+
     public static void secondHalfOfGameEnd(GenericInteractionCreateEvent event, Game game, boolean publish, boolean archiveChannels, boolean rematch) {
         String gameName = game.getName();
         List<Role> gameRoles = event.getGuild().getRolesByName(gameName, true);
@@ -102,8 +109,8 @@ public class GameEnd extends GameSubcommandData {
             "This game's channels' permissions have been updated.");
 
         // DELETE THE ROLE
-        if (deleteRole && archiveChannels) {
-            Role gameRole = gameRoles.get(0);
+        if (deleteRole && archiveChannels && !rematch) {
+            Role gameRole = gameRoles.getFirst();
             MessageHelper.sendMessageToChannel(event.getMessageChannel(),
                 "Role deleted: " + gameRole.getName() + " - use `/game ping` to ping all players");
             gameRole.delete().queue();
@@ -111,7 +118,7 @@ public class GameEnd extends GameSubcommandData {
             if (game.isFowMode()) {
                 List<Role> gmRoles = event.getGuild().getRolesByName(game.getName() + " GM", true);
                 if (!gmRoles.isEmpty()) {
-                    gmRoles.get(0).delete().queue();
+                    gmRoles.getFirst().delete().queue();
                 }
             }
         }
@@ -119,10 +126,10 @@ public class GameEnd extends GameSubcommandData {
         gameEndStuff(game, event, publish);
         // MOVE CHANNELS TO IN-LIMBO
         List<Category> limbos = event.getGuild().getCategoriesByName("The in-limbo PBD Archive", true);
-        Category inLimboCategory = limbos.isEmpty() ? null : limbos.get(0);
+        Category inLimboCategory = limbos.isEmpty() ? null : limbos.getFirst();
         TextChannel tableTalkChannel = game.getTableTalkChannel();
         TextChannel actionsChannel = game.getMainGameChannel();
-        if (inLimboCategory != null && archiveChannels) {
+        if (inLimboCategory != null && archiveChannels && !rematch) {
             if (inLimboCategory.getChannels().size() >= 45) { // HANDLE FULL IN-LIMBO
                 cleanUpInLimboCategory(event.getGuild(), 3);
             }
@@ -140,11 +147,10 @@ public class GameEnd extends GameSubcommandData {
         }
 
         //DELETE FOW CHANNELS
-        if (game.isFowMode() && archiveChannels) {
-            Category fogCategory = event.getGuild().getCategoriesByName(game.getName(), true).get(0);
+        if (game.isFowMode() && archiveChannels && !rematch) {
+            Category fogCategory = event.getGuild().getCategoriesByName(game.getName(), true).getFirst();
             if (fogCategory != null) {
-                List<TextChannel> channels = new ArrayList<>();
-                channels.addAll(fogCategory.getTextChannels());
+                List<TextChannel> channels = new ArrayList<>(fogCategory.getTextChannels());
                 //Delay deletion so end of game messages have time to go through
                 for (TextChannel channel : channels) {
                     channel.delete().queueAfter(2, TimeUnit.SECONDS);
@@ -162,7 +168,6 @@ public class GameEnd extends GameSubcommandData {
         if (actionsChannel != null) {
             for (ThreadChannel threadChannel : actionsChannel.getThreadChannels()) {
                 if (threadChannel.getName().contains("Cards Info")) {
-                    continue;
                 } else {
                     threadChannel.getManager().setArchived(true).queue();
                 }
@@ -171,7 +176,7 @@ public class GameEnd extends GameSubcommandData {
 
         // GET BOTHELPER LOUNGE
         List<TextChannel> bothelperLoungeChannels = AsyncTI4DiscordBot.guildPrimary.getTextChannelsByName("staff-lounge", true);
-        TextChannel bothelperLoungeChannel = bothelperLoungeChannels.size() > 0 ? bothelperLoungeChannels.get(0) : null;
+        TextChannel bothelperLoungeChannel = !bothelperLoungeChannels.isEmpty() ? bothelperLoungeChannels.getFirst() : null;
         if (bothelperLoungeChannel != null) {
             // POST GAME END TO BOTHELPER LOUNGE GAME STARTS & ENDS THREAD
             List<ThreadChannel> threadChannels = bothelperLoungeChannel.getThreadChannels();
@@ -183,16 +188,16 @@ public class GameEnd extends GameSubcommandData {
             }
         }
 
-        // send game json file to s3
-        GameSaveLoadManager.saveMapJson(game);
-        File jsonGameFile = Storage.getMapsJSONStorage(game.getName() + ".json");
-        boolean isWon = game.getWinner().isPresent() && game.isHasEnded();
-        if (isWon) {
-            WebHelper.putFile(game.getName(), jsonGameFile);
+        // Archive Game Channels
+        if (tableTalkChannel != null) {
+            new RepositoryDispatchEvent("archive_game_channel", Map.of("channel", tableTalkChannel.getId())).sendEvent();
+        }
+        if (actionsChannel != null) {
+            new RepositoryDispatchEvent("archive_game_channel", Map.of("channel", actionsChannel.getId())).sendEvent();
         }
 
         if (rematch) {
-            ButtonHelper.secondHalfOfRematch(event, game);
+            Rematch.secondHalfOfRematch(event, game);
         }
     }
 
@@ -213,7 +218,7 @@ public class GameEnd extends GameSubcommandData {
         TextChannel summaryChannel = getGameSummaryChannel(game);
         if (!game.isFowMode()) {
             // SEND THE MAP IMAGE
-            MapGenerator.saveImage(game, DisplayType.all, event).thenAccept(fileUpload -> {
+            MapRenderPipeline.render(game, event, DisplayType.all, fileUpload -> {
                 MessageHelper.replyToMessage(event, fileUpload);
                 // CREATE POST
                 if (publish) {
@@ -225,11 +230,10 @@ public class GameEnd extends GameSubcommandData {
                     // INFORM PLAYERS
                     summaryChannel.sendMessage(gameEndText).queue(m -> { // POST INITIAL MESSAGE
                         m.editMessageAttachments(fileUpload).queue(); // ADD MAP FILE TO MESSAGE
-                        m.createThreadChannel(gameName).queueAfter(2, TimeUnit.SECONDS,
-                            t -> {
-                                sendFeedbackMessage(t, game);
-                                sendRoundSummariesToThread(t, game);
-                            });
+                        m.createThreadChannel(gameName).queueAfter(2, TimeUnit.SECONDS, t -> {
+                            sendFeedbackMessage(t, game);
+                            sendRoundSummariesToThread(t, game);
+                        });
                         MessageHelper.sendMessageToChannel(event.getMessageChannel(),
                             "Game summary has been posted in the " + summaryChannel.getAsMention() + " channel: " + m.getJumpUrl());
                     });
@@ -248,33 +252,32 @@ public class GameEnd extends GameSubcommandData {
                 return;
             }
             MessageHelper.sendMessageToChannel(summaryChannel, gameEndText);
-            summaryChannel.createThreadChannel(gameName, true).queue(
-                t -> {
-                    MessageHelper.sendMessageToChannel(t, gameEndText);
-                    sendFeedbackMessage(t, game);
-                    sendRoundSummariesToThread(t, game);
-                });
+            summaryChannel.createThreadChannel(gameName, true).queue(t -> {
+                MessageHelper.sendMessageToChannel(t, gameEndText);
+                sendFeedbackMessage(t, game);
+                sendRoundSummariesToThread(t, game);
+            });
         }
     }
 
     private static void sendRoundSummariesToThread(ThreadChannel t, Game game) {
-        String endOfGameSummary = "";
+        StringBuilder endOfGameSummary = new StringBuilder();
 
         for (int x = 1; x < game.getRound() + 1; x++) {
-            String summary = "";
-            for (Player player : game.getRealPlayers()) {
-                String summaryKey = "endofround" + x + player.getFaction();
+            StringBuilder summary = new StringBuilder();
+            for (Player player : game.getPlayers().values()) {
+                String summaryKey = RoundSummaryHelper.resolveRoundSummaryKey(player, String.valueOf(x));
                 if (!game.getStoredValue(summaryKey).isEmpty()) {
-                    summary += player.getFactionEmoji() + ": " + game.getStoredValue(summaryKey) + "\n";
+                    summary.append(RoundSummaryHelper.resolvePlayerEmoji(player)).append(": ").append(game.getStoredValue(summaryKey)).append("\n");
                 }
             }
             if (!summary.isEmpty()) {
-                summary = "**__Round " + x + " Secret Summary__**\n" + summary;
-                endOfGameSummary = endOfGameSummary + summary;
+                summary.insert(0, "**__Round " + x + " Secret Summary__**\n");
+                endOfGameSummary.append(summary);
             }
         }
         if (!endOfGameSummary.isEmpty()) {
-            MessageHelper.sendMessageToChannel(t, endOfGameSummary);
+            MessageHelper.sendMessageToChannel(t, endOfGameSummary.toString());
         }
     }
 
@@ -285,8 +288,7 @@ public class GameEnd extends GameSubcommandData {
             if (member != null)
                 message.append(member.getAsMention()).append(" ");
         }
-        message.append(
-            "\nPlease provide a summary of the game below. You can also leave anonymous feedback on the bot [here](https://forms.gle/EvoWpRS4xEXqtNRa9)");
+        message.append("\nPlease provide a summary of the game below. You can also leave anonymous feedback on the bot [here](https://forms.gle/EvoWpRS4xEXqtNRa9)");
 
         MessageHelper.sendMessageToChannel(t, message.toString());
     }
@@ -300,7 +302,7 @@ public class GameEnd extends GameSubcommandData {
             Helper.checkThreadLimitAndArchive(AsyncTI4DiscordBot.guildPrimary);
             textChannels = AsyncTI4DiscordBot.guildPrimary.getTextChannelsByName("the-pbd-chronicles", true);
         }
-        return textChannels.isEmpty() ? null : textChannels.get(0);
+        return textChannels.isEmpty() ? null : textChannels.getFirst();
     }
 
     private static void appendUserName(StringBuilder sb, Player player, GenericInteractionCreateEvent event) {
@@ -373,10 +375,10 @@ public class GameEnd extends GameSubcommandData {
                 double winningPathPercent = winningPathCount / (double) gamesWithWinnerCount;
                 String winningPathCommonality = getWinningPathCommonality(winningPathCounts, winningPathCount);
                 sb.append("Out of ").append(gamesWithWinnerCount).append(" similar games (").append(game.getVp()).append("VP, ")
-                    .append(playerCount).append("P)")
-                    .append(", this path has been seen ")
-                    .append(winningPathCount - 1)
-                    .append(" times before. It's the ").append(winningPathCommonality).append(" most common path (out of " + winningPathCounts.size() + " paths) at ")
+                        .append(playerCount).append("P)")
+                        .append(", this path has been seen ")
+                        .append(winningPathCount - 1)
+                        .append(" times before. It's the ").append(winningPathCommonality).append(" most common path (out of ").append(winningPathCounts.size()).append(" paths) at ")
                     .append(formatPercent(winningPathPercent)).append(" of games.").append("\n");
                 if (winningPathCount == 1) {
                     sb.append("🥳__**An async first! May your victory live on for all to see!**__🥳").append("\n");
@@ -442,7 +444,7 @@ public class GameEnd extends GameSubcommandData {
     }
 
     public static void cleanUpInLimboCategory(Guild guild, int channelCountToDelete) {
-        Category inLimboCategory = guild.getCategoriesByName("The in-limbo PBD Archive", true).get(0);
+        Category inLimboCategory = guild.getCategoriesByName("The in-limbo PBD Archive", true).getFirst();
         if (inLimboCategory == null) {
             BotLogger.log(
                 "`GameEnd.cleanUpInLimboCategory`\nA clean up of in-limbo was attempted but could not find the **The in-limbo PBD Archive** category on server: "
