@@ -9,6 +9,7 @@ import net.dv8tion.jda.api.entities.Guild;
 import net.dv8tion.jda.api.entities.Member;
 import net.dv8tion.jda.api.entities.Role;
 import net.dv8tion.jda.api.entities.User;
+import net.dv8tion.jda.api.entities.channel.concrete.ThreadChannel;
 import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
 import net.dv8tion.jda.api.interactions.commands.OptionMapping;
 import net.dv8tion.jda.api.interactions.commands.OptionType;
@@ -21,6 +22,7 @@ import ti4.map.Game;
 import ti4.map.GameManager;
 import ti4.map.GameSaveLoadManager;
 import ti4.map.Player;
+import ti4.message.BotLogger;
 import ti4.message.MessageHelper;
 
 public class Replace extends GameSubcommandData {
@@ -89,18 +91,24 @@ public class Replace extends GameSubcommandData {
         Member removedMember = guild.getMemberById(removedPlayer.getUserID());
         List<Role> roles = guild.getRolesByName(game.getName(), true);
         if (removedMember != null && roles.size() == 1) {
-            guild.removeRoleFromMember(removedMember, roles.get(0)).queue();
+            guild.removeRoleFromMember(removedMember, roles.getFirst()).queue();
         }
 
         //ADD ROLE
         Member addedMember = guild.getMemberById(addedUser.getId());
+        if (addedMember == null) return;
+
         if (roles.size() == 1) {
-            guild.addRoleToMember(addedMember, roles.get(0)).queue();
+            guild.addRoleToMember(addedMember, roles.getFirst()).queue();
         }
 
         String message;
-        if (players.stream().noneMatch(player -> player.getUserID().equals(removedPlayer.getUserID())) || players.stream().anyMatch(player -> player.getUserID().equals(addedUser.getId()))) {
-            MessageHelper.replyToMessage(event, "Specify player that is in game to be removed and player that is not in game to be replacement");
+        if (players.stream().noneMatch(player -> player.getUserID().equals(removedPlayer.getUserID()))) {
+            MessageHelper.replyToMessage(event, "Specify player that is in game to be removed");
+            return;
+        }
+        if (players.stream().anyMatch(player -> player.getUserID().equals(addedUser.getId()))) {
+            MessageHelper.replyToMessage(event, "Specify player that is **__not__** in the game to be the replacement");
             return;
         }
 
@@ -120,8 +128,8 @@ public class Replace extends GameSubcommandData {
         player.setUserID(addedUser.getId());
         player.setTotalTurnTime(0);
         player.setNumberTurns(0);
-        if (removedPlayer.getUserID().equals(game.getSpeaker())) {
-            game.setSpeaker(addedUser.getId());
+        if (removedPlayer.getUserID().equals(game.getSpeakerUserID())) {
+            game.setSpeakerUserID(addedUser.getId());
         }
         if (removedPlayer.getUserID().equals(game.getActivePlayerID())) {
             // do not update stats for this action
@@ -129,13 +137,14 @@ public class Replace extends GameSubcommandData {
         }
 
         Helper.fixGameChannelPermissions(event.getGuild(), game);
-        if (game.getBotMapUpdatesThread() != null) {
-            game.getBotMapUpdatesThread().addThreadMember(addedMember).queueAfter(5, TimeUnit.SECONDS);
+        ThreadChannel mapThread = game.getBotMapUpdatesThread();
+        if (mapThread != null && !mapThread.isLocked()) {
+            mapThread.getManager().setArchived(false).queue(success -> mapThread.addThreadMember(addedMember).queueAfter(5, TimeUnit.SECONDS), BotLogger::catchRestError);
         }
         game.getMiltyDraftManager().replacePlayer(game, removedPlayerID, player.getUserID());
 
         if (speaker) {
-            game.setSpeaker(player.getUserID());
+            game.setSpeakerUserID(player.getUserID());
         }
         GameSaveLoadManager.saveMap(game, event);
         GameSaveLoadManager.reload(game);
