@@ -3,12 +3,10 @@ package ti4.commands.tech;
 import java.util.ArrayList;
 import java.util.List;
 
-import org.apache.commons.lang3.StringUtils;
-
-import net.dv8tion.jda.api.entities.emoji.Emoji;
 import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
 import net.dv8tion.jda.api.events.interaction.component.ButtonInteractionEvent;
 import net.dv8tion.jda.api.interactions.components.buttons.Button;
+import org.apache.commons.lang3.StringUtils;
 import ti4.buttons.Buttons;
 import ti4.commands.leaders.CommanderUnlockCheck;
 import ti4.commands.player.TurnStart;
@@ -54,7 +52,7 @@ public class GetTechButton extends TechSubcommandData {
             return;
         }
         TechnologyModel techM = Mapper.getTech(techID);
-        StringBuilder message = new StringBuilder(ident).append(" Acquired The Tech ")
+        StringBuilder message = new StringBuilder(ident).append(" acquired the technology: ")
             .append(techM.getRepresentation(false));
 
         if (techM.getRequirements().isPresent() && techM.getRequirements().get().length() > 1) {
@@ -66,7 +64,7 @@ public class GetTechButton extends TechSubcommandData {
                 List<Button> buttons = new ArrayList<>();
                 Button mirvedaButton = Buttons.gray("exhaustAgent_mirvedaagent_" + player.getFaction(), "Use Mirveda Agent", Emojis.mirveda);
                 buttons.add(mirvedaButton);
-                MessageHelper.sendMessageToChannelWithButtons(player.getCardsInfoThread(), player.getRepresentation(true, true)
+                MessageHelper.sendMessageToChannelWithButtons(player.getCardsInfoThread(), player.getRepresentationUnfogged()
                     + " you may use " + (player.hasUnexhaustedLeader("yssarilagent") ? "Clever Clever " : "") + "Logic Machina, the Mirveda"
                     + (player.hasUnexhaustedLeader("yssarilagent") ? "/Yssaril" : "") + " agent, to spend 1 CC and research a tech of the same color as a prerequisite of the tech you just got.",
                     buttons);
@@ -75,14 +73,14 @@ public class GetTechButton extends TechSubcommandData {
                 && "action".equalsIgnoreCase(game.getPhaseOfGame())) {
                 String msg = player.getRepresentation()
                     + " due to your obsessive designs ability, you may use your space dock at home PRODUCTION ability to build units of the type you just upgraded, reducing the total cost by 2.";
-                String generalMsg = ButtonHelper.getIdentOrColor(player, game)
+                String generalMsg = player.getFactionEmojiOrColor()
                     + " has an opportunity to use their obsessive designs ability to build " + techM.getName()
                     + " at home";
                 List<Button> buttons;
                 Tile tile = game.getTile(AliasHandler.resolveTile(player.getFaction()));
                 if (player.hasAbility("mobile_command")
-                    && ButtonHelper.getTilesOfPlayersSpecificUnits(game, player, UnitType.Flagship).size() > 0) {
-                    tile = ButtonHelper.getTilesOfPlayersSpecificUnits(game, player, UnitType.Flagship).get(0);
+                    && !ButtonHelper.getTilesOfPlayersSpecificUnits(game, player, UnitType.Flagship).isEmpty()) {
+                    tile = ButtonHelper.getTilesOfPlayersSpecificUnits(game, player, UnitType.Flagship).getFirst();
                 }
                 if (tile == null) {
                     tile = player.getHomeSystemTile();
@@ -104,15 +102,15 @@ public class GetTechButton extends TechSubcommandData {
                 MessageHelper.sendMessageToChannel(player.getCorrectChannel(), generalMsg);
                 MessageHelper.sendMessageToChannel(player.getCorrectChannel(), message2);
                 MessageHelper.sendMessageToChannelWithButtons(player.getCardsInfoThread(), "Produce Units", buttons);
-
             }
         }
+
         if (player.hasUnexhaustedLeader("zealotsagent")) {
             List<Button> buttons = new ArrayList<>();
-            Button hacanButton = Buttons.gray("exhaustAgent_zealotsagent_" + player.getFaction(), "Use Zealots Agent", Emojis.zealots);
-            buttons.add(hacanButton);
+            Button zealotsButton = Buttons.gray("exhaustAgent_zealotsagent_" + player.getFaction(), "Use Zealots Agent", Emojis.zealots);
+            buttons.add(zealotsButton);
             MessageHelper.sendMessageToChannelWithButtons(player.getCardsInfoThread(),
-                player.getRepresentation(true, true)
+                player.getRepresentationUnfogged()
                     + " you may use " + (player.hasUnexhaustedLeader("yssarilagent") ? "Clever Clever " : "") + "Priestess Tuh, the Rhodun"
                     + (player.hasUnexhaustedLeader("yssarilagent") ? "/Yssaril" : "") + " agent, to produce 1 ship at home or in a system where you have a tech skip planet.",
                 buttons);
@@ -127,7 +125,7 @@ public class GetTechButton extends TechSubcommandData {
             && game.getActivePlayerID().equalsIgnoreCase(player.getUserID()) && !player.getSCs().contains(7)) {
             if (!game.isFowMode()) {
                 try {
-                    if (game.getLatestTransactionMsg() != null && !"".equals(game.getLatestTransactionMsg())) {
+                    if (game.getLatestTransactionMsg() != null && !game.getLatestTransactionMsg().isEmpty()) {
                         game.getMainGameChannel().deleteMessageById(game.getLatestTransactionMsg()).queue();
                         game.setLatestTransactionMsg("");
                     }
@@ -135,7 +133,7 @@ public class GetTechButton extends TechSubcommandData {
                     // Block of code to handle errors
                 }
             }
-            String text = "" + player.getRepresentation(true, true) + " UP NEXT";
+            String text = player.getRepresentationUnfogged() + " UP NEXT";
             String buttonText = "Use buttons to do your turn. ";
             if (game.getName().equalsIgnoreCase("pbd1000") || game.getName().equalsIgnoreCase("pbd100two")) {
                 buttonText = buttonText + "Your SC number is #" + player.getSCs().toArray()[0];
@@ -172,12 +170,9 @@ public class GetTechButton extends TechSubcommandData {
         }
         if (player.hasUnit("augers_mech") && ButtonHelper.getNumberOfUnitsOnTheBoard(game, player, "mech") < 4) {
             MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
-                player.getFactionEmoji()
-                    + " has the opportunity to deploy an Augur mech on a legendary planet or planet with a tech skip");
-            String message2 = player.getRepresentation(true, true)
-                + " Use buttons to drop 1 mech on a legendary planet or planet with a tech skip";
-            List<Button> buttons2 = new ArrayList<>(
-                Helper.getPlanetPlaceUnitButtons(player, game, "mech", "placeOneNDone_skipbuild"));
+                player.getFactionEmoji() + " has the opportunity to deploy an Augur mech on a legendary planet or planet with a tech skip");
+            String message2 = player.getRepresentationUnfogged() + " Use buttons to drop 1 mech on a legendary planet or planet with a tech skip";
+            List<Button> buttons2 = new ArrayList<>(Helper.getPlanetPlaceUnitButtons(player, game, "mech", "placeOneNDone_skipbuild"));
             MessageHelper.sendMessageToChannelWithButtons(player.getCardsInfoThread(), message2, buttons2);
         }
 
@@ -189,46 +184,46 @@ public class GetTechButton extends TechSubcommandData {
             || !game.getStoredValue("TechSummaryRound" + game.getRound()).isEmpty() || game.isHomebrewSCMode()) {
             return;
         }
-        String msg = "**__Tech Summary For Round " + game.getRound() + "__**\n";
+        StringBuilder msg = new StringBuilder("**__Tech Summary For Round " + game.getRound() + "__**\n");
         for (Player player : game.getRealPlayers()) {
             if (!player.hasFollowedSC(7)) {
                 return;
             }
             String key = "TechForRound" + game.getRound() + player.getFaction();
-            msg = msg + player.getFactionEmoji() + ":";
+            msg.append(player.getFactionEmoji()).append(":");
             String key2 = "RAForRound" + game.getRound() + player.getFaction();
             if (!game.getStoredValue(key2).isEmpty()) {
-                msg += "(From RA: ";
+                msg.append("(From RA: ");
                 if (game.getStoredValue(key2).contains(".")) {
                     for (String tech : game.getStoredValue(key2).split("\\.")) {
-                        msg += " " + Mapper.getTech(tech).getNameRepresentation();
+                        msg.append(" ").append(Mapper.getTech(tech).getNameRepresentation());
                     }
 
                 } else {
-                    msg += " " + Mapper.getTech(game.getStoredValue(key2)).getNameRepresentation();
+                    msg.append(" ").append(Mapper.getTech(game.getStoredValue(key2)).getNameRepresentation());
                 }
-                msg += ")";
+                msg.append(")");
             }
             if (!game.getStoredValue(key).isEmpty()) {
                 if (game.getStoredValue(key).contains(".")) {
                     String tech1 = StringUtils.substringBefore(game.getStoredValue(key), ".");
                     String tech2 = StringUtils.substringAfter(game.getStoredValue(key), ".");
-                    msg += " " + Mapper.getTech(tech1).getNameRepresentation();
+                    msg.append(" ").append(Mapper.getTech(tech1).getNameRepresentation());
                     for (String tech2Plus : tech2.split("\\.")) {
-                        msg += "and " + Mapper.getTech(tech2Plus).getNameRepresentation();
+                        msg.append("and ").append(Mapper.getTech(tech2Plus).getNameRepresentation());
                     }
 
                 } else {
-                    msg += " " + Mapper.getTech(game.getStoredValue(key)).getNameRepresentation();
+                    msg.append(" ").append(Mapper.getTech(game.getStoredValue(key)).getNameRepresentation());
                 }
-                msg += "\n";
+                msg.append("\n");
             } else {
-                msg += " Did not follow for tech\n";
+                msg.append(" Did not follow for tech\n");
             }
         }
         String key2 = "TechForRound" + game.getRound() + "Counter";
         if (game.getStoredValue(key2).equalsIgnoreCase("0")) {
-            MessageHelper.sendMessageToChannel(game.getTableTalkChannel(), msg);
+            MessageHelper.sendMessageToChannel(game.getTableTalkChannel(), msg.toString());
             game.setStoredValue("TechSummaryRound" + game.getRound(), "yes");
         } else {
             if (game.getStoredValue(key2).isEmpty()) {
@@ -246,7 +241,7 @@ public class GetTechButton extends TechSubcommandData {
      * @param payWith Possible values: {@code ["res", "inf"]}
      */
     public static void payForTech(Game game, Player player, ButtonInteractionEvent event, String tech, final String payWith) {
-        String trueIdentity = player.getRepresentation(true, true);
+        String trueIdentity = player.getRepresentationUnfogged();
         String message2 = trueIdentity + " Click the names of the planets you wish to exhaust. ";
         String payType = payWith != null ? payWith : "res";
         if (!payType.equals("res") && !payType.equals("inf")) {
@@ -265,26 +260,22 @@ public class GetTechButton extends TechSubcommandData {
         if (!techM.isUnitUpgrade() && player.hasAbility("iconoclasm")) {
 
             for (int x = 1; x < player.getCrf() + 1; x++) {
-                Button transact = Buttons.blue("purge_Frags_CRF_" + x,
-                    "Purge Cultural Fragments (" + x + ")");
+                Button transact = Buttons.blue("purge_Frags_CRF_" + x, "Purge Cultural Fragments (" + x + ")", Emojis.CFrag);
                 buttons.add(transact);
             }
 
             for (int x = 1; (x < player.getIrf() + 1 && x < 4); x++) {
-                Button transact = Buttons.green("purge_Frags_IRF_" + x,
-                    "Purge Industrial Fragments (" + x + ")");
+                Button transact = Buttons.green("purge_Frags_IRF_" + x, "Purge Industrial Fragments (" + x + ")", Emojis.IFrag);
                 buttons.add(transact);
             }
 
             for (int x = 1; (x < player.getHrf() + 1 && x < 4); x++) {
-                Button transact = Buttons.red("purge_Frags_HRF_" + x,
-                    "Purge Hazardous Fragments (" + x + ")");
+                Button transact = Buttons.red("purge_Frags_HRF_" + x, "Purge Hazardous Fragments (" + x + ")", Emojis.HFrag);
                 buttons.add(transact);
             }
 
             for (int x = 1; x < player.getUrf() + 1; x++) {
-                Button transact = Buttons.gray("purge_Frags_URF_" + x,
-                    "Purge Frontier Fragments (" + x + ")");
+                Button transact = Buttons.gray("purge_Frags_URF_" + x, "Purge Frontier Fragments (" + x + ")", Emojis.UFrag);
                 buttons.add(transact);
             }
 
@@ -300,21 +291,15 @@ public class GetTechButton extends TechSubcommandData {
             buttons.add(pT2);
         }
         if (player.hasExternalAccessToLeader("jolnaragent") || player.hasUnexhaustedLeader("jolnaragent")) {
-            Button pT2 = Buttons.gray("exhaustAgent_jolnaragent",
-                "Use Jol-Nar Agent")
-                .withEmoji(Emoji.fromFormatted(Emojis.Jolnar));
+            Button pT2 = Buttons.gray("exhaustAgent_jolnaragent", "Use Jol-Nar Agent", Emojis.Jolnar);
             buttons.add(pT2);
         }
         if (player.hasUnexhaustedLeader("veldyragent")) {
-            Button winnuButton = Button
-                .danger("exhaustAgent_veldyragent_" + player.getFaction(),
-                    "Use Veldyr Agent")
-                .withEmoji(Emoji.fromFormatted(Emojis.veldyr));
+            Button winnuButton = Buttons.red("exhaustAgent_veldyragent_" + player.getFaction(), "Use Veldyr Agent", Emojis.veldyr);
             buttons.add(winnuButton);
         }
         if (game.playerHasLeaderUnlockedOrAlliance(player, "yincommander")) {
-            Button pT2 = Buttons.gray("yinCommanderStep1_", "Remove infantry via Yin Commander")
-                .withEmoji(Emoji.fromFormatted(Emojis.Yin));
+            Button pT2 = Buttons.gray("yinCommanderStep1_", "Remove infantry via Yin Commander", Emojis.Yin);
             buttons.add(pT2);
         }
         Button doneExhausting = Buttons.red("deleteButtons_technology", "Done Exhausting Planets");
