@@ -1,12 +1,5 @@
 package ti4.helpers;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.concurrent.ThreadLocalRandom;
-
 import net.dv8tion.jda.api.entities.channel.middleman.MessageChannel;
 import net.dv8tion.jda.api.entities.emoji.Emoji;
 import net.dv8tion.jda.api.entities.emoji.EmojiUnion;
@@ -30,6 +23,7 @@ import ti4.generator.Mapper;
 import ti4.helpers.DiceHelper.Die;
 import ti4.helpers.Units.UnitKey;
 import ti4.helpers.Units.UnitType;
+import ti4.listeners.annotations.ButtonHandler;
 import ti4.map.Game;
 import ti4.map.Planet;
 import ti4.map.Player;
@@ -40,6 +34,13 @@ import ti4.model.ActionCardModel;
 import ti4.model.ExploreModel;
 import ti4.model.TechnologyModel;
 import ti4.model.UnitModel;
+
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.concurrent.ThreadLocalRandom;
 
 public class ButtonHelperActionCards {
 
@@ -198,29 +199,29 @@ public class ButtonHelperActionCards {
         return buttons;
     }
 
-    public static void resolveScuttleStart(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("startToScuttleAUnit_")
+    public static void resolveScuttleStart(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         int tgAlready = Integer.parseInt(buttonID.split("_")[1]);
         List<Button> buttons = getTilesToScuttle(player, game, event, tgAlready);
         MessageHelper.sendMessageToChannelWithButtons(event.getChannel(),
-            player.getRepresentation(true, true) + " Use buttons to select a system to Scuttle in", buttons);
+            player.getRepresentationUnfogged() + " Use buttons to select a system to Scuttle in", buttons);
         ButtonHelper.deleteMessage(event);
     }
 
+    @ButtonHandler("startToLuckyShotAUnit_")
     public static void resolveLuckyShotStart(Player player, Game game, ButtonInteractionEvent event) {
-
         List<Button> buttons = getTilesToLuckyShot(player, game, event);
-        if (buttons.size() == 0) {
-            MessageHelper.sendMessageToChannel(event.getChannel(), player.getRepresentation(true, true)
+        if (buttons.isEmpty()) {
+            MessageHelper.sendMessageToChannel(event.getChannel(), player.getRepresentationUnfogged()
                 + " no systems to Lucky Shot in found. Remember you can't Lucky Shot yourself. Report bug if in error. If not an error, please take a different action");
         }
         MessageHelper.sendMessageToChannelWithButtons(event.getChannel(),
-            player.getRepresentation(true, true) + " Use buttons to select system to Lucky Shot in", buttons);
+            player.getRepresentationUnfogged() + " Use buttons to select system to Lucky Shot in", buttons);
         ButtonHelper.deleteMessage(event);
     }
 
-    public static void resolveLuckyShotRemoval(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("luckyShotOn_")
+    public static void resolveLuckyShotRemoval(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         String pos = buttonID.split("_")[1];
         String unit = buttonID.split("_")[2];
         String color = buttonID.split("_")[3];
@@ -234,7 +235,7 @@ public class ButtonHelperActionCards {
         UnitKey unitKey = Mapper.getUnitKey(AliasHandler.resolveUnit(unit), p2.getColor());
         new RemoveUnits().removeStuff(event, tile, 1, "space", unitKey, p2.getColor(), damaged, game);
         String msg = (damaged ? "A damaged " : "") + Emojis.getEmojiFromDiscord(unit.toLowerCase()) + " owned by "
-            + ButtonHelper.getIdentOrColor(p2, game) + " in tile " + tile.getRepresentationForButtons(game, player)
+            + p2.getFactionEmojiOrColor() + " in tile " + tile.getRepresentationForButtons(game, player)
             + " was removed via the Lucky Shot AC";
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(), msg);
         if (game.isFowMode()) {
@@ -243,8 +244,8 @@ public class ButtonHelperActionCards {
         ButtonHelper.deleteMessage(event);
     }
 
-    public static void resolveScuttleEnd(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("endScuttle_")
+    public static void resolveScuttleEnd(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         int tgAlready = Integer.parseInt(buttonID.split("_")[1]);
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
             player.getFactionEmoji() + " TGs increased by " + tgAlready + " (" + player.getTg() + "->"
@@ -255,29 +256,29 @@ public class ButtonHelperActionCards {
         ButtonHelper.deleteMessage(event);
     }
 
-    public static void resolveScuttleTileSelection(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("scuttleIn_")
+    public static void resolveScuttleTileSelection(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         String pos = buttonID.split("_")[1];
         Tile tile = game.getTileByPosition(pos);
         int tgAlready = Integer.parseInt(buttonID.split("_")[2]);
         List<Button> buttons = getUnitsToScuttle(player, game, event, tile, tgAlready);
         MessageHelper.sendMessageToChannelWithButtons(event.getChannel(),
-            player.getRepresentation(true, true) + " Use buttons to select which unit to Scuttle", buttons);
+            player.getRepresentationUnfogged() + " Use buttons to select which unit to Scuttle", buttons);
         ButtonHelper.deleteMessage(event);
     }
 
-    public static void resolveLuckyShotTileSelection(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("luckyShotIn_")
+    public static void resolveLuckyShotTileSelection(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         String pos = buttonID.split("_")[1];
         Tile tile = game.getTileByPosition(pos);
         List<Button> buttons = getUnitsToLuckyShot(player, game, event, tile);
         MessageHelper.sendMessageToChannelWithButtons(event.getChannel(),
-            player.getRepresentation(true, true) + " Use buttons to select which unit to Lucky Shot", buttons);
+            player.getRepresentationUnfogged() + " Use buttons to select which unit to Lucky Shot", buttons);
         ButtonHelper.deleteMessage(event);
     }
 
-    public static void resolveScuttleRemoval(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("scuttleOn_")
+    public static void resolveScuttleRemoval(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         String pos = buttonID.split("_")[1];
         String unit = buttonID.split("_")[2];
         int tgAlready = Integer.parseInt(buttonID.split("_")[3]);
@@ -296,7 +297,7 @@ public class ButtonHelperActionCards {
             + player.getFactionEmoji();
 
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(), msg);
-        UnitModel removedUnit = player.getUnitsByAsyncID(unitKey.asyncID()).get(0);
+        UnitModel removedUnit = player.getUnitsByAsyncID(unitKey.asyncID()).getFirst();
         if (tgAlready > 0) {
             tgAlready = tgAlready + (int) removedUnit.getCost();
             MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
@@ -310,12 +311,13 @@ public class ButtonHelperActionCards {
             buttons.add(Buttons.green("startToScuttleAUnit_" + tgAlready, "Scuttle another Unit"));
             buttons.add(Buttons.red("endScuttle_" + tgAlready, "End Scuttle"));
             MessageHelper.sendMessageToChannelWithButtons(event.getChannel(),
-                player.getRepresentation(true, true) + " Use buttons to Scuttle another unit or end Scuttling.",
+                player.getRepresentationUnfogged() + " Use buttons to Scuttle another unit or end Scuttling.",
                 buttons);
         }
         ButtonHelper.deleteMessage(event);
     }
 
+    @ButtonHandler("checkForAllACAssignments")
     public static void checkForAllAssignmentACs(Game game, Player player) {
         checkForAssigningCoup(game, player);
         checkForAssigningPublicDisgrace(game, player);
@@ -323,20 +325,18 @@ public class ButtonHelperActionCards {
         checkForPlayingSummit(game, player);
     }
 
+    @ButtonHandler("resolveCounterStroke")
     public static void resolveCounterStroke(Game game, Player player, ButtonInteractionEvent event) {
-        RemoveCC.removeCC(event, player.getColor(), game.getTileByPosition(game.getActiveSystem()),
-            game);
-        String message = player.getFactionEmoji() + " removed their CC from tile " + game.getActiveSystem()
-            + " using Counterstroke and gained it to their tactic pool";
+        RemoveCC.removeCC(event, player.getColor(), game.getTileByPosition(game.getActiveSystem()), game);
+        String message = player.getFactionEmoji() + " removed their CC from tile " + game.getActiveSystem() + " using Counterstroke and gained it to their tactic pool";
         player.setTacticalCC(player.getTacticalCC() + 1);
         MessageHelper.sendMessageToChannel(event.getChannel(), message);
         ButtonHelper.deleteMessage(event);
     }
 
-    public static void resolveCounterStroke(Game game, Player player, ButtonInteractionEvent event,
-        String buttonID) {
-        RemoveCC.removeCC(event, player.getColor(), game.getTileByPosition(buttonID.split("_")[1]),
-            game);
+    @ButtonHandler("resolveCounterStroke_")
+    public static void resolveCounterStroke(Game game, Player player, ButtonInteractionEvent event, String buttonID) {
+        RemoveCC.removeCC(event, player.getColor(), game.getTileByPosition(buttonID.split("_")[1]), game);
         String message = player.getFactionEmoji() + " removed their CC from tile " + buttonID.split("_")[1]
             + " using Counterstroke and gained it to their tactic pool";
         player.setTacticalCC(player.getTacticalCC() + 1);
@@ -344,6 +344,7 @@ public class ButtonHelperActionCards {
         ButtonHelper.deleteMessage(event);
     }
 
+    @ButtonHandler("resolveSummit")
     public static void resolveSummit(Game game, Player player, ButtonInteractionEvent event) {
         List<Button> buttons = ButtonHelper.getGainCCButtons(player);
         String message2 = player.getRepresentation() + "! Your current CCs are " + player.getCCRepresentation()
@@ -353,19 +354,18 @@ public class ButtonHelperActionCards {
         ButtonHelper.deleteMessage(event);
     }
 
+    @ButtonHandler("resolveWarEffort")
     public static void resolveWarEffort(Game game, Player player, ButtonInteractionEvent event) {
-        List<Button> buttons = new ArrayList<>(
-            Helper.getTileWithShipsPlaceUnitButtons(player, game, "cruiser", "placeOneNDone_skipbuild"));
+        List<Button> buttons = new ArrayList<>(Helper.getTileWithShipsPlaceUnitButtons(player, game, "cruiser", "placeOneNDone_skipbuild"));
         String message = "Use buttons to put 1 cruiser with your ships";
         MessageHelper.sendMessageToChannelWithButtons(event.getChannel(), message, buttons);
         ButtonHelper.deleteMessage(event);
     }
 
+    @ButtonHandler("resolveFreeTrade")
     public static void resolveFreeTrade(Game game, Player player, ButtonInteractionEvent event) {
-        Button convert2CommButton = Buttons.green("convert_2_comms_stay", "Convert 2 Commodities Into TG")
-            .withEmoji(Emoji.fromFormatted(Emojis.Wash));
-        Button get2CommButton = Buttons.blue("gain_2_comms_stay", "Gain 2 Commodities")
-            .withEmoji(Emoji.fromFormatted(Emojis.comm));
+        Button convert2CommButton = Buttons.green("convert_2_comms_stay", "Convert 2 Commodities Into TG", Emojis.Wash);
+        Button get2CommButton = Buttons.blue("gain_2_comms_stay", "Gain 2 Commodities", Emojis.comm);
         List<Button> buttons = List.of(convert2CommButton, get2CommButton,
             Buttons.red("deleteButtons", "Done resolving"));
         String message = "Use buttons to gain or convert commodities as appropriate. You may trade in this window/in between gaining commodities.";
@@ -373,6 +373,7 @@ public class ButtonHelperActionCards {
         ButtonHelper.deleteMessage(event);
     }
 
+    @ButtonHandler("resolvePreparation")
     public static void resolvePreparation(Game game, Player player, ButtonInteractionEvent event) {
         String message = "Use button to draw " + (player.hasAbility("scheming") ? "2 ACs" : "1 AC");
         List<Button> buttons = new ArrayList<>();
@@ -384,13 +385,14 @@ public class ButtonHelperActionCards {
         MessageHelper.sendMessageToChannel(event.getMessageChannel(), message, buttons);
     }
 
+    @ButtonHandler("resolveRally")
     public static void resolveRally(Game game, Player player, ButtonInteractionEvent event) {
         String message = player.getFactionEmoji() + " gained 2 fleet CC (" + player.getFleetCC() + "->"
             + (player.getFleetCC() + 2) + ") using Rally";
         player.setFleetCC(player.getFleetCC() + 2);
         MessageHelper.sendMessageToChannel(event.getChannel(), message);
         ButtonHelper.deleteMessage(event);
-        if (game.getLaws().keySet().contains("regulations") && player.getFleetCC() > 4) {
+        if (game.getLaws().containsKey("regulations") && player.getFleetCC() > 4) {
             MessageHelper.sendMessageToChannel(event.getMessageChannel(), player.getRepresentation() + " reminder that there is Fleet Regulations in place, which is limiting fleet pool to 4");
         }
     }
@@ -412,8 +414,8 @@ public class ButtonHelperActionCards {
         return buttons;
     }
 
-    public static void resolveArcExpButtons(Game game, Player player, String buttonID,
-        ButtonInteractionEvent event, String trueIdentity) {
+    @ButtonHandler("arcExp_")
+    public static void resolveArcExpButtons(Game game, Player player, String buttonID, ButtonInteractionEvent event) {
         String type = buttonID.replace("arcExp_", "");
         StringBuilder sb = new StringBuilder();
         for (int i = 0; i < 3; i++) {
@@ -422,14 +424,14 @@ public class ButtonHelperActionCards {
             sb.append(card.textRepresentation()).append(System.lineSeparator());
             String cardType = card.getResolution();
             if (cardType.equalsIgnoreCase(Constants.FRAGMENT)) {
-                sb.append(trueIdentity).append(" Gained relic fragment\n");
+                sb.append(player.getRepresentationUnfogged()).append(" Gained a relic fragment\n");
                 player.addFragment(cardID);
                 game.purgeExplore(cardID);
             }
         }
         MessageChannel channel = player.getCorrectChannel();
         MessageHelper.sendMessageToChannel(channel, sb.toString());
-        CommanderUnlockCheck.checkPlayer(player, game, "kollecc", event);
+        CommanderUnlockCheck.checkPlayer(player, "kollecc");
 
         ButtonHelper.deleteMessage(event);
     }
@@ -454,16 +456,18 @@ public class ButtonHelperActionCards {
         return buttons;
     }
 
+    @ButtonHandler("divertFunding@")
     public static void divertFunding(Game game, Player player, String buttonID, ButtonInteractionEvent event) {
         String techOut = buttonID.split("@")[1];
         player.removeTech(techOut);
         TechnologyModel techM1 = Mapper.getTech(techOut);
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
             player.getFactionEmoji() + " removed the tech " + techM1.getName());
-        resolveResearch(game, player, buttonID, event);
+        resolveResearch(game, player, event);
         ButtonHelper.deleteMessage(event);
     }
 
+    @ButtonHandler("forwardSupplyBaseStep2_")
     public static void resolveForwardSupplyBaseStep2(Player hacan, Game game, ButtonInteractionEvent event, String buttonID) {
         Player player = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         if (player == null) {
@@ -473,21 +477,19 @@ public class ButtonHelperActionCards {
         int oldTg = player.getTg();
         player.setTg(oldTg + 1);
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
-            ButtonHelper.getIdentOrColor(player, game) + " gained 1TG due to Forward Supply Base (" + oldTg
+            player.getFactionEmojiOrColor() + " gained 1TG due to Forward Supply Base (" + oldTg
                 + "->" + player.getTg() + ")");
         if (game.isFowMode()) {
-            MessageHelper.sendMessageToChannel(hacan.getCorrectChannel(), ButtonHelper.getIdentOrColor(player, game) + " gained 1TG due to Forward Supply Base");
+            MessageHelper.sendMessageToChannel(hacan.getCorrectChannel(), player.getFactionEmojiOrColor() + " gained 1TG due to Forward Supply Base");
         }
         ButtonHelperAbilities.pillageCheck(player, game);
         ButtonHelperAgents.resolveArtunoCheck(player, game, 1);
         ButtonHelper.deleteMessage(event);
     }
 
+    @ButtonHandler("forwardSupplyBase")
     public static void resolveForwardSupplyBaseStep1(Player player, Game game, ButtonInteractionEvent event) {
-        int oldTg = player.getTg();
-        player.setTg(oldTg + 3);
-        MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
-            player.getFactionEmoji() + " gained 3TGs (" + oldTg + "->" + player.getTg() + ")");
+        MessageHelper.sendMessageToChannel(player.getCorrectChannel(), player.getFactionEmoji() + " gained " + Emojis.tg(3) + " (" + player.gainTG(3) + ")");
         ButtonHelperAbilities.pillageCheck(player, game);
         ButtonHelperAgents.resolveArtunoCheck(player, game, 3);
         List<Button> buttons = new ArrayList<>();
@@ -498,28 +500,23 @@ public class ButtonHelperActionCards {
             if (game.isFowMode()) {
                 buttons.add(Buttons.gray("forwardSupplyBaseStep2_" + p2.getFaction(), p2.getColor()));
             } else {
-                Button button = Buttons.gray("forwardSupplyBaseStep2_" + p2.getFaction(), " ");
-                String factionEmojiString = p2.getFactionEmoji();
-                button = button.withEmoji(Emoji.fromFormatted(factionEmojiString));
+                Button button = Buttons.gray("forwardSupplyBaseStep2_" + p2.getFaction(), null, p2.getFactionEmoji());
                 buttons.add(button);
             }
         }
         ButtonHelper.deleteMessage(event);
-        MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " choose who should get 1TG", buttons);
+        MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(), player.getRepresentationUnfogged() + " choose who should get a " + Emojis.tg, buttons);
     }
 
+    @ButtonHandler("resolveReparationsStep1")
     public static void resolveReparationsStep1(Player player, Game game, ButtonInteractionEvent event) {
-
-        String message = player.getRepresentation(true, true) + " Click the names of the planet you wish to ready";
-
+        String message = player.getRepresentationUnfogged() + " Click the names of the planet you wish to ready";
         List<Button> buttons = new ArrayList<>();
         for (String planet : player.getExhaustedPlanets()) {
             buttons.add(Buttons.gray("khraskHeroStep4Ready_" + player.getFaction() + "_" + planet,
                 Helper.getPlanetRepresentation(planet, game)));
         }
-        MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(), message,
-            buttons);
+        MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(), message, buttons);
         buttons = new ArrayList<>();
         for (Player p2 : game.getRealPlayers()) {
             if (p2 == player) {
@@ -535,12 +532,11 @@ public class ButtonHelperActionCards {
             }
         }
         ButtonHelper.deleteMessage(event);
-        MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " tell the bot who took the planet from you", buttons);
+        MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(), player.getRepresentationUnfogged() + " tell the bot who took the planet from you", buttons);
     }
 
-    public static void resolveDiplomaticPressureStep1(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("resolveDiplomaticPressureStep1")
+    public static void resolveDiplomaticPressureStep1(Player player, Game game, ButtonInteractionEvent event) {
         List<Button> buttons = new ArrayList<>();
         for (Player p2 : game.getRealPlayers()) {
             if (p2 == player) {
@@ -557,12 +553,12 @@ public class ButtonHelperActionCards {
         }
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " tell the bot who you want to force to give you a PN",
+            player.getRepresentationUnfogged() + " tell the bot who you want to force to give you a PN",
             buttons);
     }
 
-    public static void resolveReactorMeltdownStep1(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("resolveReactorMeltdownStep1")
+    public static void resolveReactorMeltdownStep1(Player player, Game game, ButtonInteractionEvent event) {
         List<Button> buttons = new ArrayList<>();
         for (Player p2 : game.getRealPlayers()) {
             if (p2 == player) {
@@ -579,39 +575,34 @@ public class ButtonHelperActionCards {
         }
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " tell the bot who you want to play Reactor Meltdown on",
+            player.getRepresentationUnfogged() + " tell the bot who you want to play Reactor Meltdown on",
             buttons);
     }
 
-    public static void resolveFrontlineDeployment(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
-        String message = player.getRepresentation(true, true)
-            + " Click the names of the planet you wish to drop 3 infantry on";
-        List<Button> buttons = new ArrayList<>(
-            Helper.getPlanetPlaceUnitButtons(player, game, "3gf", "placeOneNDone_skipbuild"));
-        MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(), message,
-            buttons);
+    @ButtonHandler("resolveFrontline")
+    public static void resolveFrontlineDeployment(Player player, Game game, ButtonInteractionEvent event) {
+        String message = player.getRepresentationUnfogged() + " Click the names of the planet you wish to drop 3 infantry on";
+        List<Button> buttons = new ArrayList<>(Helper.getPlanetPlaceUnitButtons(player, game, "3gf", "placeOneNDone_skipbuild"));
+        MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(), message, buttons);
         ButtonHelper.deleteMessage(event);
     }
 
-    public static void resolveUnexpectedAction(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
-
+    @ButtonHandler("resolveUnexpected")
+    public static void resolveUnexpectedAction(Player player, Game game, ButtonInteractionEvent event) {
         List<Button> buttons = ButtonHelper.getButtonsToRemoveYourCC(player, game, event, "unexpected");
-        MessageHelper.sendMessageToChannelWithButtons(event.getMessageChannel(), "Use buttons to remove token.",
-            buttons);
+        MessageHelper.sendMessageToChannelWithButtons(event.getMessageChannel(), "Use buttons to remove token.", buttons);
         ButtonHelper.deleteMessage(event);
     }
 
+    @ButtonHandler("resolveDistinguished")
     public static void resolveDistinguished(Player player, Game game, ButtonInteractionEvent event) {
         player.addSpentThing("distinguished_5");
-        MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " added 5 votes to your vote total");
+        MessageHelper.sendMessageToChannel(player.getCorrectChannel(), player.getRepresentationUnfogged() + " added 5 votes to your vote total");
         ButtonHelper.deleteMessage(event);
     }
 
-    public static void resolveUprisingStep1(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("resolveUprisingStep1")
+    public static void resolveUprisingStep1(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         List<Button> buttons = new ArrayList<>();
         for (Player p2 : game.getRealPlayers()) {
             if (p2 == player) {
@@ -628,12 +619,12 @@ public class ButtonHelperActionCards {
         }
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " tell the bot whose planet you want to uprise",
+            player.getRepresentationUnfogged() + " tell the bot whose planet you want to uprise",
             buttons);
     }
 
-    public static void resolveAssRepsStep1(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("resolveAssRepsStep1") // don't skip ass day
+    public static void resolveAssRepsStep1(Player player, Game game, ButtonInteractionEvent event) {
         List<Button> buttons = new ArrayList<>();
         for (Player p2 : game.getRealPlayers()) {
             if (p2 == player) {
@@ -650,11 +641,11 @@ public class ButtonHelperActionCards {
         }
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " tell the bot who you want to assassinate", buttons);
+            player.getRepresentationUnfogged() + " tell the bot who you want to assassinate", buttons);
     }
 
-    public static void resolveSignalJammingStep1(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("resolveSignalJammingStep1")
+    public static void resolveSignalJammingStep1(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         List<Button> buttons = new ArrayList<>();
         for (Player p2 : game.getRealPlayers()) {
             if (p2 == player) {
@@ -671,12 +662,16 @@ public class ButtonHelperActionCards {
         }
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " tell the bot whose CC you want to place down",
+            player.getRepresentationUnfogged() + " tell the bot whose CC you want to place down",
             buttons);
     }
 
-    public static void resolveSeizeArtifactStep1(Player player, Game game, ButtonInteractionEvent event,
-        String kolleccTech) {
+    @ButtonHandler("resolveSeizeArtifactStep1")
+    public static void resolveSeizeArtifactStep1(Player player, Game game, ButtonInteractionEvent event) {
+        resolveSeizeArtifactStep1(player, game, event, "no");
+    }
+
+    public static void resolveSeizeArtifactStep1(Player player, Game game, ButtonInteractionEvent event, String kolleccTech) {
         List<Button> buttons = new ArrayList<>();
         for (Player p2 : game.getRealPlayers()) {
             if (p2 == player || !player.getNeighbouringPlayers().contains(p2)) {
@@ -694,12 +689,12 @@ public class ButtonHelperActionCards {
         }
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " tell the bot which neighbor you are stealing from",
+            player.getRepresentationUnfogged() + " tell the bot which neighbor you are stealing from",
             buttons);
     }
 
-    public static void resolvePlagueStep1(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("resolvePlagueStep1")
+    public static void resolvePlagueStep1(Player player, Game game, ButtonInteractionEvent event) {
         List<Button> buttons = new ArrayList<>();
         for (Player p2 : game.getRealPlayers()) {
             if (p2 == player) {
@@ -716,37 +711,39 @@ public class ButtonHelperActionCards {
         }
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " tell the bot whose planet you want to Plague.",
+            player.getRepresentationUnfogged() + " tell the bot whose planet you want to Plague.",
             buttons);
     }
 
+    @ButtonHandler("resolveEBSStep1_")
     public static void resolveEBSStep1(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         game.setStoredValue("EBSFaction", player.getFaction());
         if (buttonID.contains("_")) {
             ButtonHelper.resolveCombatRoll(player, game, event,
                 "combatRoll_" + buttonID.split("_")[1] + "_space_spacecannonoffence");
         } else {
-            MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Could not find active system. You will need to roll using /roll");
+            MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Could not find active system. You will need to roll using `/roll`");
         }
         game.setStoredValue("EBSFaction", "");
 
         ButtonHelper.deleteMessage(event);
     }
 
+    @ButtonHandler("resolveBlitz_")
     public static void resolveBlitz(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         game.setStoredValue("BlitzFaction", player.getFaction());
         if (buttonID.contains("_")) {
             ButtonHelper.resolveCombatRoll(player, game, event,
                 "combatRoll_" + buttonID.split("_")[1] + "_space_bombardment");
         } else {
-            MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Could not find active system. You will need to roll using /roll");
+            MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Could not find active system. You will need to roll using `/roll`");
         }
         game.setStoredValue("BlitzFaction", "");
         ButtonHelper.deleteMessage(event);
     }
 
-    public static void resolveMicrometeoroidStormStep1(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("resolveMicrometeoroidStormStep1")
+    public static void resolveMicrometeoroidStormStep1(Player player, Game game, ButtonInteractionEvent event) {
         List<Button> buttons = new ArrayList<>();
         for (Player p2 : game.getRealPlayers()) {
             if (p2 == player) {
@@ -763,27 +760,28 @@ public class ButtonHelperActionCards {
         }
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " tell the bot whose fighters you want to hit",
+            player.getRepresentationUnfogged() + " tell the bot whose fighters you want to hit",
             buttons);
     }
 
-    public static void resolveGhostShipStep1(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("resolveGhostShipStep1")
+    public static void resolveGhostShipStep1(Player player, Game game, ButtonInteractionEvent event) {
         List<Button> buttons = getGhostShipButtons(game, player);
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " tell the bot which tile you wish to place a Ghost Ship in",
+            player.getRepresentationUnfogged() + " tell the bot which tile you wish to place a Ghost Ship in",
             buttons);
     }
 
-    public static void resolveProbeStep1(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("resolveProbeStep1")
+    public static void resolveProbeStep1(Player player, Game game, ButtonInteractionEvent event) {
         List<Button> buttons = getProbeButtons(game, player);
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " tell the bot which tile you wish to Exploration Probe", buttons);
+            player.getRepresentationUnfogged() + " tell the bot which tile you wish to Exploration Probe", buttons);
     }
 
+    @ButtonHandler("ghostShipStep2_")
     public static void resolveGhostShipStep2(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Tile tile = game.getTileByPosition(buttonID.split("_")[1]);
         tile = MoveUnits.flipMallice(event, tile, game);
@@ -794,9 +792,10 @@ public class ButtonHelperActionCards {
 
         // If Empyrean Commander is in game check if unlock condition exists
         Player p2 = game.getPlayerFromLeader("empyreancommander");
-        CommanderUnlockCheck.checkPlayer(p2, game, "empyrean", event);
+        CommanderUnlockCheck.checkPlayer(p2, "empyrean");
     }
 
+    @ButtonHandler("probeStep2_")
     public static void resolveProbeStep2(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Tile tile = game.getTileByPosition(buttonID.split("_")[1]);
         new ExploreFrontier().expFront(event, tile, game, player);
@@ -805,6 +804,7 @@ public class ButtonHelperActionCards {
             player.getFactionEmoji() + " explored the frontier token in " + tile.getRepresentation());
     }
 
+    @ButtonHandler("resolveCrippleDefensesStep1")
     public static void resolveCrippleDefensesStep1(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         List<Button> buttons = new ArrayList<>();
         for (Player p2 : game.getRealPlayers()) {
@@ -822,12 +822,12 @@ public class ButtonHelperActionCards {
         }
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " tell the bot whose planet you want to cripple",
+            player.getRepresentationUnfogged() + " tell the bot whose planet you want to cripple",
             buttons);
     }
 
-    public static void resolveInfiltrateStep1(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("resolveInfiltrateStep1")
+    public static void resolveInfiltrateStep1(Player player, Game game, ButtonInteractionEvent event) {
         List<Button> buttons = new ArrayList<>();
         for (Player p2 : game.getRealPlayers()) {
             if (p2 == player) {
@@ -844,11 +844,12 @@ public class ButtonHelperActionCards {
         }
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " tell the bot whose planet you are infiltrating",
+            player.getRepresentationUnfogged() + " tell the bot whose planet you are infiltrating",
             buttons);
     }
 
-    public static void resolveSpyStep1(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
+    @ButtonHandler("resolveSpyStep1")
+    public static void resolveSpyStep1(Player player, Game game, ButtonInteractionEvent event) {
         List<Button> buttons = new ArrayList<>();
         for (Player p2 : game.getRealPlayers()) {
             if (p2 == player) {
@@ -865,11 +866,12 @@ public class ButtonHelperActionCards {
         }
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " tell the bot who to steal a random AC from",
+            player.getRepresentationUnfogged() + " tell the bot who to steal a random AC from",
             buttons);
     }
 
-    public static void resolvePSStep1(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
+    @ButtonHandler("resolvePSStep1")
+    public static void resolvePSStep1(Player player, Game game, ButtonInteractionEvent event) {
         List<Button> buttons = new ArrayList<>();
         game.setStoredValue("politicalStabilityFaction", player.getFaction());
         for (Integer sc : game.getSCList()) {
@@ -882,7 +884,7 @@ public class ButtonHelperActionCards {
                 && !game.isHomebrewSCMode()) {
                 button = Buttons.gray("psStep2_" + sc, label).withEmoji(scEmoji);
             } else {
-                button = Buttons.gray("psStep2_" + sc, "" + sc + " " + label);
+                button = Buttons.gray("psStep2_" + sc, sc + " " + label);
             }
             buttons.add(button);
         }
@@ -891,11 +893,11 @@ public class ButtonHelperActionCards {
         }
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " tell the bot which strategy card(s) you used to have.", buttons);
+            player.getRepresentationUnfogged() + " tell the bot which strategy card(s) you used to have.", buttons);
     }
 
-    public static void resolveImpersonation(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("resolveImpersonation")
+    public static void resolveImpersonation(Player player, Game game, ButtonInteractionEvent event) {
         List<Button> buttons = ButtonHelper.getExhaustButtonsWithTG(game, player, "inf");
         String message = player.getFactionEmoji() + " Drew A Secret Objective.";
         game.drawSecretObjective(player.getUserID());
@@ -906,16 +908,16 @@ public class ButtonHelperActionCards {
         SOInfo.sendSecretObjectiveInfo(game, player, event);
         MessageHelper.sendMessageToChannel(event.getChannel(), message);
         buttons.add(Buttons.red("deleteButtons_spitItOut", "Done Exhausting Planets"));
-        MessageHelper.sendMessageToChannelWithButtons(event.getChannel(),
-            player.getRepresentation() + " Exhaust stuff to pay the 3 influence", buttons);
+        MessageHelper.sendMessageToChannelWithButtons(event.getChannel(), player.getRepresentation() + " Exhaust stuff to pay the 3 influence", buttons);
         ButtonHelper.deleteMessage(event);
     }
 
+    @ButtonHandler("psStep2_")
     public static void resolvePSStep2(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         int scNum = Integer.parseInt(buttonID.split("_")[1]);
         player.addSC(scNum);
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " you retained " + Helper.getSCName(scNum, game) + ".");
+            player.getRepresentationUnfogged() + " you retained " + Helper.getSCName(scNum, game) + ".");
         if (game.getRealPlayers().size() < 5) {
             ButtonHelper.deleteTheOneButton(event);
         } else {
@@ -923,8 +925,8 @@ public class ButtonHelperActionCards {
         }
     }
 
-    public static void resolveInsubStep1(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("resolveInsubStep1")
+    public static void resolveInsubStep1(Player player, Game game, ButtonInteractionEvent event) {
         List<Button> buttons = new ArrayList<>();
         for (Player p2 : game.getRealPlayers()) {
             if (p2 == player || p2.getTacticalCC() < 1) {
@@ -941,13 +943,12 @@ public class ButtonHelperActionCards {
         }
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true)
-                + " tell the bot which player you want to subtract a tactical CC from",
+            player.getRepresentationUnfogged() + " tell the bot which player you want to subtract a tactical CC from",
             buttons);
     }
 
-    public static void resolveUnstableStep1(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("resolveUnstableStep1")
+    public static void resolveUnstableStep1(Player player, Game game, ButtonInteractionEvent event) {
         List<Button> buttons = new ArrayList<>();
         for (Player p2 : game.getRealPlayers()) {
             if (p2 == player) {
@@ -964,11 +965,12 @@ public class ButtonHelperActionCards {
         }
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " tell the bot whose planet you want to Unstable Planet",
+            player.getRepresentationUnfogged() + " tell the bot whose planet you want to Unstable Planet",
             buttons);
     }
 
-    public static void resolveABSStep1(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
+    @ButtonHandler("resolveABSStep1")
+    public static void resolveABSStep1(Player player, Game game, ButtonInteractionEvent event) {
         List<Button> buttons = new ArrayList<>();
         for (Player p2 : game.getRealPlayers()) {
             if (p2 == player) {
@@ -985,12 +987,12 @@ public class ButtonHelperActionCards {
         }
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " tell the bot whose cultural planets you want to exhaust",
+            player.getRepresentationUnfogged() + " tell the bot whose cultural planets you want to exhaust",
             buttons);
     }
 
-    public static void resolveSalvageStep1(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("resolveSalvageStep1")
+    public static void resolveSalvageStep1(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         List<Button> buttons = new ArrayList<>();
         for (Player p2 : game.getRealPlayers()) {
             if (p2 == player) {
@@ -1007,89 +1009,87 @@ public class ButtonHelperActionCards {
         }
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " tell the bot who you're playing Salvage on", buttons);
+            player.getRepresentationUnfogged() + " tell the bot who you're playing Salvage on", buttons);
     }
 
-    public static void resolveInsubStep2(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("insubStep2_")
+    public static void resolveInsubStep2(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         p2.setTacticalCC(p2.getTacticalCC() - 1);
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " you subtracted 1 tactical CC from "
-                + ButtonHelper.getIdentOrColor(p2, game));
+            player.getRepresentationUnfogged() + " you subtracted 1 tactical CC from " + p2.getFactionEmojiOrColor());
         MessageHelper.sendMessageToChannel(p2.getCorrectChannel(),
-            p2.getRepresentation(true, true) + " you lost a tactic CC due to Insubordination ("
-                + (p2.getTacticalCC() + 1) + "->" + p2.getTacticalCC() + ").");
+            p2.getRepresentationUnfogged() + " you lost a tactic CC due to Insubordination (" + (p2.getTacticalCC() + 1) + "->" + p2.getTacticalCC() + ").");
         ButtonHelper.deleteMessage(event);
     }
 
-    public static void resolveDiplomaticPressureStep2(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("diplomaticPressureStep2_")
+    public static void resolveDiplomaticPressureStep2(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         List<Button> stuffToTransButtons = ButtonHelper.getForcedPNSendButtons(game, player, p2);
-        String message = p2.getRepresentation(true, true)
-            + " You have been forced to give a PN. Please select the PN you would like to send";
+        String message = p2.getRepresentationUnfogged() + " You have been forced to give a PN. Please select the PN you would like to send";
         MessageHelper.sendMessageToChannelWithButtons(p2.getCardsInfoThread(), message, stuffToTransButtons);
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " sent buttons to resolve Diplomatic Pressure to "
-                + ButtonHelper.getIdentOrColor(p2, game));
+            player.getRepresentationUnfogged() + " sent buttons to resolve Diplomatic Pressure to " + p2.getFactionEmojiOrColor());
         ButtonHelper.deleteMessage(event);
     }
 
+    @ButtonHandler("absStep2_")
     public static void resolveABSStep2(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         for (String planet : p2.getPlanetsAllianceMode()) {
-            Planet p = (Planet) game.getPlanetsInfo().get(planet);
+            Planet p = game.getPlanetsInfo().get(planet);
             if (p != null && p.getPlanetTypes().contains("cultural")) {
                 p2.exhaustPlanet(planet);
             }
         }
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " you exhausted all the cultural planets of "
-                + ButtonHelper.getIdentOrColor(p2, game));
+            player.getRepresentationUnfogged() + " you exhausted all the cultural planets of " + p2.getFactionEmojiOrColor());
         MessageHelper.sendMessageToChannel(p2.getCorrectChannel(),
-            p2.getRepresentation(true, true) + " your cultural planets were exhausted due to Ancient Burial Sites.");
+            p2.getRepresentationUnfogged() + " your cultural planets were exhausted due to Ancient Burial Sites.");
         ButtonHelper.deleteMessage(event);
     }
 
-    public static void resolveSalvageStep2(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("salvageStep2_")
+    public static void resolveSalvageStep2(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         int comm = p2.getCommodities();
         p2.setCommodities(0);
         player.setTg(player.getTg() + comm);
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " stole the commodities (there were " + comm
-                + " comms to steal) of " + ButtonHelper.getIdentOrColor(player, game));
+            player.getRepresentationUnfogged() + " stole the commodities (there were " + comm
+                + " comms to steal) of " + player.getFactionEmojiOrColor());
         MessageHelper.sendMessageToChannel(p2.getCorrectChannel(),
-            p2.getRepresentation(true, true) + " your commodities were stolen due to Salvage.");
+            p2.getRepresentationUnfogged() + " your commodities were stolen due to Salvage.");
         ButtonHelper.deleteMessage(event);
     }
 
+    @ButtonHandler("spyStep2_")
     public static void resolveSpyStep2(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
-            player.getRepresentation(true, true)
+            player.getRepresentationUnfogged()
                 + " since stealing 1 AC reveals secret info, extra precaution has been taken and a button has been sent to "
-                + ButtonHelper.getIdentOrColor(p2, game)
+                + p2.getFactionEmojiOrColor()
                 + " cards info thread, they may press this button to send a random AC to you.");
         List<Button> buttons = new ArrayList<>();
         buttons.add(Buttons.green("spyStep3_" + player.getFaction(), "Send random AC"));
         MessageHelper.sendMessageToChannelWithButtons(p2.getCardsInfoThread(),
-            p2.getRepresentation(true, true)
+            p2.getRepresentationUnfogged()
                 + " you have been hit by" + (ThreadLocalRandom.current().nextInt(1000) == 0 ? ", you've been struck by" : "") + " an ability which forces you to send a random AC. Press the button to send a random AC to the person.",
             buttons);
         ButtonHelper.deleteMessage(event);
     }
 
+    @ButtonHandler("spyStep3_")
     public static void resolveSpyStep3(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         new SentACRandom().sendRandomACPart2(event, game, player, p2);
         ButtonHelper.deleteMessage(event);
     }
 
-    public static void resolveReparationsStep2(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("reparationsStep2_")
+    public static void resolveReparationsStep2(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         if (p2.getReadiedPlanets().isEmpty()) {
             MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
@@ -1104,26 +1104,26 @@ public class ButtonHelperActionCards {
         }
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " select the planet you want to exhaust", buttons);
+            player.getRepresentationUnfogged() + " select the planet you want to exhaust", buttons);
     }
 
+    @ButtonHandler("resolveInsiderInformation")
     public static void resolveInsiderInformation(Player player, Game game, ButtonInteractionEvent event) {
         NaaluCommander.sendTopAgendaToCardsInfoSkipCovert(game, player);
-        MessageHelper.sendMessageToChannel(event.getChannel(),
-            "Sent top agenda info to " + ButtonHelper.getIdentOrColor(player, game) + " cards info");
+        MessageHelper.sendMessageToChannel(event.getChannel(), "Sent top agenda info to " + player.getFactionEmojiOrColor() + " cards info");
         ButtonHelper.deleteMessage(event);
     }
 
+    @ButtonHandler("resolveEmergencyMeeting")
     public static void resolveEmergencyMeeting(Player player, Game game, ButtonInteractionEvent event) {
         game.shuffleAllAgendasBackIntoDeck();
         DrawAgenda.drawAgenda(event, 3, game, player);
-        MessageHelper.sendMessageToChannel(event.getChannel(),
-            "Sent top 3 agendas to " + ButtonHelper.getIdentOrColor(player, game) + " cards info");
+        MessageHelper.sendMessageToChannel(event.getChannel(), "Sent top 3 agendas to " + player.getFactionEmojiOrColor() + " cards info");
         ButtonHelper.deleteMessage(event);
     }
 
-    public static void resolveSeizeArtifactStep2(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("seizeArtifactStep2_")
+    public static void resolveSeizeArtifactStep2(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         List<Button> buttons = new ArrayList<>();
         List<String> playerFragments = p2.getFragments();
@@ -1147,7 +1147,7 @@ public class ButtonHelperActionCards {
         }
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " select the relic fragment you want to grab", buttons);
+            player.getRepresentationUnfogged() + " select the relic fragment you want to grab", buttons);
         if (buttonID.split("_").length > 2 && buttonID.split("_")[2].contains("yes")) {
             p2.setTg(p2.getTg() + 2);
             ButtonHelperAbilities.pillageCheck(p2, game);
@@ -1157,8 +1157,8 @@ public class ButtonHelperActionCards {
         }
     }
 
-    public static void resolveUprisingStep2(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("uprisingStep2_")
+    public static void resolveUprisingStep2(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         if (p2.getReadiedPlanets().isEmpty()) {
             MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
@@ -1176,25 +1176,25 @@ public class ButtonHelperActionCards {
         }
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " select the planet you want to exhaust", buttons);
+            player.getRepresentationUnfogged() + " select the planet you want to exhaust", buttons);
     }
 
-    public static void resolveAssRepsStep2(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("assRepsStep2_")
+    public static void resolveAssRepsStep2(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
-            ButtonHelper.getIdentOrColor(player, game)
+            player.getFactionEmojiOrColor()
                 + " successfully assassinated all the representatives of "
-                + ButtonHelper.getIdentOrColor(p2, game));
+                + p2.getFactionEmojiOrColor());
         MessageHelper.sendMessageToChannel(p2.getCorrectChannel(),
-            p2.getRepresentation(true, true) + " your representatives got sent to the headsman");
+            p2.getRepresentationUnfogged() + " your representatives got sent to the headsman");
         game.setStoredValue("AssassinatedReps",
             game.getStoredValue("AssassinatedReps") + p2.getFaction());
     }
 
-    public static void resolveSignalJammingStep2(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("signalJammingStep2_")
+    public static void resolveSignalJammingStep2(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         List<Button> buttons = new ArrayList<>();
         for (Tile tile : game.getTileMap().values()) {
@@ -1205,13 +1205,13 @@ public class ButtonHelperActionCards {
         }
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true)
+            player.getRepresentationUnfogged()
                 + " the map is a big place, too big for the bot to offer all the options. Please tell the bot where the origin of the signal jam is coming from, to narrow it down a bit (origin must be a tile where your ships are) \n\n This tile you're selecting is the origin tile, after which you will be offered buttons to select that system or adjacent systems",
             buttons);
     }
 
-    public static void resolveSignalJammingStep3(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("signalJammingStep3_")
+    public static void resolveSignalJammingStep3(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         String pos = buttonID.split("_")[2];
         List<Button> buttons = new ArrayList<>();
@@ -1229,27 +1229,27 @@ public class ButtonHelperActionCards {
         }
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " select the tile you wish to jam.", buttons);
+            player.getRepresentationUnfogged() + " select the tile you wish to jam.", buttons);
     }
 
-    public static void resolveSignalJammingStep4(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("signalJammingStep4_")
+    public static void resolveSignalJammingStep4(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         String pos = buttonID.split("_")[2];
         Tile tile = game.getTileByPosition(pos);
         AddCC.addCC(event, p2.getColor(), tile);
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " you signal jammed the tile: "
+            player.getRepresentationUnfogged() + " you signal jammed the tile: "
                 + tile.getRepresentationForButtons(game, player));
         MessageHelper.sendMessageToChannel(p2.getCorrectChannel(),
-            p2.getRepresentation(true, true) + " you were signal jammed in tile: "
+            p2.getRepresentationUnfogged() + " you were signal jammed in tile: "
                 + tile.getRepresentationForButtons(game, p2));
 
     }
 
-    public static void resolveReactorMeltdownStep2(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("reactorMeltdownStep2_")
+    public static void resolveReactorMeltdownStep2(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         List<Button> buttons = new ArrayList<>();
         for (String planet : p2.getPlanetsAllianceMode()) {
@@ -1279,11 +1279,11 @@ public class ButtonHelperActionCards {
         }
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " select the space dock you want to melt", buttons);
+            player.getRepresentationUnfogged() + " select the space dock you want to melt", buttons);
     }
 
-    public static void resolveReactorMeltdownStep3(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("reactorMeltdownStep3_")
+    public static void resolveReactorMeltdownStep3(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         Tile tile = game.getTileByPosition(buttonID.split("_")[2]);
         String unitHolderName = buttonID.split("_")[3];
@@ -1292,15 +1292,15 @@ public class ButtonHelperActionCards {
         }
         new RemoveUnits().unitParsing(event, p2.getColor(), tile, "sd " + unitHolderName, game);
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " you killed the space dock in " + tile.getRepresentation());
+            player.getRepresentationUnfogged() + " you killed the space dock in " + tile.getRepresentation());
         MessageHelper.sendMessageToChannel(p2.getCorrectChannel(),
-            p2.getRepresentation(true, true) + " your space dock in " + tile.getRepresentation() + " was melted.");
+            p2.getRepresentationUnfogged() + " your space dock in " + tile.getRepresentation() + " was melted.");
         ButtonHelper.checkFleetAndCapacity(p2, game, tile, event);
         ButtonHelper.deleteMessage(event);
     }
 
-    public static void resolvePlagueStep2(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("plagueStep2_")
+    public static void resolvePlagueStep2(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         List<Button> buttons = new ArrayList<>();
         for (String planet : p2.getPlanets()) {
@@ -1309,11 +1309,11 @@ public class ButtonHelperActionCards {
         }
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " select the planet you want to Plague", buttons);
+            player.getRepresentationUnfogged() + " select the planet you want to Plague", buttons);
     }
 
-    public static void resolveMicrometeoroidStormStep2(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("micrometeoroidStormStep2_")
+    public static void resolveMicrometeoroidStormStep2(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         List<Button> buttons = new ArrayList<>();
         for (Tile tile : game.getTileMap().values()) {
@@ -1324,25 +1324,21 @@ public class ButtonHelperActionCards {
         }
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " select the tile you want to hit with the AC", buttons);
+            player.getRepresentationUnfogged() + " select the tile you want to hit with the AC", buttons);
     }
 
-    public static void resolveRefitTroops(Player player, Game game, ButtonInteractionEvent event, String buttonID,
-        String finChecker) {
-        List<Button> buttons = new ArrayList<>(
-            ButtonHelperAbilities.getPlanetPlaceUnitButtonsForMechMitosis(player, game, finChecker));
-        String message = player.getRepresentation(true, true) + " Use buttons to replace 1 infantry with 1 mech";
-        MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(), message,
-            buttons);
-        List<Button> buttons2 = new ArrayList<>(
-            ButtonHelperAbilities.getPlanetPlaceUnitButtonsForMechMitosis(player, game, finChecker));
-        MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(), message,
-            buttons2);
+    @ButtonHandler("resolveRefitTroops")
+    public static void resolveRefitTroops(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
+        List<Button> buttons = new ArrayList<>(ButtonHelperAbilities.getPlanetPlaceUnitButtonsForMechMitosis(player, game));
+        String message = player.getRepresentationUnfogged() + " Use buttons to replace 1 infantry with 1 mech";
+        MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(), message, buttons);
+        List<Button> buttons2 = new ArrayList<>(ButtonHelperAbilities.getPlanetPlaceUnitButtonsForMechMitosis(player, game));
+        MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(), message, buttons2);
         ButtonHelper.deleteMessage(event);
     }
 
-    public static void resolveCrippleStep2(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("crippleStep2_")
+    public static void resolveCrippleStep2(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         List<Button> buttons = new ArrayList<>();
         for (String planet : p2.getPlanets()) {
@@ -1351,11 +1347,11 @@ public class ButtonHelperActionCards {
         }
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " select the planet you want to cripple", buttons);
+            player.getRepresentationUnfogged() + " select the planet you want to cripple", buttons);
     }
 
-    public static void resolveInfiltrateStep2(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("infiltrateStep2_")
+    public static void resolveInfiltrateStep2(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         List<Button> buttons = new ArrayList<>();
         for (String planet : p2.getPlanets()) {
@@ -1364,9 +1360,10 @@ public class ButtonHelperActionCards {
         }
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " select the planet you want to Infiltrate", buttons);
+            player.getRepresentationUnfogged() + " select the planet you want to Infiltrate", buttons);
     }
 
+    @ButtonHandler("resolveUpgrade_")
     public static void resolveUpgrade(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Tile tile = game.getTileByPosition(buttonID.split("_")[1]);
         new RemoveUnits().unitParsing(event, player.getColor(), tile, "cruiser", game);
@@ -1396,7 +1393,7 @@ public class ButtonHelperActionCards {
                     && !game.isHomebrewSCMode()) {
                     button = Buttons.gray("resolvePreassignment_Coup_" + sc, label).withEmoji(scEmoji);
                 } else {
-                    button = Buttons.gray("resolvePreassignment_Coup_" + sc, "" + sc + " " + label);
+                    button = Buttons.gray("resolvePreassignment_Coup_" + sc, sc + " " + label);
                 }
                 scButtons.add(button);
             }
@@ -1488,7 +1485,7 @@ public class ButtonHelperActionCards {
                     && !game.isHomebrewSCMode()) {
                     button = Buttons.gray("resolvePreassignment_Public Disgrace_" + sc, label).withEmoji(scEmoji);
                 } else {
-                    button = Buttons.gray("resolvePreassignment_Public Disgrace_" + sc, "" + sc + " " + label);
+                    button = Buttons.gray("resolvePreassignment_Public Disgrace_" + sc, sc + " " + label);
                 }
                 scButtons.add(button);
             }
@@ -1497,8 +1494,8 @@ public class ButtonHelperActionCards {
         }
     }
 
-    public static void resolveDecoyOperationStep1(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("resolveDecoyOperationStep1_")
+    public static void resolveDecoyOperationStep1(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Tile tile = game.getTileByPosition(buttonID.split("_")[1]);
         List<Button> buttons = new ArrayList<>();
         for (UnitHolder uH : tile.getUnitHolders().values()) {
@@ -1509,22 +1506,21 @@ public class ButtonHelperActionCards {
         }
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true)
-                + " tell the bot which planet you want to resolve decoy operations on",
+            player.getRepresentationUnfogged() + " tell the bot which planet you want to resolve decoy operations on",
             buttons);
     }
 
-    public static void resolveDecoyOperationStep2(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("decoyOperationStep2_")
+    public static void resolveDecoyOperationStep2(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         String planet = buttonID.split("_")[1];
         List<Button> buttons = ButtonHelper.getButtonsForMovingGroundForcesToAPlanet(game, planet, player);
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " use buttons to move up to 2 troops", buttons);
+            player.getRepresentationUnfogged() + " use buttons to move up to 2 troops", buttons);
     }
 
-    public static void resolveEmergencyRepairs(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("resolveEmergencyRepairs_")
+    public static void resolveEmergencyRepairs(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Tile tile = game.getTileByPosition(buttonID.split("_")[1]);
         tile.removeAllUnitDamage(player.getColor());
         ButtonHelper.deleteMessage(event);
@@ -1532,17 +1528,17 @@ public class ButtonHelperActionCards {
             player.getFactionEmoji() + " repaired all damaged units in " + tile.getRepresentation());
     }
 
-    public static void resolveTacticalBombardmentStep1(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("resolveTacticalBombardmentStep1")
+    public static void resolveTacticalBombardmentStep1(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         List<Button> buttons = getTacticalBombardmentButtons(game, player);
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " tell the bot which tile you wish to tactically bombard in",
+            player.getRepresentationUnfogged() + " tell the bot which tile you wish to tactically bombard in",
             buttons);
     }
 
-    public static void resolveTacticalBombardmentStep2(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("tacticalBombardmentStep2_")
+    public static void resolveTacticalBombardmentStep2(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Tile tile = game.getTileByPosition(buttonID.split("_")[1]);
         for (UnitHolder uH : tile.getUnitHolders().values()) {
             if (uH instanceof Planet) {
@@ -1553,8 +1549,7 @@ public class ButtonHelperActionCards {
                     if (p2.getPlanets().contains(uH.getName())) {
                         p2.exhaustPlanet(uH.getName());
                         MessageHelper.sendMessageToChannel(p2.getCorrectChannel(),
-                            p2.getRepresentation() + " Your planets in " + tile.getRepresentation()
-                                + " were exhausted");
+                            p2.getRepresentation() + " Your planets in " + tile.getRepresentation() + " were exhausted");
                     }
                 }
             }
@@ -1564,8 +1559,8 @@ public class ButtonHelperActionCards {
             player.getFactionEmoji() + " exhausted all enemy planets in " + tile.getRepresentation());
     }
 
-    public static void resolveUnstableStep2(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("unstableStep2_")
+    public static void resolveUnstableStep2(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         List<Button> buttons = new ArrayList<>();
         for (String planet : p2.getPlanets()) {
@@ -1576,11 +1571,11 @@ public class ButtonHelperActionCards {
         }
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " select the planet you want to exhaust", buttons);
+            player.getRepresentationUnfogged() + " select the planet you want to exhaust", buttons);
     }
 
-    public static void resolveUnstableStep3(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("unstableStep3_")
+    public static void resolveUnstableStep3(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         String planet = buttonID.split("_")[2];
         String planetRep = Helper.getPlanetRepresentation(planet, game);
@@ -1617,28 +1612,28 @@ public class ButtonHelperActionCards {
         new RemoveUnits().unitParsing(event, p2.getColor(), game.getTileFromPlanet(planet),
             amountToKill + " inf " + planet, game);
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " you exhausted " + planetRep
+            player.getRepresentationUnfogged() + " you exhausted " + planetRep
                 + " and killed " + amountToKill + " infantry there");
         MessageHelper.sendMessageToChannel(p2.getCorrectChannel(),
-            p2.getRepresentation(true, true) + " your planet " + planetRep
+            p2.getRepresentationUnfogged() + " your planet " + planetRep
                 + " was exhausted and " + amountToKill + " infantry were destroyed.");
     }
 
-    public static void resolveSeizeArtifactStep3(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("seizeArtifactStep3_")
+    public static void resolveSeizeArtifactStep3(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         String fragID = buttonID.split("_")[2];
         ButtonHelper.deleteMessage(event);
         p2.removeFragment(fragID);
         player.addFragment(fragID);
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " you gained the fragment " + fragID);
+            player.getRepresentationUnfogged() + " you gained the fragment " + fragID);
         MessageHelper.sendMessageToChannel(p2.getCorrectChannel(),
-            p2.getRepresentation(true, true) + " your fragment " + fragID + " was seized.");
+            p2.getRepresentationUnfogged() + " your fragment " + fragID + " was seized.");
     }
 
-    public static void resolveUprisingStep3(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("uprisingStep3_")
+    public static void resolveUprisingStep3(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         String planet = buttonID.split("_")[2];
         String planetRep = Helper.getPlanetRepresentation(planet, game);
@@ -1652,13 +1647,13 @@ public class ButtonHelperActionCards {
         ButtonHelperAbilities.pillageCheck(player, game);
         ButtonHelperAgents.resolveArtunoCheck(player, game, resValue);
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " you exhausted " + planetRep);
+            player.getRepresentationUnfogged() + " you exhausted " + planetRep);
         MessageHelper.sendMessageToChannel(p2.getCorrectChannel(),
-            p2.getRepresentation(true, true) + " your planet " + planetRep + " was exhausted.");
+            p2.getRepresentationUnfogged() + " your planet " + planetRep + " was exhausted.");
     }
 
-    public static void resolvePlagueStep3(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("plagueStep3_")
+    public static void resolvePlagueStep3(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         String planet = buttonID.split("_")[2];
         String planetRep = Helper.getPlanetRepresentation(planet, game);
@@ -1700,7 +1695,7 @@ public class ButtonHelperActionCards {
             }
         }
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " you Plague'd " + planetRep + " and got " + hits + " hit" + (hits == 1 ? "" : ""));
+            player.getRepresentationUnfogged() + " you Plague'd " + planetRep + " and got " + hits + " hit" + (hits == 1 ? "" : "s"));
         String adjective = "";
         if (amount <= 3) {
         } else if (hits == 0) {
@@ -1713,12 +1708,12 @@ public class ButtonHelperActionCards {
             adjective = " major";
         }
         MessageHelper.sendMessageToChannel(p2.getCorrectChannel(),
-            p2.getRepresentation(true, true) + " your planet " + planetRep + " suffered a"
+            p2.getRepresentationUnfogged() + " your planet " + planetRep + " suffered a"
                 + adjective + " Plague and you lost " + hits + " infantry.");
     }
 
-    public static void resolveMicrometeoroidStormStep3(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("micrometeoroidStormStep3_")
+    public static void resolveMicrometeoroidStormStep3(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         String tilePos = buttonID.split("_")[2];
         Tile tile = game.getTileByPosition(tilePos);
@@ -1747,16 +1742,16 @@ public class ButtonHelperActionCards {
             }
         }
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " you stormed "
+            player.getRepresentationUnfogged() + " you stormed "
                 + tile.getRepresentationForButtons(game, player) + " and got " + hits + " hit" + (hits == 1 ? "" : "s"));
         MessageHelper.sendMessageToChannel(p2.getCorrectChannel(),
-            p2.getRepresentation(true, true) + " your fighter" + (amount == 1 ? "" : "s") + " in "
+            p2.getRepresentationUnfogged() + " your fighter" + (amount == 1 ? "" : "s") + " in "
                 + tile.getRepresentationForButtons(game, player) + " were hit by a storm and you lost "
                 + hits + " fighter" + (hits == 1 ? "" : "s") + ".");
     }
 
-    public static void resolveCrippleStep3(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("crippleStep3_")
+    public static void resolveCrippleStep3(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         String planet = buttonID.split("_")[2];
         String planetRep = Helper.getPlanetRepresentation(planet, game);
@@ -1769,12 +1764,13 @@ public class ButtonHelperActionCards {
                 p2.getColor(), false, game);
         }
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " you crippled " + planetRep + " and killed " + amount + " PDS");
+            player.getRepresentationUnfogged() + " you crippled " + planetRep + " and killed " + amount + " PDS");
         MessageHelper.sendMessageToChannel(p2.getCorrectChannel(),
-            p2.getRepresentation(true, true) + " your planet " + planetRep + " was crippled and you lost " + amount
+            p2.getRepresentationUnfogged() + " your planet " + planetRep + " was crippled and you lost " + amount
                 + " PDS.");
     }
 
+    @ButtonHandler("infiltrateStep3_")
     public static void resolveInfiltrateStep3(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         String planet = buttonID.split("_")[2];
         UnitHolder uH = ButtonHelper.getUnitHolderFromPlanetName(planet, game);
@@ -1782,57 +1778,55 @@ public class ButtonHelperActionCards {
         ButtonHelper.deleteMessage(event);
     }
 
-    public static void resolveReparationsStep3(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("reparationsStep3_")
+    public static void resolveReparationsStep3(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         String planet = buttonID.split("_")[2];
         String planetRep = Helper.getPlanetRepresentation(planet, game);
         p2.exhaustPlanet(planet);
-        MessageHelper.sendMessageToChannel(player.getCorrectChannel(), player.getRepresentation(true, true) + " you exhausted " + planetRep);
-        MessageHelper.sendMessageToChannel(p2.getCorrectChannel(), p2.getRepresentation(true, true) + " your planet " + planetRep + " was exhausted.");
+        MessageHelper.sendMessageToChannel(player.getCorrectChannel(), player.getRepresentationUnfogged() + " you exhausted " + planetRep);
+        MessageHelper.sendMessageToChannel(p2.getCorrectChannel(), p2.getRepresentationUnfogged() + " your planet " + planetRep + " was exhausted.");
         ButtonHelper.deleteMessage(event);
     }
 
-    public static void resolveResearch(Game game, Player player, String buttonID,
-        ButtonInteractionEvent event) {
+    @ButtonHandler("resolveResearch")
+    public static void resolveResearch(Game game, Player player, ButtonInteractionEvent event) {
         if (!player.hasAbility("propagation")) {
             MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-                player.getRepresentation(true, true) + " you may use the button to get your tech.",
+                player.getRepresentationUnfogged() + " you may use the button to get your tech.",
                 List.of(Buttons.GET_A_TECH));
         } else {
             List<Button> buttons = ButtonHelper.getGainCCButtons(player);
-            String message2 = player.getRepresentation() + "! Your current CCs are " + player.getCCRepresentation()
-                + ". Use buttons to gain CCs";
+            String message2 = player.getRepresentation() + "! Your current CCs are " + player.getCCRepresentation() + ". Use buttons to gain CCs";
             MessageHelper.sendMessageToChannelWithButtons(event.getChannel(), message2, buttons);
             game.setStoredValue("originalCCsFor" + player.getFaction(), player.getCCRepresentation());
         }
         ButtonHelper.deleteMessage(event);
     }
 
+    @ButtonHandler("focusedResearch")
     public static void focusedResearch(Game game, Player player, String buttonID,
         ButtonInteractionEvent event) {
         if (player.getTg() < 4 && (!player.hasUnexhaustedLeader("keleresagent") || player.getCommodities() < 1)) {
-            MessageHelper.sendMessageToChannel(player.getCorrectChannel(), player.getRepresentation() + "You did not have 4tgs and thus cannot resolve focused research");
+            MessageHelper.sendMessageToChannel(player.getCorrectChannel(), player.getRepresentation() + "You did not have " + Emojis.tg(4) + " and thus cannot resolve Focused Research");
             return;
         } else {
-            int oldTg = player.getTg();
-            player.setTg(player.getTg() - 4);
-            MessageHelper.sendMessageToChannel(player.getCorrectChannel(), player.getRepresentation(false, false) + " has spent 4tg (" + oldTg + " ->" + player.getTg() + ") on focused research");
+            MessageHelper.sendMessageToChannel(player.getCorrectChannel(), player.getRepresentation(false, false) + " has spent 4tg " + player.gainTG(-4) + " on focused research");
         }
         if (!player.hasAbility("propagation")) {
             MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-                player.getRepresentation(true, true) + " you may use the button to get your tech.",
+                player.getRepresentationUnfogged() + " you may use the button to get your tech.",
                 List.of(Buttons.GET_A_TECH));
         } else {
             List<Button> buttons = ButtonHelper.getGainCCButtons(player);
-            String message2 = player.getRepresentation() + "! Your current CCs are " + player.getCCRepresentation()
-                + ". Use buttons to gain CCs";
+            String message2 = player.getRepresentation() + "! Your current CCs are " + player.getCCRepresentation() + ". Use buttons to gain CCs";
             MessageHelper.sendMessageToChannelWithButtons(event.getChannel(), message2, buttons);
             game.setStoredValue("originalCCsFor" + player.getFaction(), player.getCCRepresentation());
         }
         ButtonHelper.deleteMessage(event);
     }
 
+    @ButtonHandler("repealLaw_")
     public static void repealLaw(Game game, Player player, String buttonID, ButtonInteractionEvent event) {
         String numID = buttonID.split("_")[1];
         String name = "";
@@ -1938,6 +1932,7 @@ public class ButtonHelperActionCards {
         return buttons;
     }
 
+    @ButtonHandler("resolveReverse_")
     public static void resolveReverse(Game game, Player player, String buttonID, ButtonInteractionEvent event) {
         String acName = buttonID.split("_")[1];
         List<String> acStrings = new ArrayList<>(game.getDiscardActionCards().keySet());
@@ -1964,17 +1959,18 @@ public class ButtonHelperActionCards {
         ButtonHelper.deleteMessage(event);
     }
 
+    @ButtonHandler("economicInitiative")
     public static void economicInitiative(Player player, Game game, ButtonInteractionEvent event) {
         for (String planet : player.getPlanetsAllianceMode()) {
             if (ButtonHelper.getTypeOfPlanet(game, planet).contains("cultural")) {
                 player.refreshPlanet(planet);
             }
         }
-        MessageHelper.sendMessageToChannel(event.getChannel(),
-            player.getFactionEmoji() + " readied each cultural planet");
+        MessageHelper.sendMessageToChannel(event.getChannel(), player.getFactionEmoji() + " readied each cultural planet");
         ButtonHelper.deleteMessage(event);
     }
 
+    @ButtonHandler("industrialInitiative")
     public static void industrialInitiative(Player player, Game game, ButtonInteractionEvent event) {
         int oldTg = player.getTg();
         int count = ButtonHelper.getNumberOfXTypePlanets(player, game, "industrial", true);
@@ -1986,6 +1982,7 @@ public class ButtonHelperActionCards {
         ButtonHelper.deleteMessage(event);
     }
 
+    @ButtonHandler("miningInitiative")
     public static void miningInitiative(Player player, Game game, ButtonInteractionEvent event) {
         int oldTg = player.getTg();
         int count = 0;
