@@ -7,14 +7,13 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 
-import org.apache.commons.lang3.StringUtils;
-
 import net.dv8tion.jda.api.entities.channel.middleman.MessageChannel;
 import net.dv8tion.jda.api.entities.emoji.Emoji;
 import net.dv8tion.jda.api.entities.emoji.EmojiUnion;
 import net.dv8tion.jda.api.events.interaction.GenericInteractionCreateEvent;
 import net.dv8tion.jda.api.events.interaction.component.ButtonInteractionEvent;
 import net.dv8tion.jda.api.interactions.components.buttons.Button;
+import org.apache.commons.lang3.StringUtils;
 import ti4.buttons.Buttons;
 import ti4.commands.cardsac.ACInfo;
 import ti4.commands.cardsac.DiscardACRandom;
@@ -63,6 +62,7 @@ public class ButtonHelperHeroes {
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(), msg, buttons);
     }
 
+    @ButtonHandler("argentHeroStep2_")
     public static void argentHeroStep2(Game game, Player player, GenericInteractionCreateEvent event, String buttonID) {
         List<Button> buttons = new ArrayList<>();
         String pos1 = buttonID.split("_")[1];
@@ -79,8 +79,7 @@ public class ButtonHelperHeroes {
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(), msg, buttons);
     }
 
-    public static List<Button> getArgentHeroStep3Buttons(Game game, Player player, GenericInteractionCreateEvent event,
-        String buttonID) {
+    public static List<Button> getArgentHeroStep3Buttons(Game game, Player player, GenericInteractionCreateEvent event, String buttonID) {
         List<Button> buttons = new ArrayList<>();
         String pos1 = buttonID.split("_")[1];
         Tile destination = game.getTileByPosition(pos1);
@@ -123,6 +122,7 @@ public class ButtonHelperHeroes {
         return buttons;
     }
 
+    @ButtonHandler("argentHeroStep3_")
     public static void argentHeroStep3(Game game, Player player, GenericInteractionCreateEvent event, String buttonID) {
         List<Button> buttons = getArgentHeroStep3Buttons(game, player, event, buttonID);
         String pos1 = buttonID.split("_")[1];
@@ -133,6 +133,7 @@ public class ButtonHelperHeroes {
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(), msg, buttons);
     }
 
+    @ButtonHandler("argentHeroStep4_")
     public static void argentHeroStep4(Game game, Player player, ButtonInteractionEvent event, String buttonID) {
         List<Button> buttons = getArgentHeroStep3Buttons(game, player, event, buttonID);
         String pos1 = buttonID.split("_")[1];
@@ -214,24 +215,24 @@ public class ButtonHelperHeroes {
             }
         }
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " tell the bot whose planet you want to exhaust or ready",
+            player.getRepresentationUnfogged() + " tell the bot whose planet you want to exhaust or ready",
             buttons);
     }
 
-    public static void resolveKhraskHeroStep2(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("khraskHeroStep2_")
+    public static void resolveKhraskHeroStep2(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         List<Button> buttons = new ArrayList<>();
         String faction = buttonID.split("_")[1];
         buttons.add(Buttons.green("khraskHeroStep3Ready_" + faction, "Ready a Planet"));
         buttons.add(Buttons.red("khraskHeroStep3Exhaust_" + faction, "Exhaust a Planet"));
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " tell the bot if you want to exhaust or ready a planet",
+            player.getRepresentationUnfogged() + " tell the bot if you want to exhaust or ready a planet",
             buttons);
     }
 
-    public static void resolveKhraskHeroStep3Exhaust(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("khraskHeroStep3Exhaust_")
+    public static void resolveKhraskHeroStep3Exhaust(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         if (p2.getReadiedPlanets().isEmpty()) {
             MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
@@ -244,18 +245,18 @@ public class ButtonHelperHeroes {
             buttons.add(Buttons.gray("khraskHeroStep4Exhaust_" + p2.getFaction() + "_" + planet,
                 Helper.getPlanetRepresentation(planet, game)));
         }
-        MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(), player.getRepresentation(true, true) + " select the planet you want to exhaust", buttons);
+        MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(), player.getRepresentationUnfogged() + " select the planet you want to exhaust", buttons);
         ButtonHelper.deleteMessage(event);
     }
 
-    public static void resolveKhraskHeroStep4Exhaust(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("khraskHeroStep4Exhaust_")
+    public static void resolveKhraskHeroStep4Exhaust(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         String planet = buttonID.split("_")[2];
         String planetRep = Helper.getPlanetRepresentation(planet, game);
         p2.exhaustPlanet(planet);
-        MessageHelper.sendMessageToChannel(player.getCorrectChannel(), player.getRepresentation(true, true) + " you exhausted " + planetRep);
-        MessageHelper.sendMessageToChannel(p2.getCorrectChannel(), p2.getRepresentation(true, true) + " your planet " + planetRep + " was exhausted.");
+        MessageHelper.sendMessageToChannel(player.getCorrectChannel(), player.getRepresentationUnfogged() + " you exhausted " + planetRep);
+        MessageHelper.sendMessageToChannel(p2.getCorrectChannel(), p2.getRepresentationUnfogged() + " your planet " + planetRep + " was exhausted.");
         ButtonHelper.deleteMessage(event);
     }
 
@@ -263,7 +264,7 @@ public class ButtonHelperHeroes {
         List<Button> buttons = new ArrayList<>();
         String message = player.getRepresentation() + " Click the axis order you would like to send";
         for (String shipOrder : ButtonHelper.getPlayersShipOrders(player)) {
-            Button transact = Buttons.green("axisHeroStep2_" + shipOrder, "" + Mapper.getRelic(shipOrder).getName());
+            Button transact = Buttons.green("axisHeroStep2_" + shipOrder, Mapper.getRelic(shipOrder).getName());
             buttons.add(transact);
         }
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(), message, buttons);
@@ -290,20 +291,14 @@ public class ButtonHelperHeroes {
     }
 
     public static void cheiranHeroResolution(Player player, Game game, GenericInteractionCreateEvent event) {
-        List<Button> buttons = new ArrayList<>();
         // "dn,cv,dd,2 ff,mech a,2 inf g,sd a"
-        buttons.addAll(Helper.getTileForCheiranHeroPlaceUnitButtons(player, game, "dreadnought",
-            "placeOneNDone_skipbuild"));
+        List<Button> buttons = new ArrayList<>(Helper.getTileForCheiranHeroPlaceUnitButtons(player, game, "dreadnought",
+                "placeOneNDone_skipbuild"));
         MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Place 1 dreadnought", buttons);
-        buttons = new ArrayList<>();
-        buttons.addAll(
-            Helper.getTileWithTrapsPlaceUnitButtons(player, game, "destroyer", "placeOneNDone_skipbuild"));
+        buttons = new ArrayList<>(Helper.getTileWithTrapsPlaceUnitButtons(player, game, "destroyer", "placeOneNDone_skipbuild"));
         MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Place 1 destroyer", buttons);
-        buttons = new ArrayList<>();
-        buttons.addAll(
-            Helper.getTileWithTrapsPlaceUnitButtons(player, game, "carrier", "placeOneNDone_skipbuild"));
-        buttons = new ArrayList<>();
-        buttons.addAll(Helper.getTileWithTrapsPlaceUnitButtons(player, game, "ff", "placeOneNDone_skipbuild"));
+        buttons = new ArrayList<>(Helper.getTileWithTrapsPlaceUnitButtons(player, game, "carrier", "placeOneNDone_skipbuild"));
+        buttons = new ArrayList<>(Helper.getTileWithTrapsPlaceUnitButtons(player, game, "ff", "placeOneNDone_skipbuild"));
         MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Place 1 fighter", buttons);
         MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Place 1 fighter", buttons);
 
@@ -325,17 +320,16 @@ public class ButtonHelperHeroes {
 
     }
 
+    @ButtonHandler("lizhoHeroFighterResolution")
     public static void lizhoHeroFighterDistribution(Player player, Game game, ButtonInteractionEvent event) {
         ButtonHelper.deleteMessage(event);
-        List<Button> buttons = new ArrayList<>();
-        buttons.addAll(Helper.getTileWithTrapsPlaceUnitButtons(player, game, "2ff", "placeOneNDone_skipbuild"));
+        List<Button> buttons = new ArrayList<>(Helper.getTileWithTrapsPlaceUnitButtons(player, game, "2ff", "placeOneNDone_skipbuild"));
         MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Place 2 fighters", buttons);
         MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Place 2 fighters", buttons);
         MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Place 2 fighters", buttons);
         MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Place 2 fighters", buttons);
         MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Place 2 fighters", buttons);
-        buttons = new ArrayList<>();
-        buttons.addAll(Helper.getTileWithTrapsPlaceUnitButtons(player, game, "ff", "placeOneNDone_skipbuild"));
+        buttons = new ArrayList<>(Helper.getTileWithTrapsPlaceUnitButtons(player, game, "ff", "placeOneNDone_skipbuild"));
         MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Place 1 fighter", buttons);
         MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Place 1 fighter", buttons);
     }
@@ -343,26 +337,26 @@ public class ButtonHelperHeroes {
     public static void resolveLanefirHeroStep1(Player player, Game game) {
         List<String> revealedRelics = getAllRevealedRelics(game);
         String key = "lanefirRelicReveal";
-        String revealMsg = player.getRepresentation() + " you revealed the following 3 relics:\n";
+        StringBuilder revealMsg = new StringBuilder(player.getRepresentation() + " you revealed the following 3 relics:\n");
         for (int x = 1; x < 4; x++) {
             String relic = game.drawRelic();
             game.setStoredValue(key + x, relic);
-            revealMsg = revealMsg + x + ". " + Mapper.getRelic(relic).getName() + "\n";
+            revealMsg.append(x).append(". ").append(Mapper.getRelic(relic).getName()).append("\n");
         }
         int size = revealedRelics.size();
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
             player.getFactionEmoji() + " may gain " + size + " CC" + (size == 1 ? "" : "s") + ".");
         List<Button> buttons = ButtonHelper.getGainCCButtons(player);
-        String trueIdentity = player.getRepresentation(true, true);
+        String trueIdentity = player.getRepresentationUnfogged();
         String message2 = trueIdentity + "! Your current CCs are " + player.getCCRepresentation()
             + ". Use buttons to gain CCs";
         game.setStoredValue("originalCCsFor" + player.getFaction(), player.getCCRepresentation());
         MessageHelper.sendMessageToChannelWithButtons(
             player.getCorrectChannel(), message2, buttons);
         revealedRelics = getAllRevealedRelics(game);
-        MessageHelper.sendMessageToChannel(player.getCorrectChannel(), revealMsg);
+        MessageHelper.sendMessageToChannel(player.getCorrectChannel(), revealMsg.toString());
 
-        List<Button> relicButtons = new ArrayList<Button>();
+        List<Button> relicButtons = new ArrayList<>();
         for (String fanctionNRelic : revealedRelics) {
             String relic = fanctionNRelic.split(";")[1];
             relicButtons.add(Buttons.green("relicSwapStep1_" + fanctionNRelic, Mapper.getRelic(relic).getName()));
@@ -373,15 +367,15 @@ public class ButtonHelperHeroes {
             player.getCorrectChannel(), revealMsg2, relicButtons);
     }
 
-    public static void resolveRelicSwapStep1(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("relicSwapStep1")
+    public static void resolveRelicSwapStep1(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         String fanctionNRelic = buttonID.replace("relicSwapStep1_", "");
         ButtonHelper.deleteTheOneButton(event);
         String relic = fanctionNRelic.split(";")[1];
         List<String> revealedRelics = getAllRevealedRelics(game);
         String revealMsg = player.getRepresentation() + " you chose to swap the relic "
             + Mapper.getRelic(relic).getName() + ". Choose another relic to swap it with";
-        List<Button> relicButtons = new ArrayList<Button>();
+        List<Button> relicButtons = new ArrayList<>();
         for (String fanctionNRelic2 : revealedRelics) {
             if (fanctionNRelic.equalsIgnoreCase(fanctionNRelic2)) {
                 continue;
@@ -394,15 +388,15 @@ public class ButtonHelperHeroes {
             player.getCorrectChannel(), revealMsg, relicButtons);
     }
 
-    public static void resolveRelicSwapStep2(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("relicSwapStep2")
+    public static void resolveRelicSwapStep2(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         ButtonHelper.deleteMessage(event);
         String faction = buttonID.split(";")[1];
         String relic = buttonID.split(";")[2];
         String faction2 = buttonID.split(";")[3];
         String relic2 = buttonID.split(";")[4];
         String revealMsg = player.getRepresentation() + " you chose to swap the relic "
-            + Mapper.getRelic(relic).getName() + " with the relic " + Mapper.getRelic(relic2).getName() + "";
+            + Mapper.getRelic(relic).getName() + " with the relic " + Mapper.getRelic(relic2).getName();
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
             revealMsg);
         if (faction.contains("lanefirRelicReveal")) {
@@ -430,8 +424,8 @@ public class ButtonHelperHeroes {
 
     }
 
-    public static void resolveAxisHeroStep2(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("axisHeroStep2_")
+    public static void resolveAxisHeroStep2(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         List<Button> buttons = new ArrayList<>();
         String shipOrder = buttonID.split("_")[1];
         String message = player.getRepresentation()
@@ -454,24 +448,24 @@ public class ButtonHelperHeroes {
             buttons);
     }
 
-    public static void resolveAxisHeroStep3(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("axisHeroStep3_")
+    public static void resolveAxisHeroStep3(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         String shipOrder = buttonID.split("_")[1];
         String faction = buttonID.split("_")[2];
         Player p2 = game.getPlayerFromColorOrFaction(faction);
         String message = player.getRepresentation() + " sent " + Mapper.getRelic(shipOrder).getName() + " to "
-            + ButtonHelper.getIdentOrColor(p2, game)
+            + p2.getFactionEmojiOrColor()
             + " who now owes a PN. Buttons have been sent to the players cards info thread to resolve";
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(), message);
         List<Button> stuffToTransButtons = ButtonHelper.getForcedPNSendButtons(game, player, p2);
-        String message2 = p2.getRepresentation(true, true)
+        String message2 = p2.getRepresentationUnfogged()
             + " You have been given an axis order by Demi-Queen Mdcksssk, the Axis hero, and now must send a PN. Please select the PN you would like to send.";
         MessageHelper.sendMessageToChannelWithButtons(p2.getCardsInfoThread(), message2, stuffToTransButtons);
         ButtonHelper.deleteMessage(event);
     }
 
-    public static void resolveKhraskHeroStep3Ready(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("khraskHeroStep3Ready_")
+    public static void resolveKhraskHeroStep3Ready(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         if (p2.getExhaustedPlanets().isEmpty()) {
             MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
@@ -486,21 +480,21 @@ public class ButtonHelperHeroes {
         }
         ButtonHelper.deleteMessage(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " select the planet you want to ready", buttons);
+            player.getRepresentationUnfogged() + " select the planet you want to ready", buttons);
     }
 
-    public static void resolveKhraskHeroStep4Ready(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("khraskHeroStep4Ready_")
+    public static void resolveKhraskHeroStep4Ready(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         String planet = buttonID.split("_")[2];
         String planetRep = Helper.getPlanetRepresentation(planet, game);
         ButtonHelper.deleteMessage(event);
         p2.refreshPlanet(planet);
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " you refreshed " + planetRep);
+            player.getRepresentationUnfogged() + " you refreshed " + planetRep);
         if (p2 != player) {
             MessageHelper.sendMessageToChannel(p2.getCorrectChannel(),
-                p2.getRepresentation(true, true) + " your planet " + planetRep + " was refreshed.");
+                p2.getRepresentationUnfogged() + " your planet " + planetRep + " was refreshed.");
             if (player.hasLeader("xxchaagent")) {
                 UnitHolder uH = ButtonHelper.getUnitHolderFromPlanetName(planet, game);
                 if (uH != null && uH.getUnitCount(UnitType.Infantry, p2) > 0) {
@@ -540,6 +534,7 @@ public class ButtonHelperHeroes {
         return buttons;
     }
 
+    @ButtonHandler("attachAttachment_")
     public static void resolveAttachAttachment(Player player, Game game, String buttonID,
         ButtonInteractionEvent event) {
         ButtonHelper.deleteMessage(event);
@@ -549,7 +544,7 @@ public class ButtonHelperHeroes {
         Tile tile = game.getTileFromPlanet(planet);
         PlanetModel planetInfo = Mapper.getPlanet(planetID);
         if (Optional.ofNullable(planetInfo).isPresent()) {
-            if (Optional.ofNullable(planetInfo.getTechSpecialties()).orElse(new ArrayList<>()).size() > 0
+            if (!Optional.ofNullable(planetInfo.getTechSpecialties()).orElse(new ArrayList<>()).isEmpty()
                 || ButtonHelper.doesPlanetHaveAttachmentTechSkip(tile, planetID)) {
                 if ((attachment.equals(Constants.WARFARE) ||
                     attachment.equals(Constants.PROPULSION) ||
@@ -562,7 +557,7 @@ public class ButtonHelperHeroes {
         }
         UnitHolder uH = ButtonHelper.getUnitHolderFromPlanetName(planet, game);
         uH.addToken("attachment_" + attachment + ".png");
-        String msg = player.getRepresentation(true, true) + " put " + attachment + " on "
+        String msg = player.getRepresentationUnfogged() + " put " + attachment + " on "
             + Helper.getPlanetRepresentation(planet, game);
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(), msg);
     }
@@ -583,6 +578,7 @@ public class ButtonHelperHeroes {
         return buttons;
     }
 
+    @ButtonHandler("findAttachmentInDeck_")
     public static void findAttachmentInDeck(Player player, Game game, String buttonID,
         ButtonInteractionEvent event) {
         String type = buttonID.split("_")[1];
@@ -596,14 +592,14 @@ public class ButtonHelperHeroes {
         } else {
             ButtonHelper.deleteMessage(event);
         }
-        while (!foundOne && counter < 40) {
+        while (counter < 40) {
             counter++;
             String cardID = game.drawExplore(type);
             ExploreModel explore = Mapper.getExplore(cardID);
             sb.append(explore.textRepresentation()).append(System.lineSeparator());
             if ("attach".equalsIgnoreCase(explore.getResolution())) {
                 foundOne = true;
-                sb.append(player.getRepresentation()).append(" Found attachment " + explore.getName());
+                sb.append(player.getRepresentation()).append(" Found attachment ").append(explore.getName());
                 game.purgeExplore(cardID);
                 MessageHelper.sendMessageToChannel(channel, sb.toString());
                 String msg = player.getRepresentation() + " tell the bot what planet this should be attached too";
@@ -637,12 +633,12 @@ public class ButtonHelperHeroes {
             buttons.add(Buttons.green("florzenHeroStep2_" + attachment,
                 attach + " on " + Helper.getPlanetRepresentation(planet, game)));
         }
-        String msg = player.getRepresentation(true, true) + " choose the attachment you wish to steal";
+        String msg = player.getRepresentationUnfogged() + " choose the attachment you wish to steal";
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(), msg, buttons);
     }
 
-    public static void resolveFlorzenHeroStep2(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("florzenHeroStep2_")
+    public static void resolveFlorzenHeroStep2(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         String planet = buttonID.split("_")[1];
         String attachment = buttonID.split("_")[2];
         List<Button> buttons = new ArrayList<>();
@@ -653,13 +649,14 @@ public class ButtonHelperHeroes {
                 Helper.getPlanetRepresentation(planet2, game)));
         }
 
-        String msg = player.getRepresentation(true, true) + " choose the HS planet you wish to put the attachment on";
+        String msg = player.getRepresentationUnfogged() + " choose the HS planet you wish to put the attachment on";
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(), msg, buttons);
         ButtonHelper.deleteMessage(event);
     }
 
-    public static void resolveTnelisHeroAttach(Player tnelis, Game game, String soID,
-        ButtonInteractionEvent event) {
+    @ButtonHandler("tnelisHeroAttach_")
+    public static void resolveTnelisHeroAttach(Player tnelis, Game game, String buttonID, ButtonInteractionEvent event) {
+        String soID = buttonID.split("_")[1];
         Map<String, Integer> customPOs = new HashMap<>(game.getRevealedPublicObjectives());
         for (String customPO : customPOs.keySet()) {
             if (customPO.contains("Tnelis Hero")) {
@@ -767,6 +764,7 @@ public class ButtonHelperHeroes {
         MessageHelper.sendMessageToChannelWithButtons(event.getMessageChannel(), message, buttons);
     }
 
+    @ButtonHandler("freeSystemsHeroPlanet_")
     public static void freeSystemsHeroPlanet(String buttonID, ButtonInteractionEvent event, Game game,
         Player player) {
         String planet = buttonID.split("_")[1];
@@ -788,7 +786,7 @@ public class ButtonHelperHeroes {
         List<Tile> tilesWithBombard = ButtonHelper.getTilesOfPlayersSpecificUnits(game, player, UnitType.Lady,
             UnitType.Flagship);
         Set<String> adjacentTiles = FoWHelper.getAdjacentTilesAndNotThisTile(game,
-            tilesWithBombard.get(0).getPosition(), player, false);
+            tilesWithBombard.getFirst().getPosition(), player, false);
         for (Tile tile : tilesWithBombard) {
             adjacentTiles
                 .addAll(FoWHelper.getAdjacentTilesAndNotThisTile(game, tile.getPosition(), player, false));
@@ -815,7 +813,7 @@ public class ButtonHelperHeroes {
         List<Tile> tilesWithBombard = ButtonHelper.getTilesOfPlayersSpecificUnits(game, player, UnitType.Lady,
             UnitType.Flagship);
         Set<String> adjacentTiles = FoWHelper.getAdjacentTilesAndNotThisTile(game,
-            tilesWithBombard.get(0).getPosition(), player, false);
+            tilesWithBombard.getFirst().getPosition(), player, false);
         for (Tile tile : tilesWithBombard) {
             adjacentTiles
                 .addAll(FoWHelper.getAdjacentTilesAndNotThisTile(game, tile.getPosition(), player, false));
@@ -837,32 +835,33 @@ public class ButtonHelperHeroes {
         return buttons;
     }
 
-    public static void resolveGheminaLadyHero(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("gheminaLadyHero_")
+    public static void resolveGheminaLadyHero(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         String planetName = buttonID.split("_")[1];
         UnitHolder unitHolder = ButtonHelper.getUnitHolderFromPlanetName(planetName, game);
+        StringBuilder destroyedUnits = new StringBuilder();
         for (Player p2 : game.getRealPlayers()) {
             unitHolder.removeAllUnits(p2.getColor());
+            destroyedUnits.append(unitHolder.getPlayersUnitListEmojisOnHolder(p2));
         }
-        String planetRepresentation2 = Helper.getPlanetRepresentation(planetName, game);
-        String msg = player.getFactionEmoji() + " destroyed all units on the planet " + planetRepresentation2
-            + " using the The Lady, a Ghemina hero.";
+        String planetRep = Helper.getPlanetRepresentationPlusEmojiPlusResourceInfluence(planetName, game);
+        String msg = player.getFactionEmoji() + " destroyed all units (" + destroyedUnits + ") on the planet " + planetRep + " using the The Lady, a Ghemina hero.";
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(), msg);
         ButtonHelper.deleteMessage(event);
     }
 
-    public static void resolveGheminaLordHero(String buttonID, String ident, Player player, Game game,
-        ButtonInteractionEvent event) {
-        String planet = buttonID.split("_")[1];
-        if ("lockedmallice".equalsIgnoreCase(planet)) {
-            planet = "mallice";
+    @ButtonHandler("gheminaLordHero_")
+    public static void resolveGheminaLordHero(String buttonID, Player player, Game game, ButtonInteractionEvent event) {
+        String planetID = buttonID.split("_")[1];
+        if ("lockedmallice".equalsIgnoreCase(planetID)) {
+            planetID = "mallice";
             Tile tile = game.getTileFromPlanet("lockedmallice");
-            tile = MoveUnits.flipMallice(event, tile, game);
+            MoveUnits.flipMallice(event, tile, game);
         }
-        PlanetAdd.doAction(player, planet, game, event, false);
-        PlanetRefresh.doAction(player, planet, game);
-        String planetRepresentation2 = Helper.getPlanetRepresentation(planet, game);
-        String msg = ident + " claimed the planet " + planetRepresentation2 + " using The Lord, a Ghemina hero.";
+        PlanetAdd.doAction(player, planetID, game, event, false);
+        PlanetRefresh.doAction(player, planetID, game);
+        String planetRep = Helper.getPlanetRepresentationPlusEmojiPlusResourceInfluence(planetID, game);
+        String msg = player.getFactionEmojiOrColor() + " claimed the planet " + planetRep + " using The Lord, a Ghemina hero.";
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(), msg);
         ButtonHelper.deleteMessage(event);
     }
@@ -873,7 +872,7 @@ public class ButtonHelperHeroes {
         for (String tech : victim.getTechs()) {
             TechnologyModel techM = Mapper.getTech(tech);
             if (techM.isUnitUpgrade()) {
-                if (techM.getFaction().orElse("").length() > 0) {
+                if (!techM.getFaction().orElse("").isEmpty()) {
                     techM = Mapper.getTech(techM.getBaseUpgrade().orElse(tech));
                 }
                 for (String fTech : veldyr.getFactionTechs()) {
@@ -931,6 +930,7 @@ public class ButtonHelperHeroes {
         return buttons;
     }
 
+    @ButtonHandler("saarHeroResolution_")
     public static void resolveSaarHero(Game game, Player player, ButtonInteractionEvent event, String buttonID) {
         String pos = buttonID.split("_")[1];
         Tile tile = game.getTileByPosition(pos);
@@ -966,8 +966,8 @@ public class ButtonHelperHeroes {
         ButtonHelper.deleteMessage(event);
     }
 
-    public static void resolveArboHeroBuild(Game game, Player player, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("arboHeroBuild_")
+    public static void resolveArboHeroBuild(Game game, Player player, ButtonInteractionEvent event, String buttonID) {
         String pos = buttonID.split("_")[1];
         List<Button> buttons;
         buttons = Helper.getPlaceUnitButtons(event, player, game, game.getTileByPosition(pos),
@@ -995,8 +995,8 @@ public class ButtonHelperHeroes {
         return techPlanets;
     }
 
-    public static void purgeCeldauriHero(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("purgeCeldauriHero_")
+    public static void purgeCeldauriHero(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Leader playerLeader = player.unsafeGetLeader("celdaurihero");
         if (playerLeader == null) {
             MessageHelper.sendMessageToChannel(event.getChannel(),
@@ -1026,7 +1026,7 @@ public class ButtonHelperHeroes {
         }
         buttons.add(tgButton);
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " Use buttons to place 1 space dock on a planet you control", buttons);
+            player.getRepresentationUnfogged() + " Use buttons to place 1 space dock on a planet you control", buttons);
         List<Button> buttons2 = Helper.getPlaceUnitButtons(event, player, game, tile, "celdauriHero", "place");
         String message2 = player.getRepresentation() + " Use the buttons to produce units. ";
         String message3 = "You have " + Helper.getProductionValue(player, game, tile, false)
@@ -1044,8 +1044,8 @@ public class ButtonHelperHeroes {
         ButtonHelper.deleteMessage(event);
     }
 
-    public static void purgeMentakHero(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("purgeMentakHero_")
+    public static void purgeMentakHero(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Leader playerLeader = player.unsafeGetLeader("mentakhero");
         if (playerLeader == null) {
             MessageHelper.sendMessageToChannel(event.getChannel(),
@@ -1069,14 +1069,16 @@ public class ButtonHelperHeroes {
         ButtonHelper.deleteTheOneButton(event);
     }
 
+    @ButtonHandler("purgeTech_")
     public static void purgeTech(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         String techID = buttonID.replace("purgeTech_", "");
         player.purgeTech(techID);
-        String msg = player.getRepresentation(true, true) + " purged " + Mapper.getTech(techID).getName();
+        String msg = player.getRepresentationUnfogged() + " purged " + Mapper.getTech(techID).getName();
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(), msg);
         ButtonHelper.deleteMessage(event);
     }
 
+    @ButtonHandler("nekroHeroStep2_")
     public static void resolveNekroHeroStep2(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         String planet = buttonID.split("_")[1];
         Planet unitHolder = game.getPlanetsInfo().get(planet);
@@ -1093,7 +1095,7 @@ public class ButtonHelperHeroes {
             unitHolder.removeAllUnits(color);
             unitHolder.removeAllUnitDamage(color);
         }
-        Planet planetHolder = (Planet) unitHolder;
+        Planet planetHolder = unitHolder;
         int oldTg = player.getTg();
         int count = planetHolder.getResources() + planetHolder.getInfluence();
         player.setTg(oldTg + count);
@@ -1141,6 +1143,7 @@ public class ButtonHelperHeroes {
         return empties;
     }
 
+    @ButtonHandler("cabalHeroTile_")
     public static void executeCabalHero(String buttonID, Player player, Game game, ButtonInteractionEvent event) {
         String pos = buttonID.replace("cabalHeroTile_", "");
         Tile tile = game.getTileByPosition(pos);
@@ -1152,7 +1155,7 @@ public class ButtonHelperHeroes {
                 RiftUnitsHelper.riftAllUnitsInASystem(pos, event, game, p2, p2.getFactionEmoji(), player);
             }
             if (FoWHelper.playerHasShipsInSystem(p2, tile) && ButtonHelperFactionSpecific.isCabalBlockadedByPlayer(p2, game, player)) {
-                String msg = player.getRepresentation(true, true) + " has failed to eat units owned by "
+                String msg = player.getRepresentationUnfogged() + " has failed to eat units owned by "
                     + p2.getRepresentation() + " because they were blockaded. Womp Womp.";
                 MessageHelper.sendMessageToChannel(player.getCorrectChannel(), msg);
             }
@@ -1173,6 +1176,7 @@ public class ButtonHelperHeroes {
         return empties;
     }
 
+    @ButtonHandler("naaluHeroSend")
     public static void resolveNaaluHeroSend(Player p1, Game game, String buttonID, ButtonInteractionEvent event) {
         buttonID = buttonID.replace("naaluHeroSend_", "");
         String factionToTrans = buttonID.substring(0, buttonID.indexOf("_"));
@@ -1268,7 +1272,7 @@ public class ButtonHelperHeroes {
             buttons.add(Buttons.green("stealRelic_" + victim.getFaction() + "_" + relic,
                 "Steal " + Mapper.getRelic(relic).getName()));
         }
-        String msg = player.getRepresentation(true, true) + " choose the relic you want to steal";
+        String msg = player.getRepresentationUnfogged() + " choose the relic you want to steal";
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(), msg, buttons);
 
     }
@@ -1278,8 +1282,8 @@ public class ButtonHelperHeroes {
         String faction = buttonID.split("_")[1];
         Player p2 = game.getPlayerFromColorOrFaction(faction);
         String relic = buttonID.split("_")[2];
-        String msg = ButtonHelper.getIdentOrColor(player, game) + " stole " + Mapper.getRelic(relic).getName()
-            + " from " + ButtonHelper.getIdentOrColor(p2, game);
+        String msg = player.getFactionEmojiOrColor() + " stole " + Mapper.getRelic(relic).getName()
+            + " from " + p2.getFactionEmojiOrColor();
         if (game.isFowMode()) {
             MessageHelper.sendMessageToChannel(p2.getCorrectChannel(), msg);
         }
@@ -1319,6 +1323,7 @@ public class ButtonHelperHeroes {
 
     }
 
+    @ButtonHandler("augerHeroSwap.")
     public static void augersHeroSwap(Player player, Game game, String buttonID, ButtonInteractionEvent event) {
         buttonID = buttonID.replace("augerHeroSwap.", "");
         String id = StringUtils.substringAfter(buttonID, ".");
@@ -1329,12 +1334,13 @@ public class ButtonHelperHeroes {
             game.swapObjectiveOut(2, 0, id);
         }
         MessageHelper.sendMessageToChannel(player.getCardsInfoThread(),
-            player.getRepresentation(true, true) + " put " + Mapper.getPublicObjective(id).getName()
+            player.getRepresentationUnfogged() + " put " + Mapper.getPublicObjective(id).getName()
                 + " as next up. Feel free to peek at it to confirm it worked");
         // GameSaveLoadManager.saveMap(game, event);
         ButtonHelper.deleteMessage(event);
     }
 
+    @ButtonHandler("augersHeroStart_")
     public static void augersHeroResolution(Player player, Game game, String buttonID) {
         List<Button> buttons = new ArrayList<>();
         if ("1".equalsIgnoreCase(buttonID.split("_")[1])) {
@@ -1352,9 +1358,10 @@ public class ButtonHelperHeroes {
         }
         buttons.add(Buttons.red("deleteButtons", "Decline to change the next objective"));
         MessageHelper.sendMessageToChannelWithButtons(player.getCardsInfoThread(),
-            player.getRepresentation(true, true) + " use buttons to resolve", buttons);
+            player.getRepresentationUnfogged() + " use buttons to resolve", buttons);
     }
 
+    @ButtonHandler("naaluHeroInitiation")
     public static void resolveNaaluHeroInitiation(Player player, Game game, ButtonInteractionEvent event) {
         Leader playerLeader = player.unsafeGetLeader("naaluhero");
         StringBuilder message2 = new StringBuilder(player.getRepresentation()).append(" played ")
@@ -1372,13 +1379,14 @@ public class ButtonHelperHeroes {
                 continue;
             }
             List<Button> stuffToTransButtons = ButtonHelper.getForcedPNSendButtons(game, player, p1);
-            String message = p1.getRepresentation(true, true)
+            String message = p1.getRepresentationUnfogged()
                 + " The Oracle, the Naalu hero, has been played and you must send a PN. Please select the PN you would like to send.";
             MessageHelper.sendMessageToChannelWithButtons(p1.getCardsInfoThread(), message, stuffToTransButtons);
         }
         ButtonHelper.deleteMessage(event);
     }
 
+    @ButtonHandler("kyroHeroInitiation")
     public static void resolveKyroHeroInitiation(Player player, Game game, ButtonInteractionEvent event) {
         Leader playerLeader = player.unsafeGetLeader("kyrohero");
         StringBuilder message2 = new StringBuilder(player.getRepresentation()).append(" played ")
@@ -1409,6 +1417,7 @@ public class ButtonHelperHeroes {
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(), msg, buttons);
     }
 
+    @ButtonHandler("olradinHeroFlip_")
     public static void olradinHeroFlipPolicy(String buttonID, ButtonInteractionEvent event, Game game,
         Player player) {
         int negativePolicies = 0;
@@ -1478,10 +1487,8 @@ public class ButtonHelperHeroes {
         }
         if (positivePolicies >= 2) {
             unitModelID = "olradin_mech_positive";
-        } else if (negativePolicies >= 2) {
-            unitModelID = "olradin_mech_negative";
         } else {
-            unitModelID = "olradin_mech";
+            unitModelID = "olradin_mech_negative";
         }
         player.addOwnedUnitByID(unitModelID);
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(), msg);
@@ -1489,6 +1496,7 @@ public class ButtonHelperHeroes {
         ButtonHelper.deleteMessage(event);
     }
 
+    @ButtonHandler("cymiaeHeroStep1_")
     public static void resolveCymiaeHeroStart(String buttonID, ButtonInteractionEvent event, Game game,
         Player player) {
         String num = buttonID.split("_")[1];
@@ -1505,8 +1513,8 @@ public class ButtonHelperHeroes {
         ButtonHelper.deleteMessage(event);
     }
 
-    public static void resolveCymiaeHeroStep2(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("cymiaeHeroStep2_")
+    public static void resolveCymiaeHeroStep2(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         String acID = buttonID.replace("cymiaeHeroStep2_", "");
         List<Button> buttons = new ArrayList<>();
         for (Player p2 : game.getRealPlayers()) {
@@ -1521,13 +1529,13 @@ public class ButtonHelperHeroes {
         }
         ButtonHelper.deleteTheOneButton(event);
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " tell the bot who you want to give "
+            player.getRepresentationUnfogged() + " tell the bot who you want to give "
                 + Mapper.getActionCard(acID).getName(),
             buttons);
     }
 
-    public static void resolveCymiaeHeroStep3(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("cymiaeHeroStep3_")
+    public static void resolveCymiaeHeroStep3(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Player p2 = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         String acID = buttonID.replace("cymiaeHeroStep3_" + p2.getFaction() + "_", "");
         boolean picked = game.pickActionCard(p2.getUserID(), game.getDiscardActionCards().get(acID));
@@ -1544,32 +1552,26 @@ public class ButtonHelperHeroes {
             MessageHelper.sendMessageToChannel(p2.getCardsInfoThread(),
                 "The Voice United, the Cymiae hero, has given " + Mapper.getActionCard(acID).getName()
                     + " to you and you now have to discard 1A.C");
-            String msg = p2.getRepresentation(true, true) + " use buttons to discard.";
+            String msg = p2.getRepresentationUnfogged() + " use buttons to discard.";
             List<Button> buttons = ACInfo.getDiscardActionCardButtons(game, p2, false);
             MessageHelper.sendMessageToChannelWithButtons(p2.getCardsInfoThread(), msg, buttons);
         }
     }
 
-    public static void lastStepOfYinHero(String buttonID, ButtonInteractionEvent event, Game game, Player player,
-        String trueIdentity) {
+    @ButtonHandler("yinHeroInfantry_")
+    public static void lastStepOfYinHero(String buttonID, ButtonInteractionEvent event, Game game, Player player) {
         String planetNInf = buttonID.replace("yinHeroInfantry_", "");
         String planet = planetNInf.split("_")[0];
         String amount = planetNInf.split("_")[1];
         Tile tile = game.getTile(AliasHandler.resolveTile(planet));
-
-        new AddUnits().unitParsing(event, player.getColor(),
-            game.getTile(AliasHandler.resolveTile(planet)), amount + " inf " + planet,
-            game);
-        MessageHelper.sendMessageToChannel(event.getChannel(), trueIdentity + " Chose to land " + amount
-            + " infantry on " + Helper.getPlanetRepresentation(planet, game));
+        new AddUnits().unitParsing(event, player.getColor(), game.getTile(AliasHandler.resolveTile(planet)), amount + " inf " + planet, game);
+        MessageHelper.sendMessageToChannel(event.getChannel(), player.getFactionEmojiOrColor() + " Chose to land " + amount + " infantry on " + Helper.getPlanetRepresentation(planet, game));
         UnitHolder unitHolder = tile.getUnitHolders().get(planet);
         List<Player> players = ButtonHelper.getPlayersWithUnitsOnAPlanet(game, tile, unitHolder.getName());
         if (players.size() > 1) {
-            MessageHelper.sendMessageToChannel(player.getCorrectChannel(), player.getRepresentation()
-                + " Reminder that Dannel of the Tenth, the Yin hero, skips space cannon fire.");
+            MessageHelper.sendMessageToChannel(player.getCorrectChannel(), player.getRepresentation() + " Reminder that Dannel of the Tenth, the Yin hero, skips space cannon fire.");
             StartCombat.startGroundCombat(players.get(0), players.get(1), game, event, unitHolder, tile);
         }
-
         ButtonHelper.deleteMessage(event);
     }
 
@@ -1595,8 +1597,8 @@ public class ButtonHelperHeroes {
         Player origPlayer = player;
         Tile tile1 = game.getTileByPosition(pos1);
         List<Player> players2 = ButtonHelper.getOtherPlayersWithShipsInTheSystem(player, game, tile1);
-        if (players2.size() != 0) {
-            player = players2.get(0);
+        if (!players2.isEmpty()) {
+            player = players2.getFirst();
         }
         for (String pos2 : FoWHelper.getAdjacentTiles(game, pos1, player, false)) {
             if (pos1.equalsIgnoreCase(pos2)) {
@@ -1664,13 +1666,15 @@ public class ButtonHelperHeroes {
         return Helper.getTechButtons(techs, player, tech);
     }
 
+    @ButtonHandler("jnHeroSwapOut_")
     public static void resolveAJolNarSwapStep1(Player player, Game game, String buttonID, ButtonInteractionEvent event) {
         List<Button> buttons = getJolNarHeroSwapInOptions(player, game, buttonID);
-        String message = player.getRepresentation(true, true) + " select the tech you would like to acquire";
+        String message = player.getRepresentationUnfogged() + " select the tech you would like to acquire";
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(), message, buttons);
         ButtonHelper.deleteTheOneButton(event);
     }
 
+    @ButtonHandler("swapTechs_")
     public static void resolveAJolNarSwapStep2(Player player, Game game, String buttonID, ButtonInteractionEvent event) {
         String techOut = buttonID.split("__")[1];
         String techIn = buttonID.split("__")[2];
@@ -1689,8 +1693,8 @@ public class ButtonHelperHeroes {
         Tile tile1 = game.getTileByPosition(pos1);
         Tile tile2 = game.getTileByPosition(pos2);
         List<Player> players2 = ButtonHelper.getOtherPlayersWithShipsInTheSystem(player, game, tile1);
-        if (players2.size() != 0) {
-            player = players2.get(0);
+        if (!players2.isEmpty()) {
+            player = players2.getFirst();
         }
 
         game.setStoredValue("mahactHeroTarget", player.getFaction());
@@ -1764,8 +1768,8 @@ public class ButtonHelperHeroes {
 
     }
 
-    public static void getGhostHeroTilesStep2(Game game, Player player, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("creussHeroStep1_")
+    public static void getGhostHeroTilesStep2(Game game, Player player, ButtonInteractionEvent event, String buttonID) {
         String pos1 = buttonID.split("_")[1];
         List<Button> buttons = new ArrayList<>();
         Tile tile1 = game.getTileByPosition(pos1);
@@ -1780,7 +1784,7 @@ public class ButtonHelperHeroes {
             }
         }
         MessageHelper.sendMessageToChannelWithButtons(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " Chose the tile you want to swap places with "
+            player.getRepresentationUnfogged() + " Chose the tile you want to swap places with "
                 + tile1.getRepresentationForButtons(game, player),
             buttons);
         ButtonHelper.deleteMessage(event);
@@ -1807,6 +1811,7 @@ public class ButtonHelperHeroes {
         MessageHelper.sendMessageToChannel(vaden.getCorrectChannel(), "Use buttons to resolve", buttons);
     }
 
+    @ButtonHandler("vadenHeroClearDebt")
     public static void vadenHeroClearDebt(Game game, Player vaden, ButtonInteractionEvent event, String buttonID) {
         Player target = game.getPlayerFromColorOrFaction(buttonID.split("_")[1]);
         List<Button> buttons = new ArrayList<>();
@@ -1821,13 +1826,14 @@ public class ButtonHelperHeroes {
         MessageHelper.sendMessageToChannel(vaden.getCorrectChannel(),
             vaden.getRepresentation() + " returned 1 debt tokens owned by " + target.getRepresentation(false, true)
                 + " using Putriv Sirvonsk, the Vaden hero. Buttons have been sent to their cards info to resolve.");
-        MessageHelper.sendMessageToChannelWithButtons(target.getCardsInfoThread(), target.getRepresentation(true, true)
+        MessageHelper.sendMessageToChannelWithButtons(target.getCardsInfoThread(), target.getRepresentationUnfogged()
             + " please select something to give due to Putriv Sirvonsk, the Vaden hero, returning one of your tokens.", buttons);
         if (vaden.getDebtTokenCount(target.getColor()) == 0) {
             ButtonHelper.deleteTheOneButton(event);
         }
     }
 
+    @ButtonHandler("sendVadenHeroSomething_")
     public static void sendVadenHeroSomething(Player player, Game game, String buttonID,
         ButtonInteractionEvent event) {
         String tgOrComm = buttonID.split("_")[2];
@@ -1842,7 +1848,7 @@ public class ButtonHelperHeroes {
                 player.setTg(player.getTg() - 1);
             } else {
                 MessageHelper.sendMessageToChannel(event.getMessageChannel(),
-                    player.getRepresentation(true, true) + " you had no TGs to send, so no TGs have been sent.");
+                    player.getRepresentationUnfogged() + " you had no TGs to send, so no TGs have been sent.");
                 return;
             }
         } else {
@@ -1853,13 +1859,13 @@ public class ButtonHelperHeroes {
                     player.setCommodities(player.getCommodities() - 2);
                 } else {
                     MessageHelper.sendMessageToChannel(event.getMessageChannel(),
-                        player.getRepresentation(true, true) + " you didn't have 2 commodities to send, so no commodities were sent.");
+                        player.getRepresentationUnfogged() + " you didn't have 2 commodities to send, so no commodities were sent.");
                     return;
                 }
             } else {
                 msg = player.getRepresentation(false, true) + " will send 1 PN as a result of playing Putriv Sirvonsk, the Vaden Hero.";
                 List<Button> stuffToTransButtons = ButtonHelper.getForcedPNSendButtons(game, vaden, player);
-                String message = player.getRepresentation(true, true)
+                String message = player.getRepresentationUnfogged()
                     + " Please select the PN you would like to send";
                 MessageHelper.sendMessageToChannelWithButtons(player.getCardsInfoThread(), message,
                     stuffToTransButtons);
@@ -1893,8 +1899,8 @@ public class ButtonHelperHeroes {
         }
     }
 
-    public static void resolveWinnuHeroSC(Player player, Game game, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("winnuHero_")
+    public static void resolveWinnuHeroSC(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         Integer sc = Integer.parseInt(buttonID.split("_")[1]);
         SCPlay.playSC(event, sc, game, game.getMainGameChannel(), player, true);
         MessageHelper.sendMessageToChannel(game.getMainGameChannel(), game.getPing()
@@ -1917,7 +1923,7 @@ public class ButtonHelperHeroes {
         buttons.add(Buttons.red("deleteButtons", "Decline"));
         for (Player p2 : game.getRealPlayers()) {
             if (p2.hasLeaderUnlocked("mykomentorihero")) {
-                String msg = p2.getRepresentation(true, true)
+                String msg = p2.getRepresentationUnfogged()
                     + " you have the opportunity to use Coprinus Comatus, the Myko-Mentori hero, to grab the ability of the hero " + hero
                     + ". Use buttons to resolve";
                 MessageHelper.sendMessageToChannelWithButtons(p2.getCardsInfoThread(), msg, buttons);
@@ -1925,11 +1931,12 @@ public class ButtonHelperHeroes {
         }
     }
 
+    @ButtonHandler("yssarilHeroRejection_")
     public static void yssarilHeroRejection(Game game, Player player, ButtonInteractionEvent event, String buttonID) {
         String playerFaction = buttonID.replace("yssarilHeroRejection_", "");
         Player notYssaril = game.getPlayerFromColorOrFaction(playerFaction);
         if (notYssaril != null) {
-            String message = notYssaril.getRepresentation(true, true)
+            String message = notYssaril.getRepresentationUnfogged()
                 + " Kyver, Blade and Key, the Yssaril hero, has rejected your offering and is forcing you to discard 3 random ACs. The ACs have been automatically discarded.";
             MessageHelper.sendMessageToChannel(notYssaril.getCardsInfoThread(), message);
             new DiscardACRandom().discardRandomAC(event, game, notYssaril, 3);
@@ -1938,6 +1945,7 @@ public class ButtonHelperHeroes {
 
     }
 
+    @ButtonHandler("mykoheroSteal_")
     public static void resolveMykoHero(Game game, Player player, ButtonInteractionEvent event, String buttonID) {
         String hero = buttonID.split("_")[1];
         HeroPlay.playHero(event, game, player, player.unsafeGetLeader("mykomentorihero"));
@@ -1976,7 +1984,7 @@ public class ButtonHelperHeroes {
                 && !game.isHomebrewSCMode()) {
                 button = Buttons.gray("winnuHero_" + sc, label).withEmoji(scEmoji);
             } else {
-                button = Buttons.gray("winnuHero_" + sc, "" + sc + label);
+                button = Buttons.gray("winnuHero_" + sc, sc + label);
             }
             scButtons.add(button);
         }
@@ -1993,17 +2001,14 @@ public class ButtonHelperHeroes {
             scButtons.add(Buttons.green("diploRefresh2", "Ready 2 Planets"));
         }
         if (game.getScPlayed().get(3) == null || !game.getScPlayed().get(3)) {
-            scButtons.add(Buttons.gray("draw2 AC", "Draw 2 Action Cards")
-                .withEmoji(Emoji.fromFormatted(Emojis.ActionCard)));
+            scButtons.add(Buttons.gray("draw2 AC", "Draw 2 Action Cards", Emojis.ActionCard));
         }
         if (game.getScPlayed().get(4) == null || !game.getScPlayed().get(4)) {
-            scButtons.add(
-                Buttons.green("construction_spacedock", "Place 1 space dock").withEmoji(Emoji.fromFormatted(Emojis.spacedock)));
-            scButtons.add(Buttons.green("construction_pds", "Place 1 PDS").withEmoji(Emoji.fromFormatted(Emojis.pds)));
+            scButtons.add(Buttons.green("construction_spacedock", "Place 1 space dock", Emojis.spacedock));
+            scButtons.add(Buttons.green("construction_pds", "Place 1 PDS", Emojis.pds));
         }
         if (game.getScPlayed().get(5) == null || !game.getScPlayed().get(5)) {
-            scButtons.add(Buttons.gray("sc_refresh", "Replenish Commodities")
-                .withEmoji(Emoji.fromFormatted(Emojis.comm)));
+            scButtons.add(Buttons.gray("sc_refresh", "Replenish Commodities", Emojis.comm));
         }
         if (game.getScPlayed().get(6) == null || !game.getScPlayed().get(6)) {
             scButtons.add(Buttons.green("warfareBuild", "Build At Home"));
@@ -2012,17 +2017,16 @@ public class ButtonHelperHeroes {
             scButtons.add(Buttons.GET_A_TECH);
         }
         if (game.getScPlayed().get(8) == null || !game.getScPlayed().get(8)) {
-            scButtons.add(Buttons.gray("non_sc_draw_so", "Draw Secret Objective")
-                .withEmoji(Emoji.fromFormatted(Emojis.SecretObjective)));
+            scButtons.add(Buttons.gray("non_sc_draw_so", "Draw Secret Objective", Emojis.SecretObjective));
         }
         scButtons.add(Buttons.red("deleteButtons", "Done resolving"));
 
         return scButtons;
     }
 
-    public static void yssarilHeroInitialOffering(Game game, Player player, ButtonInteractionEvent event,
-        String buttonID, String buttonLabel) {
-
+    @ButtonHandler("yssarilHeroInitialOffering_")
+    public static void yssarilHeroInitialOffering(Game game, Player player, ButtonInteractionEvent event, String buttonID) {
+        String buttonLabel = event.getButton().getLabel();
         List<Button> acButtons = new ArrayList<>();
         buttonID = buttonID.replace("yssarilHeroInitialOffering_", "");
         String acID = buttonID.split("_")[0];
@@ -2034,11 +2038,10 @@ public class ButtonHelperHeroes {
                 offerName = player.getColor();
             }
             ButtonHelper.deleteMessage(event);
-            acButtons.add(Buttons.green("takeAC_" + acID + "_" + player.getFaction(), buttonLabel)
-                .withEmoji(Emoji.fromFormatted(Emojis.ActionCard)));
+            acButtons.add(Buttons.green("takeAC_" + acID + "_" + player.getFaction(), buttonLabel, Emojis.ActionCard));
             acButtons.add(Buttons.red("yssarilHeroRejection_" + player.getFaction(),
                 "Reject " + buttonLabel + " and force them to discard of 3 random ACs"));
-            String message = yssaril.getRepresentation(true, true) + " " + offerName
+            String message = yssaril.getRepresentationUnfogged() + " " + offerName
                 + " has offered you the action card " + buttonLabel
                 + " for Kyver, Blade and Key, the Yssaril hero. Use buttons to accept or reject it";
             MessageHelper.sendMessageToChannelWithButtons(yssaril.getCardsInfoThread(), message, acButtons);
@@ -2060,8 +2063,8 @@ public class ButtonHelperHeroes {
         }
     }
 
-    public static void resolveGhostHeroStep2(Game game, Player player, ButtonInteractionEvent event,
-        String buttonID) {
+    @ButtonHandler("creussHeroStep2_")
+    public static void resolveGhostHeroStep2(Game game, Player player, ButtonInteractionEvent event, String buttonID) {
         String position = buttonID.split("_")[1];
         String position2 = buttonID.split("_")[2];
         Tile tile = game.getTileByPosition(position);
@@ -2072,7 +2075,7 @@ public class ButtonHelperHeroes {
         game.setTile(tile2);
         game.rebuildTilePositionAutoCompleteList();
         MessageHelper.sendMessageToChannel(player.getCorrectChannel(),
-            player.getRepresentation(true, true) + " Chose to swap "
+            player.getRepresentationUnfogged() + " Chose to swap "
                 + tile2.getRepresentationForButtons(game, player) + " with "
                 + tile.getRepresentationForButtons(game, player));
         ButtonHelper.deleteMessage(event);
@@ -2081,26 +2084,29 @@ public class ButtonHelperHeroes {
     @ButtonHandler("yinHeroStart")
     public static void yinHeroStart(ButtonInteractionEvent event, Game game) {
         List<Button> buttons = AgendaHelper.getPlayerOutcomeButtons(game, null, "yinHeroTarget", null);
-        if (game.getTileByPosition("tl").getTileID().equalsIgnoreCase("82a")) {
+        if (game.getTileByPosition("tl") != null 
+            && game.getTileByPosition("tl").getTileID().equalsIgnoreCase("82a")) {
             buttons.add(Buttons.green("yinHeroPlanet_lockedmallice", "Invade Mallice"));
         }
         MessageHelper.sendMessageToChannelWithButtons(event.getChannel(), "Use buttons to select which player owns the planet you want to land on", buttons);
     }
 
-    public static void yinHeroTarget(ButtonInteractionEvent event, String buttonID, Game game, String finsFactionCheckerPrefix) {
+    @ButtonHandler("yinHeroTarget_")
+    public static void yinHeroTarget(ButtonInteractionEvent event, String buttonID, Game game, Player player) {
         String faction = buttonID.replace("yinHeroTarget_", "");
         List<Button> buttons = new ArrayList<>();
         Player target = game.getPlayerFromColorOrFaction(faction);
         if (target != null) {
             for (String planet : target.getPlanets()) {
-                buttons.add(Buttons.green(finsFactionCheckerPrefix + "yinHeroPlanet_" + planet, Helper.getPlanetRepresentation(planet, game)));
+                buttons.add(Buttons.green(player.getFinsFactionCheckerPrefix() + "yinHeroPlanet_" + planet, Helper.getPlanetRepresentation(planet, game)));
             }
             MessageHelper.sendMessageToChannelWithButtons(event.getChannel(), "Use buttons to select which planet to invade", buttons);
             ButtonHelper.deleteMessage(event);
         }
     }
 
-    public static void yinHeroPlanet(ButtonInteractionEvent event, String buttonID, Game game, String finsFactionCheckerPrefix, String trueIdentity) {
+    @ButtonHandler("yinHeroPlanet_")
+    public static void yinHeroPlanet(ButtonInteractionEvent event, String buttonID, Game game, Player player) {
         String planet = buttonID.replace("yinHeroPlanet_", "");
         if (planet.equalsIgnoreCase("lockedmallice")) {
             Tile tile = game.getTileFromPlanet("lockedmallice");
@@ -2111,14 +2117,10 @@ public class ButtonHelperHeroes {
             planet = "hexmallice";
             tile = MoveUnits.flipMallice(event, tile, game);
         }
-        MessageHelper.sendMessageToChannel(event.getChannel(),
-            trueIdentity + " Chose to invade " + Helper.getPlanetRepresentation(planet, game));
+        MessageHelper.sendMessageToChannel(event.getChannel(), player.getRepresentationUnfogged() + " Chose to invade " + Helper.getPlanetRepresentation(planet, game));
         List<Button> buttons = new ArrayList<>();
         for (int x = 1; x < 4; x++) {
-            buttons.add(Button
-                .success(finsFactionCheckerPrefix + "yinHeroInfantry_" + planet + "_" + x,
-                    "Land " + x + " infantry")
-                .withEmoji(Emoji.fromFormatted(Emojis.infantry)));
+            buttons.add(Buttons.green(player.getFinsFactionCheckerPrefix() + "yinHeroInfantry_" + planet + "_" + x, "Land " + x + " infantry", Emojis.infantry));
         }
         MessageHelper.sendMessageToChannelWithButtons(event.getChannel(),
             "Use buttons to select how many infantry you'd like to land on the planet", buttons);
