@@ -19,6 +19,7 @@ import ti4.draft.DraftBag;
 import ti4.draft.DraftItem;
 import ti4.generator.Mapper;
 import ti4.generator.PositionMapper;
+import ti4.listeners.annotations.ButtonHandler;
 import ti4.map.Game;
 import ti4.map.GameSaveLoadManager;
 import ti4.map.Player;
@@ -31,7 +32,7 @@ public class FrankenDraftHelper {
     public static List<Button> getSelectionButtons(List<DraftItem> draftables, Player player) {
         List<Button> buttons = new ArrayList<>();
         draftables.sort(Comparator.comparing(draftItem -> draftItem.ItemCategory));
-        DraftItem.Category lastCategory = draftables.get(0).ItemCategory;
+        DraftItem.Category lastCategory = draftables.getFirst().ItemCategory;
         int categoryCounter = 0;
         for (DraftItem item : draftables) {
             if (item.ItemCategory != lastCategory) {
@@ -51,6 +52,7 @@ public class FrankenDraftHelper {
         return buttons;
     }
 
+    @ButtonHandler("frankenDraftAction")
     public static void resolveFrankenDraftAction(Game game, Player player, ButtonInteractionEvent event, String buttonID) {
         String action = buttonID.split(";")[1];
         BagDraft draft = game.getActiveBagDraft();
@@ -130,7 +132,7 @@ public class FrankenDraftHelper {
         BagDraft draft = game.getActiveBagDraft();
         ThreadChannel bagChannel = draft.regenerateBagChannel(player);
         if (player.isReadyToPassBag()) {
-            MessageHelper.sendMessageToChannel(draft.findExistingBagChannel(player), player.getRepresentation(true, true) + " your Draft Bag is ready to pass and you are waiting for the other players to finish drafting.");
+            MessageHelper.sendMessageToChannel(draft.findExistingBagChannel(player), player.getRepresentationUnfogged() + " your Draft Bag is ready to pass and you are waiting for the other players to finish drafting.");
             return;
         }
 
@@ -146,9 +148,9 @@ public class FrankenDraftHelper {
         boolean isFirstDraft = player.getDraftHand().Contents.isEmpty();
         boolean isQueueFull = draftQueueCount >= draft.getPicksFromNextBags() && !isFirstDraft || draftQueueCount >= draft.getPicksFromFirstBag();
         if (draftables.isEmpty()) {
-            MessageHelper.sendMessageToChannel(bagChannel, player.getRepresentation(true, true) + " you cannot legally draft anything from this bag right now.");
+            MessageHelper.sendMessageToChannel(bagChannel, player.getRepresentationUnfogged() + " you cannot legally draft anything from this bag right now.");
         } else if (!isQueueFull) {
-            MessageHelper.sendMessageToChannelWithButtons(bagChannel, player.getRepresentation(true, true) + " please select an item to draft:", getSelectionButtons(draftables, player));
+            MessageHelper.sendMessageToChannelWithButtons(bagChannel, player.getRepresentationUnfogged() + " please select an item to draft:", getSelectionButtons(draftables, player));
         }
 
         if (draftQueueCount > 0) {
@@ -160,7 +162,7 @@ public class FrankenDraftHelper {
             MessageHelper.sendMessageToChannelWithButtons(bagChannel, "# __Queue:__\n> You are drafting the following from this bag:\n" + getDraftQueueRepresentation(game, player), queueButtons);
 
             if (isQueueFull || draftables.isEmpty()) {
-                MessageHelper.sendMessageToChannel(bagChannel, player.getRepresentation(true, true) + " please confirm or reset your draft picks.");
+                MessageHelper.sendMessageToChannel(bagChannel, player.getRepresentationUnfogged() + " please confirm or reset your draft picks.");
             }
         }
 
