@@ -4,6 +4,8 @@ import static org.apache.commons.collections4.CollectionUtils.*;
 
 import java.awt.Point;
 import java.lang.reflect.Field;
+import java.sql.Timestamp;
+import java.time.Instant;
 import java.time.LocalDate;
 import java.time.Period;
 import java.time.ZoneId;
@@ -19,6 +21,7 @@ import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Map.Entry;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
@@ -87,6 +90,7 @@ import ti4.model.StrategyCardModel;
 import ti4.model.StrategyCardSetModel;
 import ti4.model.TechnologyModel;
 import ti4.model.UnitModel;
+import ti4.website.WebsiteOverlay;
 
 public class Game extends GameProperties {
     // TODO (Jazz): Sort through these and add to GameProperties
@@ -180,16 +184,21 @@ public class Game extends GameProperties {
     }
 
     public void newGameSetup() {
-        setSecretObjectives(Mapper.getDecks().get("secret_objectives_pok").getNewShuffledDeck());
-        setActionCards(Mapper.getDecks().get("action_cards_pok").getNewShuffledDeck());
-        explore = Mapper.getDecks().get("explores_pok").getNewShuffledDeck();
-        publicObjectives1 = Mapper.getDecks().get("public_stage_1_objectives_pok").getNewShuffledDeck();
-        publicObjectives2 = Mapper.getDecks().get("public_stage_2_objectives_pok").getNewShuffledDeck();
-        setAgendas(Mapper.getDecks().get(getAgendaDeckID()).getNewShuffledDeck());
-        setEvents(new ArrayList<>());
-        relics = Mapper.getDecks().get(getRelicDeckID()).getNewShuffledDeck();
-        addCustomPO(Constants.CUSTODIAN, 1);
+        // Normal Decks
+        setPublicObjectives1(Mapper.getShuffledDeck("public_stage_1_objectives_pok"));
+        setPublicObjectives2(Mapper.getShuffledDeck("public_stage_2_objectives_pok"));
+        setSecretObjectives(Mapper.getShuffledDeck("secret_objectives_pok"));
+        setActionCards(Mapper.getShuffledDeck("action_cards_pok"));
+        setAgendas(Mapper.getShuffledDeck("agendas_pok"));
+        setExploreDeck(Mapper.getShuffledDeck("explores_pok"));
+        setRelics(Mapper.getShuffledDeck("relics_pok"));
         setStrategyCardSet("pok");
+
+        // OTHER
+        setEvents(new ArrayList<>()); // ignis_aurora
+        addCustomPO(Constants.CUSTODIAN, 1);
+        setUpPeakableObjectives(5, 1);
+        setUpPeakableObjectives(5, 2);
     }
 
     public void fixScrewedSOs() {
@@ -224,16 +233,50 @@ public class Game extends GameProperties {
 
     @JsonIgnore
     public Player setupNeutralPlayer(String color) {
-        addPlayer("572698679618568193", "Dicecord"); //Dicecord
-        Player neutral = getPlayer("572698679618568193");
+        if (players.get(Constants.dicecordId) != null)
+            return players.get(Constants.dicecordId);
+        addPlayer(Constants.dicecordId, "Dicecord"); //Dicecord
+        Player neutral = getPlayer(Constants.dicecordId);
         neutral.setColor(color);
         neutral.setFaction("neutral");
         neutral.setDummy(true);
         FactionModel setupInfo = neutral.getFactionSetupInfo();
         Set<String> playerOwnedUnits = new HashSet<>(setupInfo.getUnits());
         neutral.setUnitsOwned(playerOwnedUnits);
-
         return neutral;
+    }
+
+    @JsonIgnore
+    public Player getNeutralPlayer(String fallbackColor) {
+        if (players.get(Constants.dicecordId) != null)
+            return players.get(Constants.dicecordId);
+        return setupNeutralPlayer(fallbackColor);
+    }
+
+    @JsonIgnore
+    public Player getNeutralPlayer() {
+        if (players.get(Constants.dicecordId) != null)
+            return players.get(Constants.dicecordId);
+        return null;
+    }
+
+    public String pickNeutralColorID(List<String> exclusions) {
+        // Start with the preferred colors, but then add all the colors to the list anyway
+        List<String> colorPriority = new ArrayList<>(List.of("gray", "red", "blue", "green", "orange", "yellow", "black", "pink", "purple", "rose", "lime", "brown", "teal", "spring", "petrol", "lightgray"));
+        colorPriority.addAll(Mapper.getColorNames());
+        List<String> preferredNeutralColors = new ArrayList<>(colorPriority.stream().map(Mapper::getColorID).toList());
+
+        // Build the full set of exclusions based on the argument plus the list of players
+        Set<String> excludedColorIDs = new HashSet<>();
+        if (exclusions != null) excludedColorIDs.addAll(exclusions);
+        excludedColorIDs.addAll(getPlayers().values().stream().map(Player::getColorID).toList());
+
+        // Finally, pick a color
+        String neutralColorID = preferredNeutralColors.stream().filter(colorID -> !excludedColorIDs.contains(colorID)).findFirst().orElse(null);
+        if (neutralColorID == null) {
+            MessageHelper.sendMessageToChannel(getActionsChannel(), "Could not determine a good neutral unit color " + Constants.jazzPing());
+        }
+        return neutralColorID;
     }
 
     public int getNumberOfSOsInTheDeck() {
@@ -356,6 +399,11 @@ public class Game extends GameProperties {
     }
 
     @JsonIgnore
+    public boolean hasWinner() {
+        return getWinner().isPresent();
+    }
+
+    @JsonIgnore
     public Optional<Player> getWinner() {
         Player winner = null;
         for (Player player : getRealPlayersNDummies()) {
@@ -466,7 +514,7 @@ public class Game extends GameProperties {
                 put("FoW", isFowMode());
                 put("Franken", isFrankenGame());
                 put(Emojis.Absol + "Absol", isAbsolMode());
-                put("Cryypter", isCryypterMode());
+                put("VotC", isVotcMode());
                 put(Emojis.DiscordantStars + "DiscordantStars", isDiscordantStarsMode());
                 put("HomebrewSC", isHomebrewSCMode());
                 put("Little Omega", isLittleOmega());
@@ -477,7 +525,7 @@ public class Game extends GameProperties {
         for (String tag : getTags()) {
             gameModes.put(tag, true);
         }
-        return gameModes.entrySet().stream().filter(Map.Entry::getValue).map(Map.Entry::getKey)
+        return gameModes.entrySet().stream().filter(Entry::getValue).map(Entry::getKey)
             .collect(Collectors.joining(", "));
     }
 
@@ -501,7 +549,7 @@ public class Game extends GameProperties {
                 .filter(Predicate.not(c -> c.getName().contains(Constants.ACTIONS_CHANNEL_SUFFIX)))
                 .toList();
             if (gameChannels.size() == 1) {
-                tableTalkChannel = gameChannels.get(0);
+                tableTalkChannel = gameChannels.getFirst();
                 setTableTalkChannelID(tableTalkChannel.getId());
                 return tableTalkChannel;
             }
@@ -518,7 +566,7 @@ public class Game extends GameProperties {
             List<TextChannel> gameChannels = AsyncTI4DiscordBot.jda
                 .getTextChannelsByName(getName() + Constants.ACTIONS_CHANNEL_SUFFIX, true);
             if (gameChannels.size() == 1) {
-                TextChannel mainGameChannel = gameChannels.get(0);
+                TextChannel mainGameChannel = gameChannels.getFirst();
                 setMainChannelID(mainGameChannel.getId());
                 return mainGameChannel;
             }
@@ -558,10 +606,10 @@ public class Game extends GameProperties {
         // FIND BY NAME
         List<ThreadChannel> botChannels = AsyncTI4DiscordBot.jda.getThreadChannelsByName(getName() + Constants.BOT_CHANNEL_SUFFIX, true);
         if (botChannels.size() == 1) {
-            return botChannels.get(0);
+            return botChannels.getFirst();
         } else if (botChannels.size() > 1) {
             BotLogger.log(getName() + " appears to have more than one bot-map-updates channel:\n" + botChannels.stream().map(ThreadChannel::getJumpUrl).collect(Collectors.joining("\n")));
-            return botChannels.get(0);
+            return botChannels.getFirst();
         }
 
         // CHECK IF ARCHIVED
@@ -582,9 +630,7 @@ public class Game extends GameProperties {
     public ThreadChannel getLaunchPostThread() {
         if (StringUtils.isNumeric(getLaunchPostThreadID())) {
             ThreadChannel threadChannel = AsyncTI4DiscordBot.guildPrimary.getThreadChannelById(getLaunchPostThreadID());
-            if (threadChannel != null) {
-                return threadChannel;
-            }
+            return threadChannel;
         }
         return null;
     }
@@ -637,13 +683,8 @@ public class Game extends GameProperties {
     }
 
     public void clearAllEmptyStoredValues() {
-        java.util.Iterator<Map.Entry<String, String>> iterator = checkingForAllReacts.entrySet().iterator();
-        while (iterator.hasNext()) {
-            Map.Entry<String, String> entry = iterator.next();
-            if (entry.getValue() == null || entry.getValue().isEmpty()) {
-                iterator.remove(); // Remove the entry if the value is empty  
-            }
-        }
+        // Remove the entry if the value is empty
+        checkingForAllReacts.entrySet().removeIf(entry -> entry.getValue() == null || entry.getValue().isEmpty());
     }
 
     public void setStoredValue(String key, String value) {
@@ -666,7 +707,7 @@ public class Game extends GameProperties {
 
     @JsonIgnore
     public Set<Integer> getPlayedSCs() {
-        return getScPlayed().entrySet().stream().filter(Map.Entry::getValue).map(Map.Entry::getKey)
+        return getScPlayed().entrySet().stream().filter(Entry::getValue).map(Entry::getKey)
             .collect(Collectors.toSet());
     }
 
@@ -678,7 +719,7 @@ public class Game extends GameProperties {
         List<Integer> orderedSCs = new ArrayList<>();
         int playerSC = player.getLowestSC();
         String scText = playerSC + "";
-        if (player != null && !scText.equalsIgnoreCase(getSCNumberIfNaaluInPlay(player, scText))) {
+        if (!scText.equalsIgnoreCase(getSCNumberIfNaaluInPlay(player, scText))) {
             playerSC = 0;
         }
         for (int sc : orderedSCsBasic) {
@@ -727,6 +768,22 @@ public class Game extends GameProperties {
         return null;
     }
 
+    public int getActionPhaseTurnOrder(String userId) {
+        return getActionPhaseTurnOrder().stream()
+            .map(Player::getUserID)
+            .toList()
+            .indexOf(userId);
+    }
+
+    public List<Player> getActionPhaseTurnOrder() {
+        return players.values().stream()
+            .filter(player -> !player.getSCs().isEmpty())
+            .map(player -> new ImmutablePair<>(player, Collections.min(player.getSCs())))
+            .sorted((p1, p2) -> p1.getLeft().hasTheZeroToken() ? -1 : p2.getLeft().hasTheZeroToken() ? 1 : Integer.compare(p1.getRight(), p2.getRight()))
+            .map(ImmutablePair::getLeft)
+            .toList();
+    }
+
     public DisplayType getDisplayTypeForced() {
         return displayTypeForced;
     }
@@ -768,19 +825,19 @@ public class Game extends GameProperties {
 
     public void addPlayersWhoHitPersistentNoAfter(String faction) {
         String existing = getPlayersWhoHitPersistentNoAfter();
-        if (existing != null && existing.length() > 0) existing += "_";
+        if (existing != null && !existing.isEmpty()) existing += "_";
         setPlayersWhoHitPersistentNoAfter(existing + faction);
     }
 
     public void addPlayersWhoHitPersistentNoWhen(String faction) {
         String existing = getPlayersWhoHitPersistentNoWhen();
-        if (existing != null && existing.length() > 0) existing += "_";
+        if (existing != null && !existing.isEmpty()) existing += "_";
         setPlayersWhoHitPersistentNoWhen(existing + faction);
     }
 
     public void removePlayersWhoHitPersistentNoAfter(String faction) {
         String existing = getPlayersWhoHitPersistentNoAfter();
-        if (existing != null && existing.length() > 0) {
+        if (existing != null && !existing.isEmpty()) {
             if (existing.contains(faction + "_")) {
                 faction = faction + "_";
             }
@@ -791,7 +848,7 @@ public class Game extends GameProperties {
 
     public void removePlayersWhoHitPersistentNoWhen(String faction) {
         String existing = getPlayersWhoHitPersistentNoWhen();
-        if (existing != null && existing.length() > 0) {
+        if (existing != null && !existing.isEmpty()) {
             if (existing.contains(faction + "_")) {
                 faction = faction + "_";
             }
@@ -805,6 +862,15 @@ public class Game extends GameProperties {
         return getPlayer(getActivePlayerID());
     }
 
+    @JsonIgnore
+    public Player getSpeaker() {
+        return getPlayer(getSpeakerUserID());
+    }
+
+    public void setSpeaker(Player speaker) {
+        setSpeakerUserID(speaker.getUserID());
+    }
+
     public Map<String, Integer> getCurrentMovedUnitsFrom1System() {
         return displacedUnitsFrom1System;
     }
@@ -814,11 +880,7 @@ public class Game extends GameProperties {
     }
 
     public int getSpecificThalnosUnit(String unit) {
-        if (thalnosUnits.containsKey(unit)) {
-            return thalnosUnits.get(unit);
-        } else {
-            return 0;
-        }
+        return thalnosUnits.getOrDefault(unit, 0);
     }
 
     public Map<String, Integer> getAllSlashCommandsUsed() {
@@ -894,7 +956,8 @@ public class Game extends GameProperties {
         Date newTime = new Date();
         String factionsInCombat = getStoredValue("factionsInCombat");
         Player prevPlayer = getActivePlayer();
-        if (prevPlayer != null && !factionsInCombat.contains(prevPlayer.getFaction()) && !isTemporaryPingDisable()) {
+        String prevFaction = (prevPlayer != null && prevPlayer.getFaction() != null) ? prevPlayer.getFaction() : "jazzwuzhere&p1too";
+        if (prevPlayer != null && !factionsInCombat.contains(prevFaction) && !isTemporaryPingDisable()) {
             long elapsedTime = newTime.getTime() - lastActivePlayerChange.getTime();
             prevPlayer.updateTurnStats(elapsedTime);
         } else {
@@ -999,6 +1062,9 @@ public class Game extends GameProperties {
         publicObjectives2Peeked.remove(id);
     }
 
+    /**
+     * @return Map of (scInitiativeNum, tradeGoodCount)
+     */
     public Map<Integer, Integer> getScTradeGoods() {
         return scTradeGoods;
     }
@@ -1017,7 +1083,7 @@ public class Game extends GameProperties {
                 ButtonHelperAbilities.pillageCheck(player, this);
                 ButtonHelperAgents.resolveArtunoCheck(player, this, tradeGoodCount);
                 tradeGoodCount = 0;
-                MessageHelper.sendMessageToChannel(getActionsChannel(), "The " + (tradeGoodCount == 1 ? "TG" : tradeGoodCount + "TGs")
+                MessageHelper.sendMessageToChannel(getActionsChannel(), "The " + tradeGoodCount + "TGs"
                     + " that would be placed on the SC " + sc + " have instead been given to the Kyro Hero player, as per Kyro Hero text");
             }
         }
@@ -1028,13 +1094,13 @@ public class Game extends GameProperties {
         Set<Integer> scPickedList = new HashSet<>();
         for (Player player_ : getRealPlayers()) {
             scPickedList.addAll(player_.getSCs());
-            if (player_.getSCs().size() > 0) {
-                String scs = "";
+            if (!player_.getSCs().isEmpty()) {
+                StringBuilder scs = new StringBuilder();
                 for (int SC : player_.getSCs()) {
-                    scs = scs + SC + "_";
+                    scs.append(SC).append("_");
                 }
-                scs = scs.substring(0, scs.length() - 1);
-                setStoredValue("Round" + getRound() + "SCPickFor" + player_.getFaction(), scs);
+                scs = new StringBuilder(scs.substring(0, scs.length() - 1));
+                setStoredValue("Round" + getRound() + "SCPickFor" + player_.getFaction(), scs.toString());
             }
         }
 
@@ -1054,8 +1120,8 @@ public class Game extends GameProperties {
         if (!scTradeGoods.containsKey(sc)) {
             setScTradeGood(sc, 0);
             return true;
-        } else
-            return false;
+        }
+        return false;
     }
 
     public boolean removeSC(Integer sc) {
@@ -1123,12 +1189,12 @@ public class Game extends GameProperties {
         if (type == 1) {
             while (publicObjectives1Peakable.size() != num) {
                 if (publicObjectives1Peakable.size() > num) {
-                    String id = publicObjectives1Peakable.remove(publicObjectives1Peakable.size() - 1);
+                    String id = publicObjectives1Peakable.removeLast();
                     publicObjectives1.add(id);
                     Collections.shuffle(publicObjectives1);
                 } else {
                     Collections.shuffle(publicObjectives1);
-                    String id = publicObjectives1.get(0);
+                    String id = publicObjectives1.getFirst();
                     publicObjectives1.remove(id);
                     publicObjectives1Peakable.add(id);
                 }
@@ -1136,12 +1202,12 @@ public class Game extends GameProperties {
         } else {
             while (publicObjectives2Peakable.size() != num) {
                 if (publicObjectives2Peakable.size() > num) {
-                    String id = publicObjectives2Peakable.remove(publicObjectives2Peakable.size() - 1);
+                    String id = publicObjectives2Peakable.removeLast();
                     publicObjectives2.add(id);
                     Collections.shuffle(publicObjectives2);
                 } else {
                     Collections.shuffle(publicObjectives2);
-                    String id = publicObjectives2.get(0);
+                    String id = publicObjectives2.getFirst();
                     publicObjectives2.remove(id);
                     publicObjectives2Peakable.add(id);
                 }
@@ -1154,13 +1220,13 @@ public class Game extends GameProperties {
             for (int x = 0; x < num; x++) {
                 if (!publicObjectives1.isEmpty()) {
                     Collections.shuffle(publicObjectives1);
-                    String id = publicObjectives1.get(0);
+                    String id = publicObjectives1.getFirst();
                     publicObjectives1.remove(id);
                     publicObjectives1Peakable.add(id);
                 }
                 if (!publicObjectives2.isEmpty()) {
                     Collections.shuffle(publicObjectives2);
-                    String id = publicObjectives2.get(0);
+                    String id = publicObjectives2.getFirst();
                     publicObjectives2.remove(id);
                     publicObjectives2Peakable.add(id);
                 }
@@ -1196,11 +1262,11 @@ public class Game extends GameProperties {
         return objective;
     }
 
-    public Map.Entry<String, Integer> revealSpecificStage1(String id) {
+    public Entry<String, Integer> revealSpecificStage1(String id) {
         return revealSpecificObjective(publicObjectives1, id);
     }
 
-    public Map.Entry<String, Integer> revealSpecificStage2(String id) {
+    public Entry<String, Integer> revealSpecificStage2(String id) {
         return revealSpecificObjective(publicObjectives2, id);
     }
 
@@ -1245,11 +1311,11 @@ public class Game extends GameProperties {
 
     public String getTopObjective(int stage1Or2) {
         if (stage1Or2 == 1) {
-            String id = publicObjectives1.get(0);
+            String id = publicObjectives1.getFirst();
             publicObjectives1.remove(id);
             return id;
         } else {
-            String id = publicObjectives2.get(0);
+            String id = publicObjectives2.getFirst();
             publicObjectives2.remove(id);
             return id;
         }
@@ -1268,18 +1334,18 @@ public class Game extends GameProperties {
         }
     }
 
-    public Map.Entry<String, Integer> revealObjective(List<String> objectiveList) {
+    public Entry<String, Integer> revealObjective(List<String> objectiveList) {
         if (!objectiveList.isEmpty()) {
-            String id = objectiveList.get(0);
+            String id = objectiveList.getFirst();
             objectiveList.remove(id);
             int counter = 20;
-            while (revealedPublicObjectives.keySet().contains(id) && objectiveList.size() > 1 && counter > 0) {
-                id = objectiveList.get(0);
+            while (revealedPublicObjectives.containsKey(id) && objectiveList.size() > 1 && counter > 0) {
+                id = objectiveList.getFirst();
                 objectiveList.remove(id);
                 counter = counter - 1;
             }
             addRevealedPublicObjective(id);
-            for (Map.Entry<String, Integer> entry : revealedPublicObjectives.entrySet()) {
+            for (Entry<String, Integer> entry : revealedPublicObjectives.entrySet()) {
                 if (entry.getKey().equals(id)) {
                     return entry;
                 }
@@ -1288,11 +1354,11 @@ public class Game extends GameProperties {
         return null;
     }
 
-    public Map.Entry<String, Integer> revealSpecificObjective(List<String> objectiveList, String id) {
+    public Entry<String, Integer> revealSpecificObjective(List<String> objectiveList, String id) {
         if (objectiveList.contains(id)) {
             objectiveList.remove(id);
             addRevealedPublicObjective(id);
-            for (Map.Entry<String, Integer> entry : revealedPublicObjectives.entrySet()) {
+            for (Entry<String, Integer> entry : revealedPublicObjectives.entrySet()) {
                 if (entry.getKey().equals(id)) {
                     return entry;
                 }
@@ -1301,19 +1367,19 @@ public class Game extends GameProperties {
         return null;
     }
 
-    public Map.Entry<String, Integer> addSpecificStage1(String objective) {
+    public Entry<String, Integer> addSpecificStage1(String objective) {
         return addSpecificObjective(publicObjectives1, objective);
     }
 
-    public Map.Entry<String, Integer> addSpecificStage2(String objective) {
+    public Entry<String, Integer> addSpecificStage2(String objective) {
         return addSpecificObjective(publicObjectives2, objective);
     }
 
-    public Map.Entry<String, Integer> addSpecificObjective(List<String> objectiveList, String objective) {
+    public Entry<String, Integer> addSpecificObjective(List<String> objectiveList, String objective) {
         if (!objectiveList.isEmpty()) {
             objectiveList.remove(objective);
             addRevealedPublicObjective(objective);
-            for (Map.Entry<String, Integer> entry : revealedPublicObjectives.entrySet()) {
+            for (Entry<String, Integer> entry : revealedPublicObjectives.entrySet()) {
                 if (entry.getKey().equals(objective)) {
                     return entry;
                 }
@@ -1324,7 +1390,7 @@ public class Game extends GameProperties {
 
     public boolean shuffleObjectiveBackIntoDeck(Integer idNumber) {
         String id = "";
-        for (Map.Entry<String, Integer> po : revealedPublicObjectives.entrySet()) {
+        for (Entry<String, Integer> po : revealedPublicObjectives.entrySet()) {
             if (po.getValue().equals(idNumber)) {
                 id = po.getKey();
                 break;
@@ -1361,8 +1427,8 @@ public class Game extends GameProperties {
         }
         if (!idC.isEmpty()) {
             List<String> scoredPlayerList = scoredPublicObjectives.computeIfAbsent(idC, key -> new ArrayList<>());
-            if (scoredPlayerList.size() > 0) {
-                String playerID = scoredPlayerList.get(0);
+            if (!scoredPlayerList.isEmpty()) {
+                String playerID = scoredPlayerList.getFirst();
                 for (Player player : getRealAndEliminatedPlayers()) {
                     if (player.getUserID().equalsIgnoreCase(playerID)) {
                         return player.getFaction();
@@ -1377,7 +1443,7 @@ public class Game extends GameProperties {
     public boolean isCustodiansScored() {
         boolean custodiansTaken = false;
         String idC = "";
-        for (Map.Entry<String, Integer> po : revealedPublicObjectives.entrySet()) {
+        for (Entry<String, Integer> po : revealedPublicObjectives.entrySet()) {
             if (po.getValue().equals(0)) {
                 idC = po.getKey();
                 break;
@@ -1393,7 +1459,7 @@ public class Game extends GameProperties {
             }
         }
 
-        if (getRound() > 1 && discardAgendas.size() > 0) {
+        if (getRound() > 1 && !discardAgendas.isEmpty()) {
             custodiansTaken = true;
         }
         for (Player p : getRealPlayers()) {
@@ -1406,7 +1472,7 @@ public class Game extends GameProperties {
 
     public boolean scorePublicObjective(String userID, Integer idNumber) {
         String id = "";
-        for (Map.Entry<String, Integer> po : revealedPublicObjectives.entrySet()) {
+        for (Entry<String, Integer> po : revealedPublicObjectives.entrySet()) {
             if (po.getValue().equals(idNumber)) {
                 id = po.getKey();
                 break;
@@ -1431,7 +1497,7 @@ public class Game extends GameProperties {
 
     public boolean scorePublicObjectiveEvenIfAlreadyScored(String userID, Integer idNumber) {
         String id = "";
-        for (Map.Entry<String, Integer> po : revealedPublicObjectives.entrySet()) {
+        for (Entry<String, Integer> po : revealedPublicObjectives.entrySet()) {
             if (po.getValue().equals(idNumber)) {
                 id = po.getKey();
                 break;
@@ -1448,7 +1514,7 @@ public class Game extends GameProperties {
 
     public boolean unscorePublicObjective(String userID, Integer idNumber) {
         String id = "";
-        for (Map.Entry<String, Integer> po : revealedPublicObjectives.entrySet()) {
+        for (Entry<String, Integer> po : revealedPublicObjectives.entrySet()) {
             if (po.getValue().equals(idNumber)) {
                 id = po.getKey();
                 break;
@@ -1487,7 +1553,7 @@ public class Game extends GameProperties {
 
     public boolean removeCustomPO(Integer idNumber) {
         String id = "";
-        for (Map.Entry<String, Integer> po : revealedPublicObjectives.entrySet()) {
+        for (Entry<String, Integer> po : revealedPublicObjectives.entrySet()) {
             if (po.getValue().equals(idNumber)) {
                 id = po.getKey();
                 break;
@@ -1599,6 +1665,9 @@ public class Game extends GameProperties {
         soToPoList.remove(id);
     }
 
+    /**
+     * @return Map of (ObjectiveModelID or ProperName if Custom, List of ({@link Player#getUserID}))
+     */
     public Map<String, List<String>> getScoredPublicObjectives() {
         return scoredPublicObjectives;
     }
@@ -1684,18 +1753,15 @@ public class Game extends GameProperties {
     }
 
     public void resetAgendas() {
-        setAgendas(Mapper.getDecks().get(getAgendaDeckID()).getNewShuffledDeck());
-        discardAgendas = new LinkedHashMap<>();
+        setAgendas(Mapper.getShuffledDeck(getAgendaDeckID()));
+        setDiscardAgendas(new LinkedHashMap<>());
     }
 
     public void resetEvents() {
-        DeckModel eventDeckModel = Mapper.getDecks().get(getEventDeckID());
-        if (eventDeckModel == null) {
-            setEvents(new ArrayList<>());
-        } else {
-            setEvents(eventDeckModel.getNewShuffledDeck());
-        }
-        discardedEvents = new LinkedHashMap<>();
+        if (Mapper.getDeck(getEventDeckID()) == null)
+            return;
+        setEvents(Mapper.getShuffledDeck(getEventDeckID()));
+        setDiscardedEvents(new LinkedHashMap<>());
     }
 
     public void resetDrawStateAgendas() {
@@ -1746,7 +1812,7 @@ public class Game extends GameProperties {
 
     public boolean addEventInEffect(Integer idNumber) {
         String id = "";
-        for (Map.Entry<String, Integer> event : discardedEvents.entrySet()) {
+        for (Entry<String, Integer> event : discardedEvents.entrySet()) {
             if (event.getValue().equals(idNumber)) {
                 id = event.getKey();
                 break;
@@ -1767,14 +1833,13 @@ public class Game extends GameProperties {
 
     public boolean addLaw(Integer idNumber, String optionalText) {
         String id = "";
-        for (Map.Entry<String, Integer> agendas : discardAgendas.entrySet()) {
+        for (Entry<String, Integer> agendas : discardAgendas.entrySet()) {
             if (agendas.getValue().equals(idNumber)) {
                 id = agendas.getKey();
                 break;
             }
         }
         if (!id.isEmpty()) {
-
             Collection<Integer> values = laws.values();
             int identifier = ThreadLocalRandom.current().nextInt(1000);
             while (values.contains(identifier)) {
@@ -1787,8 +1852,8 @@ public class Game extends GameProperties {
             }
             if (getLaws().size() > 2) {
                 for (Player p : getRealPlayers()) {
-                    if (p.getSecretsUnscored().keySet().contains("dp")) {
-                        MessageHelper.sendMessageToChannel(p.getCardsInfoThread(), p.getRepresentation(true, true) + " reminder that you have dictate policy and a 3rd law just got put into play");
+                    if (p.getSecretsUnscored().containsKey("dp")) {
+                        MessageHelper.sendMessageToChannel(p.getCardsInfoThread(), p.getRepresentationUnfogged() + " reminder that you have dictate policy and a 3rd law just got put into play");
                     }
                 }
             }
@@ -1798,9 +1863,8 @@ public class Game extends GameProperties {
     }
 
     public boolean reviseLaw(Integer idNumber, String optionalText) {
-
         String id = "";
-        for (Map.Entry<String, Integer> ac : laws.entrySet()) {
+        for (Entry<String, Integer> ac : laws.entrySet()) {
             if (ac.getValue().equals(idNumber)) {
                 id = ac.getKey();
                 break;
@@ -1818,7 +1882,7 @@ public class Game extends GameProperties {
             lawsInfo.remove(id);
             idNumber = addDiscardAgenda(id);
         }
-        for (Map.Entry<String, Integer> agendas : discardAgendas.entrySet()) {
+        for (Entry<String, Integer> agendas : discardAgendas.entrySet()) {
             if (agendas.getValue().equals(idNumber)) {
                 id = agendas.getKey();
                 break;
@@ -1842,7 +1906,7 @@ public class Game extends GameProperties {
 
     public boolean shuffleEventBackIntoDeck(Integer idNumber) {
         String id = "";
-        for (Map.Entry<String, Integer> event : discardedEvents.entrySet()) {
+        for (Entry<String, Integer> event : discardedEvents.entrySet()) {
             if (event.getValue().equals(idNumber)) {
                 id = event.getKey();
                 break;
@@ -1858,8 +1922,7 @@ public class Game extends GameProperties {
     }
 
     public void shuffleAllAgendasBackIntoDeck() {
-        List<String> discardedAgendasIDs = new ArrayList<>();
-        discardedAgendasIDs.addAll(discardAgendas.keySet());
+        List<String> discardedAgendasIDs = new ArrayList<>(discardAgendas.keySet());
         for (String id : discardedAgendasIDs) {
             discardAgendas.remove(id);
             getAgendas().add(id);
@@ -1869,7 +1932,7 @@ public class Game extends GameProperties {
 
     public boolean shuffleAgendaBackIntoDeck(Integer idNumber) {
         String id = "";
-        for (Map.Entry<String, Integer> agendas : discardAgendas.entrySet()) {
+        for (Entry<String, Integer> agendas : discardAgendas.entrySet()) {
             if (agendas.getValue().equals(idNumber)) {
                 id = agendas.getKey();
                 break;
@@ -1886,7 +1949,7 @@ public class Game extends GameProperties {
 
     public boolean putEventBackIntoDeckOnTop(Integer idNumber) {
         String id = "";
-        for (Map.Entry<String, Integer> event : discardedEvents.entrySet()) {
+        for (Entry<String, Integer> event : discardedEvents.entrySet()) {
             if (event.getValue().equals(idNumber)) {
                 id = event.getKey();
                 break;
@@ -1894,7 +1957,7 @@ public class Game extends GameProperties {
         }
         if (!id.isEmpty()) {
             discardedEvents.remove(id);
-            getEvents().add(0, id);
+            getEvents().addFirst(id);
             return true;
         }
         return false;
@@ -1902,7 +1965,7 @@ public class Game extends GameProperties {
 
     public boolean putAgendaBackIntoDeckOnTop(Integer idNumber) {
         String id = "";
-        for (Map.Entry<String, Integer> entry : discardAgendas.entrySet()) {
+        for (Entry<String, Integer> entry : discardAgendas.entrySet()) {
             if (entry.getValue().equals(idNumber)) {
                 id = entry.getKey();
                 break;
@@ -1910,7 +1973,7 @@ public class Game extends GameProperties {
         }
         if (!id.isEmpty()) {
             discardAgendas.remove(id);
-            getAgendas().add(0, id);
+            getAgendas().addFirst(id);
             return true;
         }
         return false;
@@ -1919,7 +1982,7 @@ public class Game extends GameProperties {
     public boolean putAgendaBackIntoDeckOnTop(String id) {
         if (!id.isEmpty()) {
             discardAgendas.remove(id);
-            getAgendas().add(0, id);
+            getAgendas().addFirst(id);
             return true;
         }
         return false;
@@ -1927,7 +1990,7 @@ public class Game extends GameProperties {
 
     public boolean removeEventInEffect(Integer idNumber) {
         String id = "";
-        for (Map.Entry<String, Integer> event : eventsInEffect.entrySet()) {
+        for (Entry<String, Integer> event : eventsInEffect.entrySet()) {
             if (event.getValue().equals(idNumber)) {
                 id = event.getKey();
                 break;
@@ -1943,7 +2006,7 @@ public class Game extends GameProperties {
 
     public boolean removeLaw(Integer idNumber) {
         String id = "";
-        for (Map.Entry<String, Integer> ac : laws.entrySet()) {
+        for (Entry<String, Integer> ac : laws.entrySet()) {
             if (ac.getValue().equals(idNumber)) {
                 id = ac.getKey();
                 break;
@@ -2006,14 +2069,14 @@ public class Game extends GameProperties {
     public boolean putEventTop(Integer idNumber, Player player) {
         if (player.getEvents().containsValue(idNumber)) {
             String id = "";
-            for (Map.Entry<String, Integer> event : player.getEvents().entrySet()) {
+            for (Entry<String, Integer> event : player.getEvents().entrySet()) {
                 if (event.getValue().equals(idNumber)) {
                     id = event.getKey();
                     break;
                 }
             }
             if (!id.isEmpty()) {
-                getEvents().add(0, id);
+                getEvents().addFirst(id);
                 player.removeEvent(id);
                 return true;
             }
@@ -2024,7 +2087,7 @@ public class Game extends GameProperties {
     public boolean putEventBottom(Integer idNumber, Player player) {
         if (player.getEvents().containsValue(idNumber)) {
             String id = "";
-            for (Map.Entry<String, Integer> event : player.getEvents().entrySet()) {
+            for (Entry<String, Integer> event : player.getEvents().entrySet()) {
                 if (event.getValue().equals(idNumber)) {
                     id = event.getKey();
                     break;
@@ -2042,7 +2105,7 @@ public class Game extends GameProperties {
     public boolean putAgendaTop(Integer idNumber) {
         if (sentAgendas.containsValue(idNumber)) {
             String id = "";
-            for (Map.Entry<String, Integer> entry : sentAgendas.entrySet()) {
+            for (Entry<String, Integer> entry : sentAgendas.entrySet()) {
                 if (entry.getValue().equals(idNumber)) {
                     id = entry.getKey();
                     break;
@@ -2050,7 +2113,7 @@ public class Game extends GameProperties {
             }
             if (!id.isEmpty()) {
                 getAgendas().remove(id);
-                getAgendas().add(0, id);
+                getAgendas().addFirst(id);
                 sentAgendas.remove(id);
                 return true;
             }
@@ -2061,7 +2124,7 @@ public class Game extends GameProperties {
     public boolean putAgendaBottom(Integer idNumber) {
         if (sentAgendas.containsValue(idNumber)) {
             String id = "";
-            for (Map.Entry<String, Integer> ac : sentAgendas.entrySet()) {
+            for (Entry<String, Integer> ac : sentAgendas.entrySet()) {
                 if (ac.getValue().equals(idNumber)) {
                     id = ac.getKey();
                     break;
@@ -2078,12 +2141,12 @@ public class Game extends GameProperties {
     }
 
     @Nullable
-    public Map.Entry<String, Integer> drawAgenda() {
+    public Entry<String, Integer> drawAgenda() {
         if (!getAgendas().isEmpty()) {
             for (String id : getAgendas()) {
                 if (!sentAgendas.containsKey(id)) {
                     setSentAgenda(id);
-                    for (Map.Entry<String, Integer> entry : sentAgendas.entrySet()) {
+                    for (Entry<String, Integer> entry : sentAgendas.entrySet()) {
                         if (entry.getKey().equals(id)) {
                             return entry;
                         }
@@ -2100,7 +2163,7 @@ public class Game extends GameProperties {
             for (String id : getAgendas()) {
                 if (agendaID.equalsIgnoreCase(id)) {
                     setSentAgenda(id);
-                    for (Map.Entry<String, Integer> entry : sentAgendas.entrySet()) {
+                    for (Entry<String, Integer> entry : sentAgendas.entrySet()) {
                         if (entry.getKey().equals(id)) {
                             return entry;
                         }
@@ -2112,13 +2175,13 @@ public class Game extends GameProperties {
     }
 
     @Nullable
-    public Map.Entry<String, Integer> drawBottomAgenda() {
+    public Entry<String, Integer> drawBottomAgenda() {
         if (!getAgendas().isEmpty()) {
             for (int i = getAgendas().size() - 1; i >= 0; i--) {
                 String id = getAgendas().get(i);
                 if (!sentAgendas.containsKey(id)) {
                     setSentAgenda(id);
-                    for (Map.Entry<String, Integer> entry : sentAgendas.entrySet()) {
+                    for (Entry<String, Integer> entry : sentAgendas.entrySet()) {
                         if (entry.getKey().equals(id)) {
                             return entry;
                         }
@@ -2200,25 +2263,29 @@ public class Game extends GameProperties {
         }
     }
 
+    // Don't shuffle back cards with a status
+    private void reshuffleActionCardDiscard() {
+        List<String> acsToShuffle = discardActionCards.keySet().stream().toList();
+        getActionCards().addAll(acsToShuffle);
+        Collections.shuffle(getActionCards());
+        acsToShuffle.forEach(ac -> discardActionCards.remove(ac)); //clear out the shuffled back cards
+        String msg = "#" + getPing() + " shuffling the discarded ACs into the action card deck because the action card deck ran out of cards";
+        MessageHelper.sendMessageToChannel(getMainGameChannel(), msg);
+    }
+
     @Nullable
     public Map<String, Integer> drawActionCard(String userID) {
         if (!getActionCards().isEmpty()) {
-            String id = getActionCards().get(0);
+            String id = getActionCards().getFirst();
             Player player = getPlayer(userID);
             if (player != null) {
                 getActionCards().remove(id);
                 player.setActionCard(id);
                 return player.getActionCards();
             }
-        } else {
-            if (!discardActionCards.keySet().isEmpty()) {
-                getActionCards().addAll(discardActionCards.keySet());
-                discardActionCards.clear();
-                Collections.shuffle(getActionCards());
-                String msg = "# " + getPing() + " shuffling the discard ACs into the action card deck because the action card deck ran out of cards";
-                MessageHelper.sendMessageToChannel(getMainGameChannel(), msg);
-                return drawActionCard(userID);
-            }
+        } else if (!discardActionCards.keySet().isEmpty()) {
+            reshuffleActionCardDiscard();
+            return drawActionCard(userID);
         }
         return null;
     }
@@ -2226,7 +2293,7 @@ public class Game extends GameProperties {
     @Nullable
     public Map<String, Integer> drawEvent(String userID) {
         if (!getEvents().isEmpty()) {
-            String id = getEvents().get(0);
+            String id = getEvents().getFirst();
             Player player = getPlayer(userID);
             if (player != null) {
                 getEvents().remove(id);
@@ -2328,7 +2395,7 @@ public class Game extends GameProperties {
         } // end of migration code
 
         if (!deck.isEmpty()) {
-            String id = deck.get(0);
+            String id = deck.getFirst();
             discardExplore(id);
             result = id;
         }
@@ -2346,8 +2413,7 @@ public class Game extends GameProperties {
 
     public void shuffleDiscardsIntoExploreDeck(String reqType) {
         List<String> discardsOfType = getExplores(reqType, discardExplore);
-        List<String> anotherList = new ArrayList<>();
-        anotherList.addAll(discardsOfType);
+        List<String> anotherList = new ArrayList<>(discardsOfType);
         for (String explore : anotherList) {
             addExplore(explore);
         }
@@ -2385,8 +2451,7 @@ public class Game extends GameProperties {
     }
 
     public void resetExploresOfCertainType(String reqType) {
-        List<String> deck = new ArrayList<>();
-        deck.addAll(explore);
+        List<String> deck = new ArrayList<>(explore);
         for (String id : deck) {
             ExploreModel card = Mapper.getExplore(id);
             if (card != null) {
@@ -2396,8 +2461,7 @@ public class Game extends GameProperties {
                 }
             }
         }
-        deck = new ArrayList<>();
-        deck.addAll(discardExplore);
+        deck = new ArrayList<>(discardExplore);
         for (String id : deck) {
             ExploreModel card = Mapper.getExplore(id);
             if (card != null) {
@@ -2407,10 +2471,8 @@ public class Game extends GameProperties {
                 }
             }
         }
-        deck = new ArrayList<>();
-        deck.addAll(Mapper.getDecks().get(getExplorationDeckID()).getNewShuffledDeck());
-        List<String> deck2 = new ArrayList<>();
-        deck2.addAll(Mapper.getDecks().get(getExplorationDeckID()).getNewShuffledDeck());
+        deck = new ArrayList<>(Mapper.getDecks().get(getExplorationDeckID()).getNewShuffledDeck());
+        List<String> deck2 = new ArrayList<>(Mapper.getDecks().get(getExplorationDeckID()).getNewShuffledDeck());
         for (String id : deck2) {
             ExploreModel card = Mapper.getExplore(id);
             if (card != null) {
@@ -2427,8 +2489,7 @@ public class Game extends GameProperties {
 
     public void triplicateExplores() {
         explore = Mapper.getDecks().get("explores_pok").getNewDeck();
-        List<String> exp2 = new ArrayList<>();
-        exp2.addAll(explore);
+        List<String> exp2 = new ArrayList<>(explore);
         for (String card : exp2) {
             explore.add(card + "extra1");
             explore.add(card + "extra2");
@@ -2451,8 +2512,7 @@ public class Game extends GameProperties {
 
     private List<String> multiplyDeck(int totalCopies, String... deckIDs) {
         List<String> newDeck = Arrays.stream(deckIDs).flatMap(deckID -> Mapper.getDecks().get(deckID).getNewDeck().stream()).toList();
-        List<String> newDeck2 = new ArrayList<>();
-        newDeck2.addAll(newDeck);
+        List<String> newDeck2 = new ArrayList<>(newDeck);
         for (String card : newDeck)
             for (int i = 1; i < totalCopies; i++)
                 newDeck2.add(card + "extra" + i);
@@ -2487,27 +2547,25 @@ public class Game extends GameProperties {
     @Nullable
     public String drawActionCardAndDiscard() {
         if (!getActionCards().isEmpty()) {
-            String id = getActionCards().get(0);
+            String id = getActionCards().getFirst();
             getActionCards().remove(id);
             setDiscardActionCard(id);
             return id;
         } else {
-            getActionCards().addAll(discardActionCards.keySet());
-            discardActionCards.clear();
-            Collections.shuffle(getActionCards());
+            reshuffleActionCardDiscard();
             return drawActionCardAndDiscard();
         }
     }
 
     public void checkSOLimit(Player player) {
         if (player.getSecretsScored().size() + player.getSecretsUnscored().size() > player.getMaxSOCount()) {
-            String msg = player.getRepresentation(true, true) + " you have more SOs than the limit ("
+            String msg = player.getRepresentationUnfogged() + " you have more SOs than the limit ("
                 + player.getMaxSOCount()
                 + ") and should discard one. If your game is playing with a higher SO limit, you may change that in /game setup.";
             MessageHelper.sendMessageToChannel(player.getCardsInfoThread(), msg);
             String secretScoreMsg = "Click a button below to discard your Secret Objective";
             List<Button> soButtons = SOInfo.getUnscoredSecretObjectiveDiscardButtons(this, player);
-            if (soButtons != null && !soButtons.isEmpty()) {
+            if (!soButtons.isEmpty()) {
                 MessageHelper.sendMessageToChannelWithButtons(player.getCardsInfoThread(), secretScoreMsg,
                     soButtons);
             } else {
@@ -2519,7 +2577,7 @@ public class Game extends GameProperties {
 
     public void drawSecretObjective(String userID) {
         if (!getSecretObjectives().isEmpty()) {
-            String id = getSecretObjectives().get(0);
+            String id = getSecretObjectives().getFirst();
             Player player = getPlayer(userID);
             if (player != null) {
                 removeSOFromGame(id);
@@ -2601,7 +2659,7 @@ public class Game extends GameProperties {
         if (player != null) {
             Map<String, Integer> actionCards = player.getActionCards();
             String acID = "";
-            for (Map.Entry<String, Integer> ac : actionCards.entrySet()) {
+            for (Entry<String, Integer> ac : actionCards.entrySet()) {
                 if (ac.getValue().equals(acIDNumber)) {
                     acID = ac.getKey();
                     break;
@@ -2621,7 +2679,7 @@ public class Game extends GameProperties {
         if (player != null) {
             Map<String, Integer> actionCards = player.getActionCards();
             String acID = "";
-            for (Map.Entry<String, Integer> ac : actionCards.entrySet()) {
+            for (Entry<String, Integer> ac : actionCards.entrySet()) {
                 if (ac.getValue().equals(acIDNumber)) {
                     acID = ac.getKey();
                     break;
@@ -2652,7 +2710,7 @@ public class Game extends GameProperties {
         Player player = getPlayer(userID);
         if (player != null) {
             String acID = "";
-            for (Map.Entry<String, Integer> ac : discardActionCards.entrySet()) {
+            for (Entry<String, Integer> ac : discardActionCards.entrySet()) {
                 if (ac.getValue().equals(acIDNumber)) {
                     acID = ac.getKey();
                     break;
@@ -2671,7 +2729,7 @@ public class Game extends GameProperties {
         Player player = getPlayer(userID);
         if (player != null) {
             String acID = "";
-            for (Map.Entry<String, Integer> ac : purgedActionCards.entrySet()) {
+            for (Entry<String, Integer> ac : purgedActionCards.entrySet()) {
                 if (ac.getValue().equals(acIDNumber)) {
                     acID = ac.getKey();
                     break;
@@ -2688,7 +2746,7 @@ public class Game extends GameProperties {
 
     public boolean shuffleActionCardBackIntoDeck(Integer acIDNumber) {
         String acID = "";
-        for (Map.Entry<String, Integer> ac : discardActionCards.entrySet()) {
+        for (Entry<String, Integer> ac : discardActionCards.entrySet()) {
             if (ac.getValue().equals(acIDNumber)) {
                 acID = ac.getKey();
                 break;
@@ -2708,7 +2766,7 @@ public class Game extends GameProperties {
         if (player != null) {
             Map<String, Integer> secrets = player.getSecrets();
             String soID = "";
-            for (Map.Entry<String, Integer> so : secrets.entrySet()) {
+            for (Entry<String, Integer> so : secrets.entrySet()) {
                 if (so.getValue().equals(soIDNumber)) {
                     soID = so.getKey();
                     break;
@@ -2728,7 +2786,7 @@ public class Game extends GameProperties {
         if (player != null) {
             Map<String, Integer> secrets = player.getSecretsScored();
             String soID = "";
-            for (Map.Entry<String, Integer> so : secrets.entrySet()) {
+            for (Entry<String, Integer> so : secrets.entrySet()) {
                 if (so.getValue().equals(soIDNumber)) {
                     soID = so.getKey();
                     break;
@@ -2748,7 +2806,7 @@ public class Game extends GameProperties {
         if (player != null) {
             Map<String, Integer> secrets = player.getSecretsScored();
             String soID = "";
-            for (Map.Entry<String, Integer> so : secrets.entrySet()) {
+            for (Entry<String, Integer> so : secrets.entrySet()) {
                 if (so.getValue().equals(soIDNumber)) {
                     soID = so.getKey();
                     break;
@@ -2769,7 +2827,7 @@ public class Game extends GameProperties {
         if (player != null) {
             Map<String, Integer> secrets = player.getSecrets();
             String soID = "";
-            for (Map.Entry<String, Integer> so : secrets.entrySet()) {
+            for (Entry<String, Integer> so : secrets.entrySet()) {
                 if (so.getValue().equals(soIDNumber)) {
                     soID = so.getKey();
                     break;
@@ -2830,27 +2888,6 @@ public class Game extends GameProperties {
         relics = Mapper.getDecks().get(getRelicDeckID()).getNewShuffledDeck();
     }
 
-    public void triplicateRelics() {
-        if (isAbsolMode()) {
-            relics = Mapper.getDecks().get("relics_absol").getNewShuffledDeck();
-            for (String relic : Mapper.getDecks().get("relics_absol").getNewShuffledDeck()) {
-                String copy1 = relic + "extra1";
-                String copy2 = relic + "extra2";
-                relics.add(copy1);
-                relics.add(copy2);
-            }
-        } else {
-            relics = Mapper.getDecks().get("relics_pok").getNewShuffledDeck();
-            for (String relic : Mapper.getDecks().get("relics_pok").getNewShuffledDeck()) {
-                String copy1 = relic + "extra1";
-                String copy2 = relic + "extra2";
-                relics.add(copy1);
-                relics.add(copy2);
-            }
-        }
-        Collections.shuffle(relics);
-    }
-
     @JsonIgnore
     public boolean islandMode() {
         boolean otherThings = getName().contains("island") || (getMapTemplateID() != null && getMapTemplateID().equals("1pIsland"));
@@ -2865,8 +2902,6 @@ public class Game extends GameProperties {
         GameSettings settings = miltySettings.getGameSettings();
         setVp(settings.getPointTotal().getVal());
         setMaxSOCountPerPlayer(settings.getSecrets().getVal());
-        setUpPeakableObjectives(settings.getStage1s().getVal(), 1);
-        setUpPeakableObjectives(settings.getStage2s().getVal(), 2);
         setCompetitiveTIGLGame(settings.getTigl().isVal());
         setAllianceMode(settings.getAlliance().isVal());
 
@@ -2888,8 +2923,11 @@ public class Game extends GameProperties {
         success &= validateAndSetActionCardDeck(event, deckSettings.getActionCards().getValue());
         success &= validateAndSetExploreDeck(event, deckSettings.getExplores().getValue());
         success &= validateAndSetTechnologyDeck(event, deckSettings.getTechs().getValue());
-        //success &= validateAndSetEventDeck(event, deckSettings.getEvents().getValue());
         setStrategyCardSet(deckSettings.getStratCards().getChosenKey());
+
+        // Setup peakable objectives
+        setUpPeakableObjectives(miltySettings.getGameSettings().getStage1s().getVal(), 1);
+        setUpPeakableObjectives(miltySettings.getGameSettings().getStage2s().getVal(), 2);
 
         if (isAbsolMode() && !deckSettings.getAgendas().getChosenKey().contains("absol")) {
             MessageHelper.sendMessageToChannel(event.getMessageChannel(), "This game seems to be using absol mode, so the agenda deck you chose will be overridden.");
@@ -3001,7 +3039,7 @@ public class Game extends GameProperties {
 
     public boolean validateAndSetSecretObjectiveDeck(GenericInteractionCreateEvent event, DeckModel deck) {
         for (Player player : getPlayers().values()) {
-            if (player.getSecrets().size() > 0) {
+            if (!player.getSecrets().isEmpty()) {
                 MessageHelper.sendMessageToChannel(event.getMessageChannel(),
                     "Cannot change secret objective deck to **" + deck.getName()
                         + "** while there are secret objectives in player hands.");
@@ -3014,7 +3052,7 @@ public class Game extends GameProperties {
     }
 
     public boolean validateAndSetExploreDeck(GenericInteractionCreateEvent event, DeckModel deck) {
-        if (getAllExploreDiscard().size() > 0) {
+        if (!getAllExploreDiscard().isEmpty()) {
             MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Cannot change explore deck to **"
                 + deck.getName() + "** while there are explores in the discard pile.");
             return false;
@@ -3025,7 +3063,7 @@ public class Game extends GameProperties {
     }
 
     public boolean validateAndSetAgendaDeck(GenericInteractionCreateEvent event, DeckModel deck) {
-        if (getDiscardAgendas().size() > 0) {
+        if (!getDiscardAgendas().isEmpty()) {
             MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Cannot change agenda deck to **"
                 + deck.getName() + "** while there are agendas in the discard pile.");
             return false;
@@ -3043,7 +3081,7 @@ public class Game extends GameProperties {
     }
 
     public boolean validateAndSetEventDeck(GenericInteractionCreateEvent event, DeckModel deck) {
-        if (getDiscardedEvents().size() > 0) {
+        if (!getDiscardedEvents().isEmpty()) {
             MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Cannot change event deck to **"
                 + deck.getName() + "** while there are events in the discard pile.");
             return false;
@@ -3149,6 +3187,7 @@ public class Game extends GameProperties {
     }
 
     public Tile getTileByPosition(String position) {
+        if (position == null) return null;
         return tileMap.get(position);
     }
 
@@ -3207,7 +3246,7 @@ public class Game extends GameProperties {
 
     @JsonIgnore
     public List<Player> getRealPlayersNDummies() {
-        return getPlayers().values().stream().filter(player -> (player.isRealPlayer() || (player != null && player.isDummy() && player.getColor() != null && !"null".equals(player.getColor()))))
+        return getPlayers().values().stream().filter(player -> player.isRealPlayer() || player.isDummy() && player.getColor() != null && !"null".equals(player.getColor()))
             .collect(Collectors.toList());
     }
 
@@ -3236,12 +3275,16 @@ public class Game extends GameProperties {
 
     @JsonIgnore
     public List<Player> getPlayersWithGMRole() {
+        if (getGuild() == null) return Collections.emptyList();
         List<Role> roles = getGuild().getRolesByName(getName() + " GM", true);
-        Role gmRole = roles.isEmpty() ? null : roles.get(0);
-        return getPlayers().values().stream().filter(player -> {
-            Member user = getGuild().getMemberById(player.getUserID());
-            return user != null && user.getRoles().contains(gmRole);
-        }).collect(Collectors.toList());
+        Role gmRole = roles.isEmpty() ? null : roles.getFirst();
+        List<Player> gmPlayers = getPlayers().values().stream()
+            .filter(player -> {
+                Member user = getGuild().getMemberById(player.getUserID());
+                return user != null && user.getRoles().contains(gmRole);
+            }).toList();
+        setFogOfWarGMIDs(gmPlayers.stream().map(Player::getUserID).toList()); // For @ExportableField (Website)
+        return gmPlayers;
     }
 
     @JsonIgnore
@@ -3352,7 +3395,7 @@ public class Game extends GameProperties {
     public Set<String> getPlanets() {
         if (planets.isEmpty()) {
             for (Tile tile : tileMap.values()) {
-                for (Map.Entry<String, UnitHolder> unitHolderEntry : tile.getUnitHolders().entrySet()) {
+                for (Entry<String, UnitHolder> unitHolderEntry : tile.getUnitHolders().entrySet()) {
                     if (unitHolderEntry.getValue() instanceof Planet p) {
                         planets.put(unitHolderEntry.getKey(), p);
                     }
@@ -3802,6 +3845,16 @@ public class Game extends GameProperties {
         return getAllPlanetsWithSleeperTokens().size();
     }
 
+    public Optional<UnitModel> getPriorityUnitByUnitKey(UnitKey uk, UnitHolder uh) {
+        return getPlayerByUnitKey(uk).map(p -> p.getPriorityUnitByAsyncID(uk.asyncID(), uh));
+    }
+
+    public Optional<Player> getPlayerByUnitKey(UnitKey unit) {
+        return getRealPlayersNDummies().stream()
+            .filter(otherPlayer -> Mapper.getColorID(otherPlayer.getColor()).equals(unit.getColorID()))
+            .findFirst();
+    }
+
     public Optional<Player> getPlayerByColorID(String color) {
         return getRealPlayersNDummies().stream()
             .filter(otherPlayer -> Mapper.getColorID(otherPlayer.getColor()).equals(color))
@@ -3829,7 +3882,7 @@ public class Game extends GameProperties {
     @Nullable
     public Tile getTileFromPlanet(String planetName) {
         for (Tile tile_ : getTileMap().values()) {
-            for (Map.Entry<String, UnitHolder> unitHolderEntry : tile_.getUnitHolders().entrySet()) {
+            for (Entry<String, UnitHolder> unitHolderEntry : tile_.getUnitHolders().entrySet()) {
                 if (unitHolderEntry.getValue() instanceof Planet && unitHolderEntry.getKey().equals(planetName)) {
                     return tile_;
                 }
@@ -3868,7 +3921,6 @@ public class Game extends GameProperties {
                         player = player_;
                         break;
                     }
-
                 }
                 if (Objects.equals(factionColor, player_.getFaction()) ||
                     Objects.equals(factionColor, player_.getColor()) ||
@@ -3910,11 +3962,9 @@ public class Game extends GameProperties {
                 .filter(unit -> !source.equals(unit.getSource().toString())).toList();
             for (UnitModel playerUnit : playersUnits) {
                 for (UnitModel variantUnit : variantUnits) {
-                    if ((variantUnit.getHomebrewReplacesID().isPresent()
-                        && variantUnit.getHomebrewReplacesID().get().equals(playerUnit.getId())) // true variant unit replacing a PoK unit
-                        || (playerUnit.getHomebrewReplacesID().isPresent()
-                            && playerUnit.getHomebrewReplacesID().get().equals(variantUnit.getId())) // PoK "variant" replacing a true variant unit
-                    ) {
+                    boolean variantReplacesPok = variantUnit.getHomebrewReplacesID().orElse("-").equals(playerUnit.getId());
+                    boolean pokReplacesVariant = playerUnit.getHomebrewReplacesID().orElse("-").equals(variantUnit.getId());
+                    if (variantReplacesPok || pokReplacesVariant) {
                         player.removeOwnedUnitByID(playerUnit.getId());
                         player.addOwnedUnitByID(variantUnit.getId());
                         break;
@@ -4009,7 +4059,7 @@ public class Game extends GameProperties {
             sources.add(ComponentSource.pok);
         if (isAbsolMode())
             sources.add(ComponentSource.absol);
-        if (isCryypterMode())
+        if (isVotcMode())
             sources.add(ComponentSource.cryypter);
         if (isMiltyModMode())
             sources.add(ComponentSource.miltymod);
@@ -4020,8 +4070,8 @@ public class Game extends GameProperties {
 
     @JsonIgnore
     public boolean hasHomebrew() {
-        return isExtraSecretMode()
-            || isHomebrew()
+        return isHomebrew()
+            || isExtraSecretMode()
             || isFowMode()
             || isAgeOfExplorationMode()
             || isMinorFactionsMode()
@@ -4031,7 +4081,7 @@ public class Game extends GameProperties {
             || isFrankenGame()
             || isMiltyModMode()
             || isAbsolMode()
-            || isCryypterMode()
+            || isVotcMode()
             || isPromisesPromisesMode()
             || isFlagshippingMode()
             || isAllianceMode()
@@ -4040,11 +4090,12 @@ public class Game extends GameProperties {
             || isCommunityMode()
             || !checkAllDecksAreOfficial()
             || !checkAllTilesAreOfficial()
-            || Mapper.getFactions().stream()
-                .filter(faction -> !faction.getSource().isPok())
-                .anyMatch(faction -> getFactions().contains(faction.getAlias()))
+            || getFactions().stream()
+                .map(Mapper::getFaction)
+                .filter(Objects::nonNull)
+                .anyMatch(faction -> !faction.getSource().isOfficial())
             || Mapper.getLeaders().values().stream()
-                .filter(leader -> !leader.getSource().isPok())
+                .filter(leader -> !leader.getSource().isOfficial())
                 .anyMatch(leader -> isLeaderInGame(leader.getID()))
             || (publicObjectives1 != null && publicObjectives1.size() < 5 && getRound() >= 4)
             || (publicObjectives2 != null && publicObjectives2.size() < (getRound() - 4))
@@ -4104,13 +4155,19 @@ public class Game extends GameProperties {
         Map<Integer, Integer> oldTGs = getScTradeGoods();
         setScTradeGoods(new LinkedHashMap<>());
         setScSetID(strategyCardModel.getAlias());
-        strategyCardModel.getStrategyCardModels().forEach(scModel -> {
-            setScTradeGood(scModel.getInitiative(), oldTGs.getOrDefault(scModel.getInitiative(), 0));
-        });
+        strategyCardModel.getStrategyCardModels().forEach(scModel -> setScTradeGood(scModel.getInitiative(), oldTGs.getOrDefault(scModel.getInitiative(), 0)));
     }
 
     @JsonIgnore
     public List<ColorModel> getUnusedColors() {
+        List<String> priorityColourIDs = List.of("red", "blue", "yellow", "purple", "green", "orange", "pink", "black");
+        List<ColorModel> priorityColours = priorityColourIDs.stream()
+            .map(Mapper::getColor)
+            .filter(color -> getPlayers().values().stream().noneMatch(player -> player.getColor().equals(color.getName())))
+            .toList();
+        if (!priorityColours.isEmpty()) {
+            return priorityColours;
+        }
         return Mapper.getColors().stream()
             .filter(color -> getPlayers().values().stream().noneMatch(player -> player.getColor().equals(color.getName())))
             .toList();
@@ -4159,9 +4216,11 @@ public class Game extends GameProperties {
             for (Tile tile : tileMap.values()) {
                 if (tile.getPosition().equals(position)) {
                     String tileID = AliasHandler.resolveStandardTile(tile.getTileID()).toUpperCase();
-                    if ("000".equalsIgnoreCase(position) && "18".equalsIgnoreCase(tileID)) { // Mecatol Rex in Centre Position
+                    if ("000".equalsIgnoreCase(position) && "18".equalsIgnoreCase(tileID)) {
+                        // Mecatol Rex in Centre Position
                         sb.append("{18}");
-                    } else if ("000".equalsIgnoreCase(position) && !"18".equalsIgnoreCase(tileID)) { // Something else is in the Centre Position
+                    } else if ("000".equalsIgnoreCase(position) && !"18".equalsIgnoreCase(tileID)) {
+                        // Something else is in the Centre Position
                         sb.append("{").append(tileID).append("}");
                     } else {
                         sb.append(tileID);
@@ -4193,5 +4252,35 @@ public class Game extends GameProperties {
             }
         }
         return false;
+    }
+
+    public void addWebsiteOverlay(Player player, String cardType, String cardID, int x, int y, int width, int height) {
+        if (player == null) {
+            addWebsiteOverlay(cardType, cardID, x, y, width, height);
+            return;
+        }
+        getWebsiteOverlays().put(cardType + ":" + cardID + ":" + player.getFaction(), new WebsiteOverlay(cardType, cardID, List.of(x, y, width, height)));
+    }
+
+    public void addWebsiteOverlay(String cardType, String cardID, int x, int y, int width, int height) {
+        getWebsiteOverlays().put(cardType + ":" + cardID, new WebsiteOverlay(cardType, cardID, List.of(x, y, width, height)));
+    }
+
+    public void addWebsiteOverlay(String id, WebsiteOverlay overlay) {
+        getWebsiteOverlays().put(id, overlay);
+    }
+
+    public void resetWebsiteOverlays() {
+        setWebsiteOverlays(new HashMap<>());
+    }
+
+    @JsonIgnore
+    public String getGameStatsDashboardJSON() {
+        return new GameStatsDashboardPayload(this).getJson();
+    }
+
+    public void addHistoricalGameStatsDashboardPayload() {
+        GameStatsDashboardPayload payload = new GameStatsDashboardPayload(this);
+        getHistoricalGameStatsDashboardPayloads().put(Timestamp.from(Instant.now()), payload);
     }
 }
