@@ -55,9 +55,8 @@ public class CombatModifierModel implements ModelInterface {
             }
             if ("_best_".equals(scope)) {
                 List<UnitModel> sortedAllUnits = new ArrayList<>(allUnits);
-                sortedAllUnits.sort(
-                    Comparator.comparingInt(a -> a.getCombatDieHitsOnForAbility(rollType, player, game)));
-                isInScope = Objects.equals(sortedAllUnits.get(0).getAsyncId(), unit.getAsyncId());
+                sortedAllUnits.sort(Comparator.comparingInt(a -> a.getCombatDieHitsOnForAbility(rollType, player, game)));
+                isInScope = Objects.equals(sortedAllUnits.getFirst().getAsyncId(), unit.getAsyncId());
             }
             if ("_ship_".equals(scope)) {
                 isInScope = unit.getIsShip();
